--- a/loc/00.html
+++ b/loc/00.html
@@ -1,9 +1,9 @@
 <body>
-<div>Ось ти і у грі, юний герою! Шляху назад немає - тільки вперед!
-Починаймо?
+<div>РћСЃСЊ С‚Рё С– Сѓ РіСЂС–, СЋРЅРёР№ РіРµСЂРѕСЋ! РЁР»СЏС…Сѓ РЅР°Р·Р°Рґ РЅРµРјР°С” - С‚С–Р»СЊРєРё РІРїРµСЂРµРґ!
+РџРѕС‡РёРЅР°Р№РјРѕ?
 </div>
 <div>
-<a href="01.html">Так! Торегадор, смєлєгє в бой!</a><br>
-<a href="02.html">Ні-ні, мені надто рано </a></br>
+<a href="01.html">РўР°Рє! РўРѕСЂРµРіР°РґРѕСЂ, СЃРјС”Р»С”РіС” РІ Р±РѕР№!</a><br>
+<a href="02.html">РќС–-РЅС–, РјРµРЅС– РЅР°РґС‚Рѕ СЂР°РЅРѕ </a></br>
 </div>
 </body>
