--- a/loc/02.html
+++ b/loc/02.html
@@ -1,7 +1,7 @@
 <body>
-<div>На жаль, для героя не буває надто рано. Тому шлях тільки один. Знаєш, який?
+<div>РќР° Р¶Р°Р»СЊ, РґР»СЏ РіРµСЂРѕСЏ РЅРµ Р±СѓРІР°С” РЅР°РґС‚Рѕ СЂР°РЅРѕ. РўРѕРјСѓ С€Р»СЏС… С‚С–Р»СЊРєРё РѕРґРёРЅ. Р—РЅР°С”С€, СЏРєРёР№?
 </div>
 <div>
-<a href="01.html">Тільки вперед :(</a><br>
+<a href="01.html">РўС–Р»СЊРєРё РІРїРµСЂРµРґ :(</a><br>
 </div>
 </body>
