--- a/loc/101.html
+++ b/loc/101.html
@@ -1,10 +1,10 @@
 <body>
-<div>Хід темний, смердючий та схожий на якусь конюшню. Раптове фиркання звідкись справа прозоро натякає, що ти таки логічно мислиш і асоціативний ряд складено правильно. У темряві натикаєшся на ще одні двері. Замка нема, тому не залишається нічого, як увійти всередину.
+<div>РҐС–Рґ С‚РµРјРЅРёР№, СЃРјРµСЂРґСЋС‡РёР№ С‚Р° СЃС…РѕР¶РёР№ РЅР° СЏРєСѓСЃСЊ РєРѕРЅСЋС€РЅСЋ. Р Р°РїС‚РѕРІРµ С„РёСЂРєР°РЅРЅСЏ Р·РІС–РґРєРёСЃСЊ СЃРїСЂР°РІР° РїСЂРѕР·РѕСЂРѕ РЅР°С‚СЏРєР°С”, С‰Рѕ С‚Рё С‚Р°РєРё Р»РѕРіС–С‡РЅРѕ РјРёСЃР»РёС€ С– Р°СЃРѕС†С–Р°С‚РёРІРЅРёР№ СЂСЏРґ СЃРєР»Р°РґРµРЅРѕ РїСЂР°РІРёР»СЊРЅРѕ. РЈ С‚РµРјСЂСЏРІС– РЅР°С‚РёРєР°С”С€СЃСЏ РЅР° С‰Рµ РѕРґРЅС– РґРІРµСЂС–. Р—Р°РјРєР° РЅРµРјР°, С‚РѕРјСѓ РЅРµ Р·Р°Р»РёС€Р°С”С‚СЊСЃСЏ РЅС–С‡РѕРіРѕ, СЏРє СѓРІС–Р№С‚Рё РІСЃРµСЂРµРґРёРЅСѓ.
 <br/>
-Ти бачиш сходи. Вони стрімко тягнуться вгору. Також є шлях і вниз. Який вибір?
+РўРё Р±Р°С‡РёС€ СЃС…РѕРґРё. Р’РѕРЅРё СЃС‚СЂС–РјРєРѕ С‚СЏРіРЅСѓС‚СЊСЃСЏ РІРіРѕСЂСѓ. РўР°РєРѕР¶ С” С€Р»СЏС… С– РІРЅРёР·. РЇРєРёР№ РІРёР±С–СЂ?
 </div>
 <div>
-<a href="102.html">Сходи для того і вигадані, щоб підійматись</a><br>
-<a href="103.html">Підземелля кишать драконами, мерцями та скарбами, тому це мій шлях</a></br>
+<a href="102.html">РЎС…РѕРґРё РґР»СЏ С‚РѕРіРѕ С– РІРёРіР°РґР°РЅС–, С‰РѕР± РїС–РґС–Р№РјР°С‚РёСЃСЊ</a><br>
+<a href="103.html">РџС–РґР·РµРјРµР»Р»СЏ РєРёС€Р°С‚СЊ РґСЂР°РєРѕРЅР°РјРё, РјРµСЂС†СЏРјРё С‚Р° СЃРєР°СЂР±Р°РјРё, С‚РѕРјСѓ С†Рµ РјС–Р№ С€Р»СЏС…</a></br>
 </div>
 </body>
