--- a/loc/102.html
+++ b/loc/102.html
@@ -1,8 +1,8 @@
 <body>
-<div>Ти трошки підіймаєшся сходами і помічаєш збоку якісь двері. Звідти долинає мугикання та якийсь шурхіт. Також є сходи нагору.
+<div>РўРё С‚СЂРѕС€РєРё РїС–РґС–Р№РјР°С”С€СЃСЏ СЃС…РѕРґР°РјРё С– РїРѕРјС–С‡Р°С”С€ Р·Р±РѕРєСѓ СЏРєС–СЃСЊ РґРІРµСЂС–. Р—РІС–РґС‚Рё РґРѕР»РёРЅР°С” РјСѓРіРёРєР°РЅРЅСЏ С‚Р° СЏРєРёР№СЃСЊ С€СѓСЂС…С–С‚. РўР°РєРѕР¶ С” СЃС…РѕРґРё РЅР°РіРѕСЂСѓ.
 </div>
 <div>
-<a href="104.html">Я піднімуся далі</a><br>
-<a href="121.html">Увійду до кімнати</a></br>
+<a href="104.html">РЇ РїС–РґРЅС–РјСѓСЃСЏ РґР°Р»С–</a><br>
+<a href="121.html">РЈРІС–Р№РґСѓ РґРѕ РєС–РјРЅР°С‚Рё</a></br>
 </div>
 </body>
