--- a/loc/103.html
+++ b/loc/103.html
@@ -1,7 +1,7 @@
 <body>
-<div>Ти спускаєшся сходами донизу, ступаєш у пітьму і наступної миті розумієш, що цього робити не варто було. Якісь слизькі лапи обкручують ногу трошки вище ступні, інша лапа обкручується навколо пояса, щось хапає за голову і все це прудко занурюється в воду. Думаю, тобі зрозуміло, що...
+<div>РўРё СЃРїСѓСЃРєР°С”С€СЃСЏ СЃС…РѕРґР°РјРё РґРѕРЅРёР·Сѓ, СЃС‚СѓРїР°С”С€ Сѓ РїС–С‚СЊРјСѓ С– РЅР°СЃС‚СѓРїРЅРѕС— РјРёС‚С– СЂРѕР·СѓРјС–С”С€, С‰Рѕ С†СЊРѕРіРѕ СЂРѕР±РёС‚Рё РЅРµ РІР°СЂС‚Рѕ Р±СѓР»Рѕ. РЇРєС–СЃСЊ СЃР»РёР·СЊРєС– Р»Р°РїРё РѕР±РєСЂСѓС‡СѓСЋС‚СЊ РЅРѕРіСѓ С‚СЂРѕС€РєРё РІРёС‰Рµ СЃС‚СѓРїРЅС–, С–РЅС€Р° Р»Р°РїР° РѕР±РєСЂСѓС‡СѓС”С‚СЊСЃСЏ РЅР°РІРєРѕР»Рѕ РїРѕСЏСЃР°, С‰РѕСЃСЊ С…Р°РїР°С” Р·Р° РіРѕР»РѕРІСѓ С– РІСЃРµ С†Рµ РїСЂСѓРґРєРѕ Р·Р°РЅСѓСЂСЋС”С‚СЊСЃСЏ РІ РІРѕРґСѓ. Р”СѓРјР°СЋ, С‚РѕР±С– Р·СЂРѕР·СѓРјС–Р»Рѕ, С‰Рѕ...
 </div>
 <div>
-<a href="0.html">...гру закінчено.</a><br>
+<a href="0.html">...РіСЂСѓ Р·Р°РєС–РЅС‡РµРЅРѕ.</a><br>
 </div>
 </body>
