--- a/loc/104.html
+++ b/loc/104.html
@@ -1,7 +1,7 @@
 <body>
-<div>Ще кільканадцять сходинок і знову розвилка. Є сходи нагору, які точно кудись та й виведуть, або двері. Масивні такі дерев'яні двері. Місцями навіть із позолотою.</div>
+<div>Р©Рµ РєС–Р»СЊРєР°РЅР°РґС†СЏС‚СЊ СЃС…РѕРґРёРЅРѕРє С– Р·РЅРѕРІСѓ СЂРѕР·РІРёР»РєР°. Р„ СЃС…РѕРґРё РЅР°РіРѕСЂСѓ, СЏРєС– С‚РѕС‡РЅРѕ РєСѓРґРёСЃСЊ С‚Р° Р№ РІРёРІРµРґСѓС‚СЊ, Р°Р±Рѕ РґРІРµСЂС–. РњР°СЃРёРІРЅС– С‚Р°РєС– РґРµСЂРµРІ'СЏРЅС– РґРІРµСЂС–. РњС–СЃС†СЏРјРё РЅР°РІС–С‚СЊ С–Р· РїРѕР·РѕР»РѕС‚РѕСЋ.</div>
 <div>
-<a href="105.html">Йду нагору - там вже майже фініш</a><br>
-<a href="131.html">Зайду в двері</a></br>
+<a href="105.html">Р™РґСѓ РЅР°РіРѕСЂСѓ - С‚Р°Рј РІР¶Рµ РјР°Р№Р¶Рµ С„С–РЅС–С€</a><br>
+<a href="131.html">Р—Р°Р№РґСѓ РІ РґРІРµСЂС–</a></br>
 </div>
 </body>
