--- a/loc/105.html
+++ b/loc/105.html
@@ -1,9 +1,9 @@
 <body>
-<div>Підіймаєшся ще кільканадцять сходинок і бачиш... овва! ... Евглену?!
+<div>РџС–РґС–Р№РјР°С”С€СЃСЏ С‰Рµ РєС–Р»СЊРєР°РЅР°РґС†СЏС‚СЊ СЃС…РѕРґРёРЅРѕРє С– Р±Р°С‡РёС€... РѕРІРІР°! ... Р•РІРіР»РµРЅСѓ?!
 <br/>
-"Спокуха, - каже вона. - Я теж здивована. Все нормально. Я страхую і готую шлях відходу. Не відволікайся. Іди звідки прийшов."
+"РЎРїРѕРєСѓС…Р°, - РєР°Р¶Рµ РІРѕРЅР°. - РЇ С‚РµР¶ Р·РґРёРІРѕРІР°РЅР°. Р’СЃРµ РЅРѕСЂРјР°Р»СЊРЅРѕ. РЇ СЃС‚СЂР°С…СѓСЋ С– РіРѕС‚СѓСЋ С€Р»СЏС… РІС–РґС…РѕРґСѓ. РќРµ РІС–РґРІРѕР»С–РєР°Р№СЃСЏ. Р†РґРё Р·РІС–РґРєРё РїСЂРёР№С€РѕРІ."
 </div>
 <div>
-<a href="104.html">Спускаємось трошки нижче</a><br>
+<a href="104.html">РЎРїСѓСЃРєР°С”РјРѕСЃСЊ С‚СЂРѕС€РєРё РЅРёР¶С‡Рµ</a><br>
 </div>
 </body>
