--- a/loc/105a.html
+++ b/loc/105a.html
@@ -1,12 +1,12 @@
 <body>
-<div>Удвох з принцесою підіймаєтеся сходами на самісінький вершечок башти. Там дує вітер і стоїть... Евглена.<br/>
-"Я не зрозуміла, - каже вона. - Ти вже все зробив? Навіщо нам зараз принцеса? Навіщо цей саквояж? Як ти його думаєш доправити вниз? Та нафіга нам він взагалі?"
+<div>РЈРґРІРѕС… Р· РїСЂРёРЅС†РµСЃРѕСЋ РїС–РґС–Р№РјР°С”С‚РµСЃСЏ СЃС…РѕРґР°РјРё РЅР° СЃР°РјС–СЃС–РЅСЊРєРёР№ РІРµСЂС€РµС‡РѕРє Р±Р°С€С‚Рё. РўР°Рј РґСѓС” РІС–С‚РµСЂ С– СЃС‚РѕС—С‚СЊ... Р•РІРіР»РµРЅР°.<br/>
+"РЇ РЅРµ Р·СЂРѕР·СѓРјС–Р»Р°, - РєР°Р¶Рµ РІРѕРЅР°. - РўРё РІР¶Рµ РІСЃРµ Р·СЂРѕР±РёРІ? РќР°РІС–С‰Рѕ РЅР°Рј Р·Р°СЂР°Р· РїСЂРёРЅС†РµСЃР°? РќР°РІС–С‰Рѕ С†РµР№ СЃР°РєРІРѕСЏР¶? РЇРє С‚Рё Р№РѕРіРѕ РґСѓРјР°С”С€ РґРѕРїСЂР°РІРёС‚Рё РІРЅРёР·? РўР° РЅР°С„С–РіР° РЅР°Рј РІС–РЅ РІР·Р°РіР°Р»С–?"
 <br/>
-"Село без газу, - хитає головою принцеса, тричі коротко посвистує і поруч з баштою матеріалізується дракон з наїзником на ньому. - Таксі подано."<br/>
-"Таксі-дракон, - викрикує погонич. - Куди їдемо?"<br/>
-"Ми поїхали, а ти завершуй справи та доганяй. Місце знаєш, - каже Евглена і лізе на дракона першою. - Шеф, до Генштабу Руху Опору. Я покажу дорогу."
+"РЎРµР»Рѕ Р±РµР· РіР°Р·Сѓ, - С…РёС‚Р°С” РіРѕР»РѕРІРѕСЋ РїСЂРёРЅС†РµСЃР°, С‚СЂРёС‡С– РєРѕСЂРѕС‚РєРѕ РїРѕСЃРІРёСЃС‚СѓС” С– РїРѕСЂСѓС‡ Р· Р±Р°С€С‚РѕСЋ РјР°С‚РµСЂС–Р°Р»С–Р·СѓС”С‚СЊСЃСЏ РґСЂР°РєРѕРЅ Р· РЅР°С—Р·РЅРёРєРѕРј РЅР° РЅСЊРѕРјСѓ. - РўР°РєСЃС– РїРѕРґР°РЅРѕ."<br/>
+"РўР°РєСЃС–-РґСЂР°РєРѕРЅ, - РІРёРєСЂРёРєСѓС” РїРѕРіРѕРЅРёС‡. - РљСѓРґРё С—РґРµРјРѕ?"<br/>
+"РњРё РїРѕС—С…Р°Р»Рё, Р° С‚Рё Р·Р°РІРµСЂС€СѓР№ СЃРїСЂР°РІРё С‚Р° РґРѕРіР°РЅСЏР№. РњС–СЃС†Рµ Р·РЅР°С”С€, - РєР°Р¶Рµ Р•РІРіР»РµРЅР° С– Р»С–Р·Рµ РЅР° РґСЂР°РєРѕРЅР° РїРµСЂС€РѕСЋ. - РЁРµС„, РґРѕ Р“РµРЅС€С‚Р°Р±Сѓ Р СѓС…Сѓ РћРїРѕСЂСѓ. РЇ РїРѕРєР°Р¶Сѓ РґРѕСЂРѕРіСѓ."
 </div>
 <div>
-<a href="131.html">Піти завершувати справи</a><br>
+<a href="131.html">РџС–С‚Рё Р·Р°РІРµСЂС€СѓРІР°С‚Рё СЃРїСЂР°РІРё</a><br>
 </div>
 </body>
