--- a/loc/11.html
+++ b/loc/11.html
@@ -1,10 +1,10 @@
 <body>
-<div>Уявивши себе вітром у полі, конем тигидимським та найпрудкішим героєм у всьому всесвіті, несешся вздовж подалі від стінки строго по перпендикуляру. Гілки б'ють по пиці, створюючи справжні бойові шрами, жуки гинуть смертю хоробрих, навіть не зрозумівши, що їм надана така честь, а темрява все густішає, густішає та густішає.<br>
-Та хіба герою буває страшно? Ще кілька кроків уперед, ще два, ше п'ять і ось перед очима галявина. А посеред неї розвалився дракон. У руках він тримає булаву, а в зубах чупа-чупс.
-Від цього із уст вирвалось саме собою:
+<div>РЈСЏРІРёРІС€Рё СЃРµР±Рµ РІС–С‚СЂРѕРј Сѓ РїРѕР»С–, РєРѕРЅРµРј С‚РёРіРёРґРёРјСЃСЊРєРёРј С‚Р° РЅР°Р№РїСЂСѓРґРєС–С€РёРј РіРµСЂРѕС”Рј Сѓ РІСЃСЊРѕРјСѓ РІСЃРµСЃРІС–С‚С–, РЅРµСЃРµС€СЃСЏ РІР·РґРѕРІР¶ РїРѕРґР°Р»С– РІС–Рґ СЃС‚С–РЅРєРё СЃС‚СЂРѕРіРѕ РїРѕ РїРµСЂРїРµРЅРґРёРєСѓР»СЏСЂСѓ. Р“С–Р»РєРё Р±'СЋС‚СЊ РїРѕ РїРёС†С–, СЃС‚РІРѕСЂСЋСЋС‡Рё СЃРїСЂР°РІР¶РЅС– Р±РѕР№РѕРІС– С€СЂР°РјРё, Р¶СѓРєРё РіРёРЅСѓС‚СЊ СЃРјРµСЂС‚СЋ С…РѕСЂРѕР±СЂРёС…, РЅР°РІС–С‚СЊ РЅРµ Р·СЂРѕР·СѓРјС–РІС€Рё, С‰Рѕ С—Рј РЅР°РґР°РЅР° С‚Р°РєР° С‡РµСЃС‚СЊ, Р° С‚РµРјСЂСЏРІР° РІСЃРµ РіСѓСЃС‚С–С€Р°С”, РіСѓСЃС‚С–С€Р°С” С‚Р° РіСѓСЃС‚С–С€Р°С”.<br>
+РўР° С…С–Р±Р° РіРµСЂРѕСЋ Р±СѓРІР°С” СЃС‚СЂР°С€РЅРѕ? Р©Рµ РєС–Р»СЊРєР° РєСЂРѕРєС–РІ СѓРїРµСЂРµРґ, С‰Рµ РґРІР°, С€Рµ Рї'СЏС‚СЊ С– РѕСЃСЊ РїРµСЂРµРґ РѕС‡РёРјР° РіР°Р»СЏРІРёРЅР°. Рђ РїРѕСЃРµСЂРµРґ РЅРµС— СЂРѕР·РІР°Р»РёРІСЃСЏ РґСЂР°РєРѕРЅ. РЈ СЂСѓРєР°С… РІС–РЅ С‚СЂРёРјР°С” Р±СѓР»Р°РІСѓ, Р° РІ Р·СѓР±Р°С… С‡СѓРїР°-С‡СѓРїСЃ.
+Р’С–Рґ С†СЊРѕРіРѕ С–Р· СѓСЃС‚ РІРёСЂРІР°Р»РѕСЃСЊ СЃР°РјРµ СЃРѕР±РѕСЋ:
 </div>
 <div>
-<a href="21.html">"О, прівєт! А я тебе знаю!"</a><br>
-<a href="22.html">"@#$%&#" (лайка геройською)</a></br>
+<a href="21.html">"Рћ, РїСЂС–РІС”С‚! Рђ СЏ С‚РµР±Рµ Р·РЅР°СЋ!"</a><br>
+<a href="22.html">"@#$%&#" (Р»Р°Р№РєР° РіРµСЂРѕР№СЃСЊРєРѕСЋ)</a></br>
 </div>
 </body>
