--- a/loc/111.html
+++ b/loc/111.html
@@ -1,8 +1,8 @@
 <body>
-<div>Перед тобою коротка секція сходинок. Судячи по шурхоту, двері позаду зачинилися. Шляху назад немає. Тільки вперед. Тим більше нагорі видніються двері, з-за яких падає трохи світло. Вперед та з піснею, так? (тільки цур тихенько). Як там вона, до речі?
+<div>РџРµСЂРµРґ С‚РѕР±РѕСЋ РєРѕСЂРѕС‚РєР° СЃРµРєС†С–СЏ СЃС…РѕРґРёРЅРѕРє. РЎСѓРґСЏС‡Рё РїРѕ С€СѓСЂС…РѕС‚Сѓ, РґРІРµСЂС– РїРѕР·Р°РґСѓ Р·Р°С‡РёРЅРёР»РёСЃСЏ. РЁР»СЏС…Сѓ РЅР°Р·Р°Рґ РЅРµРјР°С”. РўС–Р»СЊРєРё РІРїРµСЂРµРґ. РўРёРј Р±С–Р»СЊС€Рµ РЅР°РіРѕСЂС– РІРёРґРЅС–СЋС‚СЊСЃСЏ РґРІРµСЂС–, Р·-Р·Р° СЏРєРёС… РїР°РґР°С” С‚СЂРѕС…Рё СЃРІС–С‚Р»Рѕ. Р’РїРµСЂРµРґ С‚Р° Р· РїС–СЃРЅРµСЋ, С‚Р°Рє? (С‚С–Р»СЊРєРё С†СѓСЂ С‚РёС…РµРЅСЊРєРѕ). РЇРє С‚Р°Рј РІРѕРЅР°, РґРѕ СЂРµС‡С–?
 </div>
 <div>
-<a href="131.html">Торегадор, смєлєгє в бой! Торе-га-дор! Торе-га-дор!</a><br>
-<a href="131.html">Кропива ти моя, кропива...</a></br>
+<a href="131.html">РўРѕСЂРµРіР°РґРѕСЂ, СЃРјС”Р»С”РіС” РІ Р±РѕР№! РўРѕСЂРµ-РіР°-РґРѕСЂ! РўРѕСЂРµ-РіР°-РґРѕСЂ!</a><br>
+<a href="131.html">РљСЂРѕРїРёРІР° С‚Рё РјРѕСЏ, РєСЂРѕРїРёРІР°...</a></br>
 </div>
 </body>
