--- a/loc/12.html
+++ b/loc/12.html
@@ -1,8 +1,8 @@
 <body>
-<div>Ти дивишся вгору і примружуєш очі, щоб нічого не упустити. Зрештою на вершечку башти з'являється якась постать із цигаркою в зубах.
+<div>РўРё РґРёРІРёС€СЃСЏ РІРіРѕСЂСѓ С– РїСЂРёРјСЂСѓР¶СѓС”С€ РѕС‡С–, С‰РѕР± РЅС–С‡РѕРіРѕ РЅРµ СѓРїСѓСЃС‚РёС‚Рё. Р—СЂРµС€С‚РѕСЋ РЅР° РІРµСЂС€РµС‡РєСѓ Р±Р°С€С‚Рё Р·'СЏРІР»СЏС”С‚СЊСЃСЏ СЏРєР°СЃСЊ РїРѕСЃС‚Р°С‚СЊ С–Р· С†РёРіР°СЂРєРѕСЋ РІ Р·СѓР±Р°С….
 </div>
 <div>
-<a href="161.html">Гукнути</a><br>
-<a href="162.html">Просто дивитися далі</a></br>
+<a href="161.html">Р“СѓРєРЅСѓС‚Рё</a><br>
+<a href="162.html">РџСЂРѕСЃС‚Рѕ РґРёРІРёС‚РёСЃСЏ РґР°Р»С–</a></br>
 </div>
 </body>
