--- a/loc/121.html
+++ b/loc/121.html
@@ -1,10 +1,10 @@
 <body>
-<div>Ти відчиняєш двері і помічаєш принцесу. Вона сидить за дзеркалом та наче фарбується. Побачивши тебе, різко обертається та дивиться на тебе. "Хто ти, в холєру, такий?" 
+<div>РўРё РІС–РґС‡РёРЅСЏС”С€ РґРІРµСЂС– С– РїРѕРјС–С‡Р°С”С€ РїСЂРёРЅС†РµСЃСѓ. Р’РѕРЅР° СЃРёРґРёС‚СЊ Р·Р° РґР·РµСЂРєР°Р»РѕРј С‚Р° РЅР°С‡Рµ С„Р°СЂР±СѓС”С‚СЊСЃСЏ. РџРѕР±Р°С‡РёРІС€Рё С‚РµР±Рµ, СЂС–Р·РєРѕ РѕР±РµСЂС‚Р°С”С‚СЊСЃСЏ С‚Р° РґРёРІРёС‚СЊСЃСЏ РЅР° С‚РµР±Рµ. "РҐС‚Рѕ С‚Рё, РІ С…РѕР»С”СЂСѓ, С‚Р°РєРёР№?" 
 </div>
 <div>
-<a href="102.html">Обслуга, сорян, не ті двері</a><br>
-<a href="102.html">Кілер, сорян, не ті двері</a></br>
-<a href="122.html">Я прийшов по тебе</a></br>
+<a href="102.html">РћР±СЃР»СѓРіР°, СЃРѕСЂСЏРЅ, РЅРµ С‚С– РґРІРµСЂС–</a><br>
+<a href="102.html">РљС–Р»РµСЂ, СЃРѕСЂСЏРЅ, РЅРµ С‚С– РґРІРµСЂС–</a></br>
+<a href="122.html">РЇ РїСЂРёР№С€РѕРІ РїРѕ С‚РµР±Рµ</a></br>
 
 </div>
 </body>
