--- a/loc/122.html
+++ b/loc/122.html
@@ -1,9 +1,9 @@
 <body>
-<div>"Що, правда? - радісно повискує принцеса, зіскакує зі свого крісла, біжить до шафи, викидає звідти скриню та починає її пакувати своїм барахлом, паралельно коментуючи: - Хрещена мені казала, шо одного разу прийде славний герой, який врятує від мого довбня-батька та відіграє по-королівськи! І стану я справжньою жінкою. Це ж ти, герою? Вибач, ти у темряві і я не можу роздивитися обличчя." 
+<div>"Р©Рѕ, РїСЂР°РІРґР°? - СЂР°РґС–СЃРЅРѕ РїРѕРІРёСЃРєСѓС” РїСЂРёРЅС†РµСЃР°, Р·С–СЃРєР°РєСѓС” Р·С– СЃРІРѕРіРѕ РєСЂС–СЃР»Р°, Р±С–Р¶РёС‚СЊ РґРѕ С€Р°С„Рё, РІРёРєРёРґР°С” Р·РІС–РґС‚Рё СЃРєСЂРёРЅСЋ С‚Р° РїРѕС‡РёРЅР°С” С—С— РїР°РєСѓРІР°С‚Рё СЃРІРѕС—Рј Р±Р°СЂР°С…Р»РѕРј, РїР°СЂР°Р»РµР»СЊРЅРѕ РєРѕРјРµРЅС‚СѓСЋС‡Рё: - РҐСЂРµС‰РµРЅР° РјРµРЅС– РєР°Р·Р°Р»Р°, С€Рѕ РѕРґРЅРѕРіРѕ СЂР°Р·Сѓ РїСЂРёР№РґРµ СЃР»Р°РІРЅРёР№ РіРµСЂРѕР№, СЏРєРёР№ РІСЂСЏС‚СѓС” РІС–Рґ РјРѕРіРѕ РґРѕРІР±РЅСЏ-Р±Р°С‚СЊРєР° С‚Р° РІС–РґС–РіСЂР°С” РїРѕ-РєРѕСЂРѕР»С–РІСЃСЊРєРё! Р† СЃС‚Р°РЅСѓ СЏ СЃРїСЂР°РІР¶РЅСЊРѕСЋ Р¶С–РЅРєРѕСЋ. Р¦Рµ Р¶ С‚Рё, РіРµСЂРѕСЋ? Р’РёР±Р°С‡, С‚Рё Сѓ С‚РµРјСЂСЏРІС– С– СЏ РЅРµ РјРѕР¶Сѓ СЂРѕР·РґРёРІРёС‚РёСЃСЏ РѕР±Р»РёС‡С‡СЏ." 
 </div>
 <div>
-<a href="123.html">Так, все правильно, так все і буде</a><br>
-<a href="124.html">Звиняй, я дівчина</a></br>
-<a href="124.html">Звиняй, я транс</a></br>
+<a href="123.html">РўР°Рє, РІСЃРµ РїСЂР°РІРёР»СЊРЅРѕ, С‚Р°Рє РІСЃРµ С– Р±СѓРґРµ</a><br>
+<a href="124.html">Р—РІРёРЅСЏР№, СЏ РґС–РІС‡РёРЅР°</a></br>
+<a href="124.html">Р—РІРёРЅСЏР№, СЏ С‚СЂР°РЅСЃ</a></br>
 </div>
 </body>
