--- a/loc/123.html
+++ b/loc/123.html
@@ -1,8 +1,8 @@
 <body>
-<div>"Каєф, - каже принцеса і танцює радісний танок, у якийсь момент підскочивши та пристрасно поцілувавши в губи. - Тобі все одно ніхто не повірить, - додає. - Невже усе скінчиться? Невже кінець нескінченним "Золотце, помий посуд", "Золотце, викинь сміття", "Золотце, прибери у підземеллі"? Я пакую сумочку і ми радісно чапаємо геть. Ура-ура-ура-ура."<br/>
-У цьому голосі звучить така впевненість, що не залишається нічого, окрім як зітхнути і сказати "Гаразд".
+<div>"РљР°С”С„, - РєР°Р¶Рµ РїСЂРёРЅС†РµСЃР° С– С‚Р°РЅС†СЋС” СЂР°РґС–СЃРЅРёР№ С‚Р°РЅРѕРє, Сѓ СЏРєРёР№СЃСЊ РјРѕРјРµРЅС‚ РїС–РґСЃРєРѕС‡РёРІС€Рё С‚Р° РїСЂРёСЃС‚СЂР°СЃРЅРѕ РїРѕС†С–Р»СѓРІР°РІС€Рё РІ РіСѓР±Рё. - РўРѕР±С– РІСЃРµ РѕРґРЅРѕ РЅС–С…С‚Рѕ РЅРµ РїРѕРІС–СЂРёС‚СЊ, - РґРѕРґР°С”. - РќРµРІР¶Рµ СѓСЃРµ СЃРєС–РЅС‡РёС‚СЊСЃСЏ? РќРµРІР¶Рµ РєС–РЅРµС†СЊ РЅРµСЃРєС–РЅС‡РµРЅРЅРёРј "Р—РѕР»РѕС‚С†Рµ, РїРѕРјРёР№ РїРѕСЃСѓРґ", "Р—РѕР»РѕС‚С†Рµ, РІРёРєРёРЅСЊ СЃРјС–С‚С‚СЏ", "Р—РѕР»РѕС‚С†Рµ, РїСЂРёР±РµСЂРё Сѓ РїС–РґР·РµРјРµР»Р»С–"? РЇ РїР°РєСѓСЋ СЃСѓРјРѕС‡РєСѓ С– РјРё СЂР°РґС–СЃРЅРѕ С‡Р°РїР°С”РјРѕ РіРµС‚СЊ. РЈСЂР°-СѓСЂР°-СѓСЂР°-СѓСЂР°."<br/>
+РЈ С†СЊРѕРјСѓ РіРѕР»РѕСЃС– Р·РІСѓС‡РёС‚СЊ С‚Р°РєР° РІРїРµРІРЅРµРЅС–СЃС‚СЊ, С‰Рѕ РЅРµ Р·Р°Р»РёС€Р°С”С‚СЊСЃСЏ РЅС–С‡РѕРіРѕ, РѕРєСЂС–Рј СЏРє Р·С–С‚С…РЅСѓС‚Рё С– СЃРєР°Р·Р°С‚Рё "Р“Р°СЂР°Р·Рґ".
 </div>
 <div>
-<a href="105a.html">Вивести принцесу до Евглени</a><br>
+<a href="105a.html">Р’РёРІРµСЃС‚Рё РїСЂРёРЅС†РµСЃСѓ РґРѕ Р•РІРіР»РµРЅРё</a><br>
 </div>
 </body>
