--- a/loc/124.html
+++ b/loc/124.html
@@ -1,8 +1,8 @@
 <body>
-<div>"Овва, - каже принцеса і тре потилицю. - Та дрібниці, - додає згодом. - Із цим потім розберемося. Я пакую сумочку і ми радісно чапаємо геть. Ура-ура-ура-ура."<br/>
-У цьому голосі звучить така впевненість, що не залишається нічого, окрім як зітхнути і сказати "Гаразд".
+<div>"РћРІРІР°, - РєР°Р¶Рµ РїСЂРёРЅС†РµСЃР° С– С‚СЂРµ РїРѕС‚РёР»РёС†СЋ. - РўР° РґСЂС–Р±РЅРёС†С–, - РґРѕРґР°С” Р·РіРѕРґРѕРј. - Р†Р· С†РёРј РїРѕС‚С–Рј СЂРѕР·Р±РµСЂРµРјРѕСЃСЏ. РЇ РїР°РєСѓСЋ СЃСѓРјРѕС‡РєСѓ С– РјРё СЂР°РґС–СЃРЅРѕ С‡Р°РїР°С”РјРѕ РіРµС‚СЊ. РЈСЂР°-СѓСЂР°-СѓСЂР°-СѓСЂР°."<br/>
+РЈ С†СЊРѕРјСѓ РіРѕР»РѕСЃС– Р·РІСѓС‡РёС‚СЊ С‚Р°РєР° РІРїРµРІРЅРµРЅС–СЃС‚СЊ, С‰Рѕ РЅРµ Р·Р°Р»РёС€Р°С”С‚СЊСЃСЏ РЅС–С‡РѕРіРѕ, РѕРєСЂС–Рј СЏРє Р·С–С‚С…РЅСѓС‚Рё С– СЃРєР°Р·Р°С‚Рё "Р“Р°СЂР°Р·Рґ".
 </div>
 <div>
-<a href="105a.html">Вивести принцесу до Евглени</a><br>
+<a href="105a.html">Р’РёРІРµСЃС‚Рё РїСЂРёРЅС†РµСЃСѓ РґРѕ Р•РІРіР»РµРЅРё</a><br>
 </div>
 </body>
