--- a/loc/131.html
+++ b/loc/131.html
@@ -1,9 +1,9 @@
 <body>
-<div>Тронний зал виглядає до біса загадково, гнітюче та моторошно. Високі колони, що закінчуються десь у пітьмі, золотий трон та маса маленьких золотих бюстиків правителя, розміщених на мармурових тумбах біля колон. Щоправда, потицявши пальцем, розумієш, що це не мармур, а якась жалюгідна підробка. Принаймні, здалеку виглядає пафосно.<br/>
-На троні сидить правитель. Хоча здалеку він здається до біса меншим, менш кремезним та не таким могутнім. Скидається, що відправити його до пращурів буде найпростішим квестом. 
+<div>РўСЂРѕРЅРЅРёР№ Р·Р°Р» РІРёРіР»СЏРґР°С” РґРѕ Р±С–СЃР° Р·Р°РіР°РґРєРѕРІРѕ, РіРЅС–С‚СЋС‡Рµ С‚Р° РјРѕС‚РѕСЂРѕС€РЅРѕ. Р’РёСЃРѕРєС– РєРѕР»РѕРЅРё, С‰Рѕ Р·Р°РєС–РЅС‡СѓСЋС‚СЊСЃСЏ РґРµСЃСЊ Сѓ РїС–С‚СЊРјС–, Р·РѕР»РѕС‚РёР№ С‚СЂРѕРЅ С‚Р° РјР°СЃР° РјР°Р»РµРЅСЊРєРёС… Р·РѕР»РѕС‚РёС… Р±СЋСЃС‚РёРєС–РІ РїСЂР°РІРёС‚РµР»СЏ, СЂРѕР·РјС–С‰РµРЅРёС… РЅР° РјР°СЂРјСѓСЂРѕРІРёС… С‚СѓРјР±Р°С… Р±С–Р»СЏ РєРѕР»РѕРЅ. Р©РѕРїСЂР°РІРґР°, РїРѕС‚РёС†СЏРІС€Рё РїР°Р»СЊС†РµРј, СЂРѕР·СѓРјС–С”С€, С‰Рѕ С†Рµ РЅРµ РјР°СЂРјСѓСЂ, Р° СЏРєР°СЃСЊ Р¶Р°Р»СЋРіС–РґРЅР° РїС–РґСЂРѕР±РєР°. РџСЂРёРЅР°Р№РјРЅС–, Р·РґР°Р»РµРєСѓ РІРёРіР»СЏРґР°С” РїР°С„РѕСЃРЅРѕ.<br/>
+РќР° С‚СЂРѕРЅС– СЃРёРґРёС‚СЊ РїСЂР°РІРёС‚РµР»СЊ. РҐРѕС‡Р° Р·РґР°Р»РµРєСѓ РІС–РЅ Р·РґР°С”С‚СЊСЃСЏ РґРѕ Р±С–СЃР° РјРµРЅС€РёРј, РјРµРЅС€ РєСЂРµРјРµР·РЅРёРј С‚Р° РЅРµ С‚Р°РєРёРј РјРѕРіСѓС‚РЅС–Рј. РЎРєРёРґР°С”С‚СЊСЃСЏ, С‰Рѕ РІС–РґРїСЂР°РІРёС‚Рё Р№РѕРіРѕ РґРѕ РїСЂР°С‰СѓСЂС–РІ Р±СѓРґРµ РЅР°Р№РїСЂРѕСЃС‚С–С€РёРј РєРІРµСЃС‚РѕРј. 
 </div>
 <div>
-<a href="132.html">Дослідити ще щось</a><br>
-<a href="133.html">Напасти на правителя</a></br>
+<a href="132.html">Р”РѕСЃР»С–РґРёС‚Рё С‰Рµ С‰РѕСЃСЊ</a><br>
+<a href="133.html">РќР°РїР°СЃС‚Рё РЅР° РїСЂР°РІРёС‚РµР»СЏ</a></br>
 </div>
 </body>
