--- a/loc/132.html
+++ b/loc/132.html
@@ -1,9 +1,9 @@
 <body>
-<div>Ти детально вивчаєш стовпи, стіни, бруд під нігтями, пітьму під стелею та візерунки на щиті, але це не дає жодної нової інформації. Тим більше корисної. Тому ти вирішуєш...
+<div>РўРё РґРµС‚Р°Р»СЊРЅРѕ РІРёРІС‡Р°С”С€ СЃС‚РѕРІРїРё, СЃС‚С–РЅРё, Р±СЂСѓРґ РїС–Рґ РЅС–РіС‚СЏРјРё, РїС–С‚СЊРјСѓ РїС–Рґ СЃС‚РµР»РµСЋ С‚Р° РІС–Р·РµСЂСѓРЅРєРё РЅР° С‰РёС‚С–, Р°Р»Рµ С†Рµ РЅРµ РґР°С” Р¶РѕРґРЅРѕС— РЅРѕРІРѕС— С–РЅС„РѕСЂРјР°С†С–С—. РўРёРј Р±С–Р»СЊС€Рµ РєРѕСЂРёСЃРЅРѕС—. РўРѕРјСѓ С‚Рё РІРёСЂС–С€СѓС”С€...
 </div>
 <div>
-<a href="132.html">...дослідити ще разок</a><br>
-<a href="133.html">...здійснити напад</a></br>
-<a href="134.html">...пожертвувати кошеня задля перемоги у битві</a></br>
+<a href="132.html">...РґРѕСЃР»С–РґРёС‚Рё С‰Рµ СЂР°Р·РѕРє</a><br>
+<a href="133.html">...Р·РґС–Р№СЃРЅРёС‚Рё РЅР°РїР°Рґ</a></br>
+<a href="134.html">...РїРѕР¶РµСЂС‚РІСѓРІР°С‚Рё РєРѕС€РµРЅСЏ Р·Р°РґР»СЏ РїРµСЂРµРјРѕРіРё Сѓ Р±РёС‚РІС–</a></br>
 </div>
 </body>
