--- a/loc/133.html
+++ b/loc/133.html
@@ -1,10 +1,10 @@
 <body>
-<div>- Тобі труба, шматок драконячих фекалій!! - горлаєш ти і вибігаєш із-за колони, гнівно розмахуючи мечем.<br/>
-Правитель посміхається у відповідь, змахує рукою та ти відчуваєш, як летиш назад повз колону і грюкаєшся спиною об стінку. Не смертельно і майже не боляче. Що далі?
+<div>- РўРѕР±С– С‚СЂСѓР±Р°, С€РјР°С‚РѕРє РґСЂР°РєРѕРЅСЏС‡РёС… С„РµРєР°Р»С–Р№!! - РіРѕСЂР»Р°С”С€ С‚Рё С– РІРёР±С–РіР°С”С€ С–Р·-Р·Р° РєРѕР»РѕРЅРё, РіРЅС–РІРЅРѕ СЂРѕР·РјР°С…СѓСЋС‡Рё РјРµС‡РµРј.<br/>
+РџСЂР°РІРёС‚РµР»СЊ РїРѕСЃРјС–С…Р°С”С‚СЊСЃСЏ Сѓ РІС–РґРїРѕРІС–РґСЊ, Р·РјР°С…СѓС” СЂСѓРєРѕСЋ С‚Р° С‚Рё РІС–РґС‡СѓРІР°С”С€, СЏРє Р»РµС‚РёС€ РЅР°Р·Р°Рґ РїРѕРІР· РєРѕР»РѕРЅСѓ С– РіСЂСЋРєР°С”С€СЃСЏ СЃРїРёРЅРѕСЋ РѕР± СЃС‚С–РЅРєСѓ. РќРµ СЃРјРµСЂС‚РµР»СЊРЅРѕ С– РјР°Р№Р¶Рµ РЅРµ Р±РѕР»СЏС‡Рµ. Р©Рѕ РґР°Р»С–?
 </div>
 <div>
-<a href="133.html">Напасти на правителя знову</a><br>
-<a href="134.html">Принести в жертву кошеня, щоб забезпечити собі успішний напад</a></br>
-<a href="135.html">Спробувати поговорити</a><br>
+<a href="133.html">РќР°РїР°СЃС‚Рё РЅР° РїСЂР°РІРёС‚РµР»СЏ Р·РЅРѕРІСѓ</a><br>
+<a href="134.html">РџСЂРёРЅРµСЃС‚Рё РІ Р¶РµСЂС‚РІСѓ РєРѕС€РµРЅСЏ, С‰РѕР± Р·Р°Р±РµР·РїРµС‡РёС‚Рё СЃРѕР±С– СѓСЃРїС–С€РЅРёР№ РЅР°РїР°Рґ</a></br>
+<a href="135.html">РЎРїСЂРѕР±СѓРІР°С‚Рё РїРѕРіРѕРІРѕСЂРёС‚Рё</a><br>
 </div>
 </body>
