--- a/loc/134.html
+++ b/loc/134.html
@@ -1,8 +1,8 @@
 <body>
-<div>Кошеня?! У пожертву?! Точно-точно?! Ну, добре...<br/>
-Ти розчищаєш місце під пожертву, морально налаштовуєшся, лізеш за кошеням та всім причандаллям у сумку, але розумієш, що сумка сюжетно не передбачена. Схоже, ритуал доведеться відкласти. А оскільки тут все одно робити нічого...
+<div>РљРѕС€РµРЅСЏ?! РЈ РїРѕР¶РµСЂС‚РІСѓ?! РўРѕС‡РЅРѕ-С‚РѕС‡РЅРѕ?! РќСѓ, РґРѕР±СЂРµ...<br/>
+РўРё СЂРѕР·С‡РёС‰Р°С”С€ РјС–СЃС†Рµ РїС–Рґ РїРѕР¶РµСЂС‚РІСѓ, РјРѕСЂР°Р»СЊРЅРѕ РЅР°Р»Р°С€С‚РѕРІСѓС”С€СЃСЏ, Р»С–Р·РµС€ Р·Р° РєРѕС€РµРЅСЏРј С‚Р° РІСЃС–Рј РїСЂРёС‡Р°РЅРґР°Р»Р»СЏРј Сѓ СЃСѓРјРєСѓ, Р°Р»Рµ СЂРѕР·СѓРјС–С”С€, С‰Рѕ СЃСѓРјРєР° СЃСЋР¶РµС‚РЅРѕ РЅРµ РїРµСЂРµРґР±Р°С‡РµРЅР°. РЎС…РѕР¶Рµ, СЂРёС‚СѓР°Р» РґРѕРІРµРґРµС‚СЊСЃСЏ РІС–РґРєР»Р°СЃС‚Рё. Рђ РѕСЃРєС–Р»СЊРєРё С‚СѓС‚ РІСЃРµ РѕРґРЅРѕ СЂРѕР±РёС‚Рё РЅС–С‡РѕРіРѕ...
 </div>
 <div>
-<a href="133.html">... нападу на правителя</a><br>
+<a href="133.html">... РЅР°РїР°РґСѓ РЅР° РїСЂР°РІРёС‚РµР»СЏ</a><br>
 </div>
 </body>
