--- a/loc/135.html
+++ b/loc/135.html
@@ -1,11 +1,11 @@
 <body>
-<div>"Мужик, - кажеш ти, піднявши руки вгору та підійшовши на крок. - Давай просто поговоримо. Ти все не так зрозумів."<br/>
-"Бугага! - ірже той. - А що саме? Що ти кидаєшся на мене з мечем? Це ти виключно із добрими намірами робиш?"<br/>
-"Ні. Але я просто пішка у цій грі. Мене поставити перед фактом, що я мушу це зробити. Мені зовсім не в кайф. Я за мир, за добро, і за любов!"<br/>
-"Ти що, хіпі? - зводить брови правитель. - Коли вже на мене нормального воїна нашлють? Чому я не можу битися із могутнім магом, підкачаним варваром, або супер технологічно нашпигованим дрищем-розумником? Гаразд, у мене є пропозиція, від якої ти не зможеш відмовитися. Слухай сюди. Ти можеш стати моїм слугою, моїм помічником і у майбутньому займеш моє місце. Що думаєш?"
+<div>"РњСѓР¶РёРє, - РєР°Р¶РµС€ С‚Рё, РїС–РґРЅСЏРІС€Рё СЂСѓРєРё РІРіРѕСЂСѓ С‚Р° РїС–РґС–Р№С€РѕРІС€Рё РЅР° РєСЂРѕРє. - Р”Р°РІР°Р№ РїСЂРѕСЃС‚Рѕ РїРѕРіРѕРІРѕСЂРёРјРѕ. РўРё РІСЃРµ РЅРµ С‚Р°Рє Р·СЂРѕР·СѓРјС–РІ."<br/>
+"Р‘СѓРіР°РіР°! - С–СЂР¶Рµ С‚РѕР№. - Рђ С‰Рѕ СЃР°РјРµ? Р©Рѕ С‚Рё РєРёРґР°С”С€СЃСЏ РЅР° РјРµРЅРµ Р· РјРµС‡РµРј? Р¦Рµ С‚Рё РІРёРєР»СЋС‡РЅРѕ С–Р· РґРѕР±СЂРёРјРё РЅР°РјС–СЂР°РјРё СЂРѕР±РёС€?"<br/>
+"РќС–. РђР»Рµ СЏ РїСЂРѕСЃС‚Рѕ РїС–С€РєР° Сѓ С†С–Р№ РіСЂС–. РњРµРЅРµ РїРѕСЃС‚Р°РІРёС‚Рё РїРµСЂРµРґ С„Р°РєС‚РѕРј, С‰Рѕ СЏ РјСѓС€Сѓ С†Рµ Р·СЂРѕР±РёС‚Рё. РњРµРЅС– Р·РѕРІСЃС–Рј РЅРµ РІ РєР°Р№С„. РЇ Р·Р° РјРёСЂ, Р·Р° РґРѕР±СЂРѕ, С– Р·Р° Р»СЋР±РѕРІ!"<br/>
+"РўРё С‰Рѕ, С…С–РїС–? - Р·РІРѕРґРёС‚СЊ Р±СЂРѕРІРё РїСЂР°РІРёС‚РµР»СЊ. - РљРѕР»Рё РІР¶Рµ РЅР° РјРµРЅРµ РЅРѕСЂРјР°Р»СЊРЅРѕРіРѕ РІРѕС—РЅР° РЅР°С€Р»СЋС‚СЊ? Р§РѕРјСѓ СЏ РЅРµ РјРѕР¶Сѓ Р±РёС‚РёСЃСЏ С–Р· РјРѕРіСѓС‚РЅС–Рј РјР°РіРѕРј, РїС–РґРєР°С‡Р°РЅРёРј РІР°СЂРІР°СЂРѕРј, Р°Р±Рѕ СЃСѓРїРµСЂ С‚РµС…РЅРѕР»РѕРіС–С‡РЅРѕ РЅР°С€РїРёРіРѕРІР°РЅРёРј РґСЂРёС‰РµРј-СЂРѕР·СѓРјРЅРёРєРѕРј? Р“Р°СЂР°Р·Рґ, Сѓ РјРµРЅРµ С” РїСЂРѕРїРѕР·РёС†С–СЏ, РІС–Рґ СЏРєРѕС— С‚Рё РЅРµ Р·РјРѕР¶РµС€ РІС–РґРјРѕРІРёС‚РёСЃСЏ. РЎР»СѓС…Р°Р№ СЃСЋРґРё. РўРё РјРѕР¶РµС€ СЃС‚Р°С‚Рё РјРѕС—Рј СЃР»СѓРіРѕСЋ, РјРѕС—Рј РїРѕРјС–С‡РЅРёРєРѕРј С– Сѓ РјР°Р№Р±СѓС‚РЅСЊРѕРјСѓ Р·Р°Р№РјРµС€ РјРѕС” РјС–СЃС†Рµ. Р©Рѕ РґСѓРјР°С”С€?"
 </div>
 <div>
-<a href="136.html">Так! Я стану помічником!</a><br>
-<a href="137.html"Ти мене не купиш таким лайном!</a></br>
+<a href="136.html">РўР°Рє! РЇ СЃС‚Р°РЅСѓ РїРѕРјС–С‡РЅРёРєРѕРј!</a><br>
+<a href="137.html"РўРё РјРµРЅРµ РЅРµ РєСѓРїРёС€ С‚Р°РєРёРј Р»Р°Р№РЅРѕРј!</a></br>
 </div>
 </body>
