--- a/loc/136.html
+++ b/loc/136.html
@@ -1,7 +1,7 @@
 <body>
-<div>"Чудово, - посміхається правитель. - Ти будеш моїм найкращим помічником, моїм улюбленцем, моїм номером другим!"<br/>
-Ти радісно киваєш.</div>
+<div>"Р§СѓРґРѕРІРѕ, - РїРѕСЃРјС–С…Р°С”С‚СЊСЃСЏ РїСЂР°РІРёС‚РµР»СЊ. - РўРё Р±СѓРґРµС€ РјРѕС—Рј РЅР°Р№РєСЂР°С‰РёРј РїРѕРјС–С‡РЅРёРєРѕРј, РјРѕС—Рј СѓР»СЋР±Р»РµРЅС†РµРј, РјРѕС—Рј РЅРѕРјРµСЂРѕРј РґСЂСѓРіРёРј!"<br/>
+РўРё СЂР°РґС–СЃРЅРѕ РєРёРІР°С”С€.</div>
 <div>
-<a href="138.html">Час для несподіваного повороту</a><br>
+<a href="138.html">Р§Р°СЃ РґР»СЏ РЅРµСЃРїРѕРґС–РІР°РЅРѕРіРѕ РїРѕРІРѕСЂРѕС‚Сѓ</a><br>
 </div>
 </body>
