--- a/loc/137.html
+++ b/loc/137.html
@@ -1,7 +1,7 @@
 <body>
-<div>"Ото дурне, - посміхається правитель. - Але це твій вибір! Ну, що ж - приготуйся до свого кінця, він буде буквально за кілька секунд!"<br/>
-Ти замираєш та міцніше обхоплюєш руками щит.</div>
+<div>"РћС‚Рѕ РґСѓСЂРЅРµ, - РїРѕСЃРјС–С…Р°С”С‚СЊСЃСЏ РїСЂР°РІРёС‚РµР»СЊ. - РђР»Рµ С†Рµ С‚РІС–Р№ РІРёР±С–СЂ! РќСѓ, С‰Рѕ Р¶ - РїСЂРёРіРѕС‚СѓР№СЃСЏ РґРѕ СЃРІРѕРіРѕ РєС–РЅС†СЏ, РІС–РЅ Р±СѓРґРµ Р±СѓРєРІР°Р»СЊРЅРѕ Р·Р° РєС–Р»СЊРєР° СЃРµРєСѓРЅРґ!"<br/>
+РўРё Р·Р°РјРёСЂР°С”С€ С‚Р° РјС–С†РЅС–С€Рµ РѕР±С…РѕРїР»СЋС”С€ СЂСѓРєР°РјРё С‰РёС‚.</div>
 <div>
-<a href="138.html">Час для несподіваного повороту</a><br>
+<a href="138.html">Р§Р°СЃ РґР»СЏ РЅРµСЃРїРѕРґС–РІР°РЅРѕРіРѕ РїРѕРІРѕСЂРѕС‚Сѓ</a><br>
 </div>
 </body>
