--- a/loc/138.html
+++ b/loc/138.html
@@ -1,11 +1,11 @@
 <body>
-<div>Наступної миті помічаєш, що з іншого темного кутка вистрибує фігурна постать, яка швидко наближається у вашому напрямку.<br/>
-"Евглено! Я так і знав, що ти з'явишся! - вищирюється правитель і матеріалізує перед собою меч із зігнутою ручкою. - Спробуймо помірятися силами?"<br/>
-"Із задоволенням!" - вигукує та і вихоплює з-за спини масивний довгий клинок.<br/>
-Вони зчеплюються у масивному двобої всього у кількох метрах від тебе. Іскри летять в усі боки, напруга зростає щомиті, кількість реплік та лайки не встигає відкладатися у пам'яті.<br/>
-Раптом один із ударів відкидає тебе у бік трону. Ти вдаряєшся о якусь стійку і помічаєш, як згори падає посох кольору небесної блакиті. Ти піднімаєш його та направляєш у бік сутички. Ті зупиняются та дивляться на тебе.
+<div>РќР°СЃС‚СѓРїРЅРѕС— РјРёС‚С– РїРѕРјС–С‡Р°С”С€, С‰Рѕ Р· С–РЅС€РѕРіРѕ С‚РµРјРЅРѕРіРѕ РєСѓС‚РєР° РІРёСЃС‚СЂРёР±СѓС” С„С–РіСѓСЂРЅР° РїРѕСЃС‚Р°С‚СЊ, СЏРєР° С€РІРёРґРєРѕ РЅР°Р±Р»РёР¶Р°С”С‚СЊСЃСЏ Сѓ РІР°С€РѕРјСѓ РЅР°РїСЂСЏРјРєСѓ.<br/>
+"Р•РІРіР»РµРЅРѕ! РЇ С‚Р°Рє С– Р·РЅР°РІ, С‰Рѕ С‚Рё Р·'СЏРІРёС€СЃСЏ! - РІРёС‰РёСЂСЋС”С‚СЊСЃСЏ РїСЂР°РІРёС‚РµР»СЊ С– РјР°С‚РµСЂС–Р°Р»С–Р·СѓС” РїРµСЂРµРґ СЃРѕР±РѕСЋ РјРµС‡ С–Р· Р·С–РіРЅСѓС‚РѕСЋ СЂСѓС‡РєРѕСЋ. - РЎРїСЂРѕР±СѓР№РјРѕ РїРѕРјС–СЂСЏС‚РёСЃСЏ СЃРёР»Р°РјРё?"<br/>
+"Р†Р· Р·Р°РґРѕРІРѕР»РµРЅРЅСЏРј!" - РІРёРіСѓРєСѓС” С‚Р° С– РІРёС…РѕРїР»СЋС” Р·-Р·Р° СЃРїРёРЅРё РјР°СЃРёРІРЅРёР№ РґРѕРІРіРёР№ РєР»РёРЅРѕРє.<br/>
+Р’РѕРЅРё Р·С‡РµРїР»СЋСЋС‚СЊСЃСЏ Сѓ РјР°СЃРёРІРЅРѕРјСѓ РґРІРѕР±РѕС— РІСЃСЊРѕРіРѕ Сѓ РєС–Р»СЊРєРѕС… РјРµС‚СЂР°С… РІС–Рґ С‚РµР±Рµ. Р†СЃРєСЂРё Р»РµС‚СЏС‚СЊ РІ СѓСЃС– Р±РѕРєРё, РЅР°РїСЂСѓРіР° Р·СЂРѕСЃС‚Р°С” С‰РѕРјРёС‚С–, РєС–Р»СЊРєС–СЃС‚СЊ СЂРµРїР»С–Рє С‚Р° Р»Р°Р№РєРё РЅРµ РІСЃС‚РёРіР°С” РІС–РґРєР»Р°РґР°С‚РёСЃСЏ Сѓ РїР°Рј'СЏС‚С–.<br/>
+Р Р°РїС‚РѕРј РѕРґРёРЅ С–Р· СѓРґР°СЂС–РІ РІС–РґРєРёРґР°С” С‚РµР±Рµ Сѓ Р±С–Рє С‚СЂРѕРЅСѓ. РўРё РІРґР°СЂСЏС”С€СЃСЏ Рѕ СЏРєСѓСЃСЊ СЃС‚С–Р№РєСѓ С– РїРѕРјС–С‡Р°С”С€, СЏРє Р·РіРѕСЂРё РїР°РґР°С” РїРѕСЃРѕС… РєРѕР»СЊРѕСЂСѓ РЅРµР±РµСЃРЅРѕС— Р±Р»Р°РєРёС‚С–. РўРё РїС–РґРЅС–РјР°С”С€ Р№РѕРіРѕ С‚Р° РЅР°РїСЂР°РІР»СЏС”С€ Сѓ Р±С–Рє СЃСѓС‚РёС‡РєРё. РўС– Р·СѓРїРёРЅСЏСЋС‚СЃСЏ С‚Р° РґРёРІР»СЏС‚СЊСЃСЏ РЅР° С‚РµР±Рµ.
 </div>
 <div>
-<a href="139.html">Це було справді напружено. А далі?</a><br>
+<a href="139.html">Р¦Рµ Р±СѓР»Рѕ СЃРїСЂР°РІРґС– РЅР°РїСЂСѓР¶РµРЅРѕ. Рђ РґР°Р»С–?</a><br>
 </div>
 </body>
