--- a/loc/139.html
+++ b/loc/139.html
@@ -1,14 +1,14 @@
 <body>
-<div>"Гей, не пальни з неї випадково, - хитає пальцем правитель. - Це дуже міцна штука. Але як хочеш, то спершу обери ціль. Бачиш там синеньку кнопочку? Натисни на неї і це вистрілить у обрану ціль. Але не натискай червону, бо це відправить тебе на той світ. Обирай правильно! Ти можеш бути моїм нащадком!"<br/>
-"Не слухай його, - кричить Евглена. - Він завжди бреше! Приший його! Ми будемо Опором! Ми станемо владою! Влада буде в руках народу! До біса правителів та все це лайно!"<br/>
-І що думаєш робити? 
+<div>"Р“РµР№, РЅРµ РїР°Р»СЊРЅРё Р· РЅРµС— РІРёРїР°РґРєРѕРІРѕ, - С…РёС‚Р°С” РїР°Р»СЊС†РµРј РїСЂР°РІРёС‚РµР»СЊ. - Р¦Рµ РґСѓР¶Рµ РјС–С†РЅР° С€С‚СѓРєР°. РђР»Рµ СЏРє С…РѕС‡РµС€, С‚Рѕ СЃРїРµСЂС€Сѓ РѕР±РµСЂРё С†С–Р»СЊ. Р‘Р°С‡РёС€ С‚Р°Рј СЃРёРЅРµРЅСЊРєСѓ РєРЅРѕРїРѕС‡РєСѓ? РќР°С‚РёСЃРЅРё РЅР° РЅРµС— С– С†Рµ РІРёСЃС‚СЂС–Р»РёС‚СЊ Сѓ РѕР±СЂР°РЅСѓ С†С–Р»СЊ. РђР»Рµ РЅРµ РЅР°С‚РёСЃРєР°Р№ С‡РµСЂРІРѕРЅСѓ, Р±Рѕ С†Рµ РІС–РґРїСЂР°РІРёС‚СЊ С‚РµР±Рµ РЅР° С‚РѕР№ СЃРІС–С‚. РћР±РёСЂР°Р№ РїСЂР°РІРёР»СЊРЅРѕ! РўРё РјРѕР¶РµС€ Р±СѓС‚Рё РјРѕС—Рј РЅР°С‰Р°РґРєРѕРј!"<br/>
+"РќРµ СЃР»СѓС…Р°Р№ Р№РѕРіРѕ, - РєСЂРёС‡РёС‚СЊ Р•РІРіР»РµРЅР°. - Р’С–РЅ Р·Р°РІР¶РґРё Р±СЂРµС€Рµ! РџСЂРёС€РёР№ Р№РѕРіРѕ! РњРё Р±СѓРґРµРјРѕ РћРїРѕСЂРѕРј! РњРё СЃС‚Р°РЅРµРјРѕ РІР»Р°РґРѕСЋ! Р’Р»Р°РґР° Р±СѓРґРµ РІ СЂСѓРєР°С… РЅР°СЂРѕРґСѓ! Р”Рѕ Р±С–СЃР° РїСЂР°РІРёС‚РµР»С–РІ С‚Р° РІСЃРµ С†Рµ Р»Р°Р№РЅРѕ!"<br/>
+Р† С‰Рѕ РґСѓРјР°С”С€ СЂРѕР±РёС‚Рё? 
 </div>
 <div>
-<a href="13a.html">Наводжу на правителя і тисну синю</a><br>
-<a href="13a.html">Наводжу на правителя і тисну червону</a><br>
-<a href="13a.html">Наводжу на Евглену і тисну синю</a><br>
-<a href="13a.html">Наводжу на Евглену і тисну червону</a><br>
-<a href="13b.html">Оглянути кімнату детальніше</a></br>
-<a href="13c.html">Оглянути посох самостійно</a></br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° РїСЂР°РІРёС‚РµР»СЏ С– С‚РёСЃРЅСѓ СЃРёРЅСЋ</a><br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° РїСЂР°РІРёС‚РµР»СЏ С– С‚РёСЃРЅСѓ С‡РµСЂРІРѕРЅСѓ</a><br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° Р•РІРіР»РµРЅСѓ С– С‚РёСЃРЅСѓ СЃРёРЅСЋ</a><br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° Р•РІРіР»РµРЅСѓ С– С‚РёСЃРЅСѓ С‡РµСЂРІРѕРЅСѓ</a><br>
+<a href="13b.html">РћРіР»СЏРЅСѓС‚Рё РєС–РјРЅР°С‚Сѓ РґРµС‚Р°Р»СЊРЅС–С€Рµ</a></br>
+<a href="13c.html">РћРіР»СЏРЅСѓС‚Рё РїРѕСЃРѕС… СЃР°РјРѕСЃС‚С–Р№РЅРѕ</a></br>
 </div>
 </body>
