--- a/loc/13a.html
+++ b/loc/13a.html
@@ -1,6 +1,6 @@
 <body>
-<div>Ти цілишся і натискаєш кнопку. Чується якийсь хлопок і ти відчуваєш, як руки, ноги та усе тіло стають цілком і повністю невагомими. Світ радісно гасне, а твої рештки стали вечерею для мешканців рову. Хіба це не прекрасно?
+<div>РўРё С†С–Р»РёС€СЃСЏ С– РЅР°С‚РёСЃРєР°С”С€ РєРЅРѕРїРєСѓ. Р§СѓС”С‚СЊСЃСЏ СЏРєРёР№СЃСЊ С…Р»РѕРїРѕРє С– С‚Рё РІС–РґС‡СѓРІР°С”С€, СЏРє СЂСѓРєРё, РЅРѕРіРё С‚Р° СѓСЃРµ С‚С–Р»Рѕ СЃС‚Р°СЋС‚СЊ С†С–Р»РєРѕРј С– РїРѕРІРЅС–СЃС‚СЋ РЅРµРІР°РіРѕРјРёРјРё. РЎРІС–С‚ СЂР°РґС–СЃРЅРѕ РіР°СЃРЅРµ, Р° С‚РІРѕС— СЂРµС€С‚РєРё СЃС‚Р°Р»Рё РІРµС‡РµСЂРµСЋ РґР»СЏ РјРµС€РєР°РЅС†С–РІ СЂРѕРІСѓ. РҐС–Р±Р° С†Рµ РЅРµ РїСЂРµРєСЂР°СЃРЅРѕ?
 </div>
 <div>
-<a href="0.html">Гру закінчено</a><br></div>
+<a href="0.html">Р“СЂСѓ Р·Р°РєС–РЅС‡РµРЅРѕ</a><br></div>
 </body>
