--- a/loc/13c.html
+++ b/loc/13c.html
@@ -1,17 +1,17 @@
 <body>
-<div>На посоху витаврувана назва - BSOD: Blue Staff of Death. Біля кнопок маленькими літерами написано:
-<li>біля синьої - "самознищення"</li>
-<li>біля червоної - "самознищення"</li>
-Трошки нижче напис: "керування голосом".<br/>
-Які дії?
+<div>РќР° РїРѕСЃРѕС…Сѓ РІРёС‚Р°РІСЂСѓРІР°РЅР° РЅР°Р·РІР° - BSOD: Blue Staff of Death. Р‘С–Р»СЏ РєРЅРѕРїРѕРє РјР°Р»РµРЅСЊРєРёРјРё Р»С–С‚РµСЂР°РјРё РЅР°РїРёСЃР°РЅРѕ:
+<li>Р±С–Р»СЏ СЃРёРЅСЊРѕС— - "СЃР°РјРѕР·РЅРёС‰РµРЅРЅСЏ"</li>
+<li>Р±С–Р»СЏ С‡РµСЂРІРѕРЅРѕС— - "СЃР°РјРѕР·РЅРёС‰РµРЅРЅСЏ"</li>
+РўСЂРѕС€РєРё РЅРёР¶С‡Рµ РЅР°РїРёСЃ: "РєРµСЂСѓРІР°РЅРЅСЏ РіРѕР»РѕСЃРѕРј".<br/>
+РЇРєС– РґС–С—?
 </div>
 <div>
-<a href="13a.html">Наводжу на правителя і тисну синю</a><br>
-<a href="13a.html">Наводжу на правителя і тисну червону</a><br>
-<a href="13a.html">Наводжу на Евглену і тисну синю</a><br>
-<a href="13a.html">Наводжу на Евглену і тисну червону</a><br>
-<a href="13d.html">Наводжу на правителя і кажу "вогонь"</a><br>
-<a href="13e.html">Наводжу на Евглену і кажу "вогонь"</a><br>
-<a href="13cb.html">Оглянути кімнату детальніше</a></br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° РїСЂР°РІРёС‚РµР»СЏ С– С‚РёСЃРЅСѓ СЃРёРЅСЋ</a><br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° РїСЂР°РІРёС‚РµР»СЏ С– С‚РёСЃРЅСѓ С‡РµСЂРІРѕРЅСѓ</a><br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° Р•РІРіР»РµРЅСѓ С– С‚РёСЃРЅСѓ СЃРёРЅСЋ</a><br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° Р•РІРіР»РµРЅСѓ С– С‚РёСЃРЅСѓ С‡РµСЂРІРѕРЅСѓ</a><br>
+<a href="13d.html">РќР°РІРѕРґР¶Сѓ РЅР° РїСЂР°РІРёС‚РµР»СЏ С– РєР°Р¶Сѓ "РІРѕРіРѕРЅСЊ"</a><br>
+<a href="13e.html">РќР°РІРѕРґР¶Сѓ РЅР° Р•РІРіР»РµРЅСѓ С– РєР°Р¶Сѓ "РІРѕРіРѕРЅСЊ"</a><br>
+<a href="13cb.html">РћРіР»СЏРЅСѓС‚Рё РєС–РјРЅР°С‚Сѓ РґРµС‚Р°Р»СЊРЅС–С€Рµ</a></br>
 </div>
 </body>
