--- a/loc/13d.html
+++ b/loc/13d.html
@@ -1,15 +1,15 @@
 <body>
-<div>Із посоха з хуркотом вилітає величезний фаєрбол, який розриває правителя на малесенькі шматочки, заляпуючи найближчі стіни та колони багряною кров'ю.<br/>
-"Фіга собі, - каже Евглена. - Це жорстко. До біса жорстко. Але ти молодець, нам вдалося здолати правителя."<br/>
-"І що тепер?" - запитуєш ти.<br/>
-"Тепер я правитиму. Забула сказати - я сестра його. Старша. Ще змалку мене позбавили унаслідування трону, тому я і стала очільником Руху Опору. Тепер все в порядку. Я стану королевою. А тобі дякую. Хочеш - забирай собі мій штаб. Золота з казни не дам, бо його там і так катма."<br/>
-"Мене надурили? - запитуєш ти. - Просто ось так взяли і надурили?"<br/>
-"Упс, - каже Евглена, чи пак правительниця. - Життя несправедливе, шариш? А що ти мені зробиш?"
+<div>Р†Р· РїРѕСЃРѕС…Р° Р· С…СѓСЂРєРѕС‚РѕРј РІРёР»С–С‚Р°С” РІРµР»РёС‡РµР·РЅРёР№ С„Р°С”СЂР±РѕР», СЏРєРёР№ СЂРѕР·СЂРёРІР°С” РїСЂР°РІРёС‚РµР»СЏ РЅР° РјР°Р»РµСЃРµРЅСЊРєС– С€РјР°С‚РѕС‡РєРё, Р·Р°Р»СЏРїСѓСЋС‡Рё РЅР°Р№Р±Р»РёР¶С‡С– СЃС‚С–РЅРё С‚Р° РєРѕР»РѕРЅРё Р±Р°РіСЂСЏРЅРѕСЋ РєСЂРѕРІ'СЋ.<br/>
+"Р¤С–РіР° СЃРѕР±С–, - РєР°Р¶Рµ Р•РІРіР»РµРЅР°. - Р¦Рµ Р¶РѕСЂСЃС‚РєРѕ. Р”Рѕ Р±С–СЃР° Р¶РѕСЂСЃС‚РєРѕ. РђР»Рµ С‚Рё РјРѕР»РѕРґРµС†СЊ, РЅР°Рј РІРґР°Р»РѕСЃСЏ Р·РґРѕР»Р°С‚Рё РїСЂР°РІРёС‚РµР»СЏ."<br/>
+"Р† С‰Рѕ С‚РµРїРµСЂ?" - Р·Р°РїРёС‚СѓС”С€ С‚Рё.<br/>
+"РўРµРїРµСЂ СЏ РїСЂР°РІРёС‚РёРјСѓ. Р—Р°Р±СѓР»Р° СЃРєР°Р·Р°С‚Рё - СЏ СЃРµСЃС‚СЂР° Р№РѕРіРѕ. РЎС‚Р°СЂС€Р°. Р©Рµ Р·РјР°Р»РєСѓ РјРµРЅРµ РїРѕР·Р±Р°РІРёР»Рё СѓРЅР°СЃР»С–РґСѓРІР°РЅРЅСЏ С‚СЂРѕРЅСѓ, С‚РѕРјСѓ СЏ С– СЃС‚Р°Р»Р° РѕС‡С–Р»СЊРЅРёРєРѕРј Р СѓС…Сѓ РћРїРѕСЂСѓ. РўРµРїРµСЂ РІСЃРµ РІ РїРѕСЂСЏРґРєСѓ. РЇ СЃС‚Р°РЅСѓ РєРѕСЂРѕР»РµРІРѕСЋ. Рђ С‚РѕР±С– РґСЏРєСѓСЋ. РҐРѕС‡РµС€ - Р·Р°Р±РёСЂР°Р№ СЃРѕР±С– РјС–Р№ С€С‚Р°Р±. Р—РѕР»РѕС‚Р° Р· РєР°Р·РЅРё РЅРµ РґР°Рј, Р±Рѕ Р№РѕРіРѕ С‚Р°Рј С– С‚Р°Рє РєР°С‚РјР°."<br/>
+"РњРµРЅРµ РЅР°РґСѓСЂРёР»Рё? - Р·Р°РїРёС‚СѓС”С€ С‚Рё. - РџСЂРѕСЃС‚Рѕ РѕСЃСЊ С‚Р°Рє РІР·СЏР»Рё С– РЅР°РґСѓСЂРёР»Рё?"<br/>
+"РЈРїСЃ, - РєР°Р¶Рµ Р•РІРіР»РµРЅР°, С‡Рё РїР°Рє РїСЂР°РІРёС‚РµР»СЊРЅРёС†СЏ. - Р–РёС‚С‚СЏ РЅРµСЃРїСЂР°РІРµРґР»РёРІРµ, С€Р°СЂРёС€? Рђ С‰Рѕ С‚Рё РјРµРЅС– Р·СЂРѕР±РёС€?"
 </div>
 <div>
-<a href="13h.html">Важко зітхнути та викликати таксі додому</a><br>
-<a href="13i.html">Вихопити клинок та вступити в бій</a></br>
-<a href="13de.html">Навести посох на Евглену</a></br>
+<a href="13h.html">Р’Р°Р¶РєРѕ Р·С–С‚С…РЅСѓС‚Рё С‚Р° РІРёРєР»РёРєР°С‚Рё С‚Р°РєСЃС– РґРѕРґРѕРјСѓ</a><br>
+<a href="13i.html">Р’РёС…РѕРїРёС‚Рё РєР»РёРЅРѕРє С‚Р° РІСЃС‚СѓРїРёС‚Рё РІ Р±С–Р№</a></br>
+<a href="13de.html">РќР°РІРµСЃС‚Рё РїРѕСЃРѕС… РЅР° Р•РІРіР»РµРЅСѓ</a></br>
 
 </div>
 </body>
