--- a/loc/13e.html
+++ b/loc/13e.html
@@ -1,13 +1,13 @@
 <body>
-<div>Евглена скрикує і наступної миті фаєрбол із посоху розносить її на малесенькі шматочки, фарбуючи колони та стіни у багряний колір - все в найкращих традиціях слешерів.<br/>
-Правитель підходить і плескає по плечу:<br/>
-"Я знав що ти не підведеш. Я відразу побачив у тобі рідну душу."<br/>
-"Свистиш," - думаєш ти, але змовчуєш.<br/>
-"У якості нагороди в мене є два варіанти, - каже правитель. - Ти заслуговуєш кожен із них. Перший - я відправляю тебе додому, у твій вимір. Там ти знову станеш собою і спокійно доживеш до кінця днів. Другий - залишаєшся моїм помічником та у майбутньому станеш моїм наступником. То що - який твій вибір, о найдостойніший?"
+<div>Р•РІРіР»РµРЅР° СЃРєСЂРёРєСѓС” С– РЅР°СЃС‚СѓРїРЅРѕС— РјРёС‚С– С„Р°С”СЂР±РѕР» С–Р· РїРѕСЃРѕС…Сѓ СЂРѕР·РЅРѕСЃРёС‚СЊ С—С— РЅР° РјР°Р»РµСЃРµРЅСЊРєС– С€РјР°С‚РѕС‡РєРё, С„Р°СЂР±СѓСЋС‡Рё РєРѕР»РѕРЅРё С‚Р° СЃС‚С–РЅРё Сѓ Р±Р°РіСЂСЏРЅРёР№ РєРѕР»С–СЂ - РІСЃРµ РІ РЅР°Р№РєСЂР°С‰РёС… С‚СЂР°РґРёС†С–СЏС… СЃР»РµС€РµСЂС–РІ.<br/>
+РџСЂР°РІРёС‚РµР»СЊ РїС–РґС…РѕРґРёС‚СЊ С– РїР»РµСЃРєР°С” РїРѕ РїР»РµС‡Сѓ:<br/>
+"РЇ Р·РЅР°РІ С‰Рѕ С‚Рё РЅРµ РїС–РґРІРµРґРµС€. РЇ РІС–РґСЂР°Р·Сѓ РїРѕР±Р°С‡РёРІ Сѓ С‚РѕР±С– СЂС–РґРЅСѓ РґСѓС€Сѓ."<br/>
+"РЎРІРёСЃС‚РёС€," - РґСѓРјР°С”С€ С‚Рё, Р°Р»Рµ Р·РјРѕРІС‡СѓС”С€.<br/>
+"РЈ СЏРєРѕСЃС‚С– РЅР°РіРѕСЂРѕРґРё РІ РјРµРЅРµ С” РґРІР° РІР°СЂС–Р°РЅС‚Рё, - РєР°Р¶Рµ РїСЂР°РІРёС‚РµР»СЊ. - РўРё Р·Р°СЃР»СѓРіРѕРІСѓС”С€ РєРѕР¶РµРЅ С–Р· РЅРёС…. РџРµСЂС€РёР№ - СЏ РІС–РґРїСЂР°РІР»СЏСЋ С‚РµР±Рµ РґРѕРґРѕРјСѓ, Сѓ С‚РІС–Р№ РІРёРјС–СЂ. РўР°Рј С‚Рё Р·РЅРѕРІСѓ СЃС‚Р°РЅРµС€ СЃРѕР±РѕСЋ С– СЃРїРѕРєС–Р№РЅРѕ РґРѕР¶РёРІРµС€ РґРѕ РєС–РЅС†СЏ РґРЅС–РІ. Р”СЂСѓРіРёР№ - Р·Р°Р»РёС€Р°С”С€СЃСЏ РјРѕС—Рј РїРѕРјС–С‡РЅРёРєРѕРј С‚Р° Сѓ РјР°Р№Р±СѓС‚РЅСЊРѕРјСѓ СЃС‚Р°РЅРµС€ РјРѕС—Рј РЅР°СЃС‚СѓРїРЅРёРєРѕРј. РўРѕ С‰Рѕ - СЏРєРёР№ С‚РІС–Р№ РІРёР±С–СЂ, Рѕ РЅР°Р№РґРѕСЃС‚РѕР№РЅС–С€РёР№?"
 </div>
 <div>
-<a href="13j.html">"Я хочу додому"</a><br>
-<a href="151.html">"Хочу стати помічником, а потім наступником"</a></br>
-<a href="13ed.html">Навести на правителя посох</a></br>
+<a href="13j.html">"РЇ С…РѕС‡Сѓ РґРѕРґРѕРјСѓ"</a><br>
+<a href="151.html">"РҐРѕС‡Сѓ СЃС‚Р°С‚Рё РїРѕРјС–С‡РЅРёРєРѕРј, Р° РїРѕС‚С–Рј РЅР°СЃС‚СѓРїРЅРёРєРѕРј"</a></br>
+<a href="13ed.html">РќР°РІРµСЃС‚Рё РЅР° РїСЂР°РІРёС‚РµР»СЏ РїРѕСЃРѕС…</a></br>
 </div>
 </body>
