--- a/loc/13f.html
+++ b/loc/13f.html
@@ -1,9 +1,9 @@
 <body>
-<div>Куля вилітає із посоху строго у напрямку арки.
+<div>РљСѓР»СЏ РІРёР»С–С‚Р°С” С–Р· РїРѕСЃРѕС…Сѓ СЃС‚СЂРѕРіРѕ Сѓ РЅР°РїСЂСЏРјРєСѓ Р°СЂРєРё.
 <br/>
-"БЛін!" - майже голос у голос кажуть Евглена і правитель, а наступної миті їх обох завалює уламками скелі. Деякий момент кілька із їхніх ніг ще посмикуються, а потім навкруги лише тиша, спокій та купа пилюки.
+"Р‘Р›С–РЅ!" - РјР°Р№Р¶Рµ РіРѕР»РѕСЃ Сѓ РіРѕР»РѕСЃ РєР°Р¶СѓС‚СЊ Р•РІРіР»РµРЅР° С– РїСЂР°РІРёС‚РµР»СЊ, Р° РЅР°СЃС‚СѓРїРЅРѕС— РјРёС‚С– С—С… РѕР±РѕС… Р·Р°РІР°Р»СЋС” СѓР»Р°РјРєР°РјРё СЃРєРµР»С–. Р”РµСЏРєРёР№ РјРѕРјРµРЅС‚ РєС–Р»СЊРєР° С–Р· С—С…РЅС–С… РЅС–Рі С‰Рµ РїРѕСЃРјРёРєСѓСЋС‚СЊСЃСЏ, Р° РїРѕС‚С–Рј РЅР°РІРєСЂСѓРіРё Р»РёС€Рµ С‚РёС€Р°, СЃРїРѕРєС–Р№ С‚Р° РєСѓРїР° РїРёР»СЋРєРё.
 </div>
 <div>
-<a href="13g.html">І що далі?</a><br>
+<a href="13g.html">Р† С‰Рѕ РґР°Р»С–?</a><br>
 </div>
 </body>
