--- a/loc/13g.html
+++ b/loc/13g.html
@@ -1,10 +1,10 @@
 <body>
-<div>ТИ чуєш кроки позаду та різко повертаєшся. Перед тобою стоїть мужик у довжелезному кольоровому халаті з зорями та іншими красивими ілюстраціями.<br/>
-"Доброго дня, герою! - каже він. - Твоїми руками відновлений баланс у цьому краї."<br/>
-Ти лиш киваєш, майже нічого не розуміючи. <br/>
-"Звісно, тобі цікаво яким чином тебе було сюди переміщено. Це просто... ммм... магія. Так, краще це не пояснити. Бути обраним - це велика честь і я дуже радий, що ми не помилилися. Моя мама якось казала - авчмиваивапукпавпвап..."
+<div>РўР С‡СѓС”С€ РєСЂРѕРєРё РїРѕР·Р°РґСѓ С‚Р° СЂС–Р·РєРѕ РїРѕРІРµСЂС‚Р°С”С€СЃСЏ. РџРµСЂРµРґ С‚РѕР±РѕСЋ СЃС‚РѕС—С‚СЊ РјСѓР¶РёРє Сѓ РґРѕРІР¶РµР»РµР·РЅРѕРјСѓ РєРѕР»СЊРѕСЂРѕРІРѕРјСѓ С…Р°Р»Р°С‚С– Р· Р·РѕСЂСЏРјРё С‚Р° С–РЅС€РёРјРё РєСЂР°СЃРёРІРёРјРё С–Р»СЋСЃС‚СЂР°С†С–СЏРјРё.<br/>
+"Р”РѕР±СЂРѕРіРѕ РґРЅСЏ, РіРµСЂРѕСЋ! - РєР°Р¶Рµ РІС–РЅ. - РўРІРѕС—РјРё СЂСѓРєР°РјРё РІС–РґРЅРѕРІР»РµРЅРёР№ Р±Р°Р»Р°РЅСЃ Сѓ С†СЊРѕРјСѓ РєСЂР°С—."<br/>
+РўРё Р»РёС€ РєРёРІР°С”С€, РјР°Р№Р¶Рµ РЅС–С‡РѕРіРѕ РЅРµ СЂРѕР·СѓРјС–СЋС‡Рё. <br/>
+"Р—РІС–СЃРЅРѕ, С‚РѕР±С– С†С–РєР°РІРѕ СЏРєРёРј С‡РёРЅРѕРј С‚РµР±Рµ Р±СѓР»Рѕ СЃСЋРґРё РїРµСЂРµРјС–С‰РµРЅРѕ. Р¦Рµ РїСЂРѕСЃС‚Рѕ... РјРјРј... РјР°РіС–СЏ. РўР°Рє, РєСЂР°С‰Рµ С†Рµ РЅРµ РїРѕСЏСЃРЅРёС‚Рё. Р‘СѓС‚Рё РѕР±СЂР°РЅРёРј - С†Рµ РІРµР»РёРєР° С‡РµСЃС‚СЊ С– СЏ РґСѓР¶Рµ СЂР°РґРёР№, С‰Рѕ РјРё РЅРµ РїРѕРјРёР»РёР»РёСЃСЏ. РњРѕСЏ РјР°РјР° СЏРєРѕСЃСЊ РєР°Р·Р°Р»Р° - Р°РІС‡РјРёРІР°РёРІР°РїСѓРєРїР°РІРїРІР°Рї..."
 </div>
 <div>
-<a href="141.html">Що?!!</a><br>
+<a href="141.html">Р©Рѕ?!!</a><br>
 </div>
 </body>
