--- a/loc/13h.html
+++ b/loc/13h.html
@@ -1,14 +1,14 @@
 <body>
-<div>Ти підіймаєшся на дах, тричі посвистуєш і перед баштою з'являється дракон, в якого на плечах сидить погонич, а трохи далі принцеса.<br/>
-"Дракон-таксі, - починає водій. - Домчу у будь-який край світу!"<br/>
-"Мені додому," - буркаєш ти, залізаєш по крилу на хребет дракона і звір злітає у небо.<br/>
-Ви кудись летите. Поруч щось каже принцеса, але ти лиш дивишся убік, абсолютно усе ігноруючи. Ти відчуваєш, як набігає жахлива депресія та життя втрачає свій сенс.<br/>
-"Приїхали," - чуєш голос погонича і озираєшся навколо.<br/>
-Ви знаходитесь біля якогось дорогого будинку, принцеса вже стягнула донизу свої манатки та покурює, сидячи на валізі. Теж спускаєшся, сідаєш поруч, затягуєшся її цигаркою, дракон відлітає.<br/>
-"Ось тут ми і житимемо, - каже принцеса. - Це наша дача, про яку мало хто знає. Продуктів тут льохи наповнені, пійла бочки бездонні. Не парся. Я не сержусь за вбивство мого батька. Він все одно був мудилом. Не давав мені розвиватися, як особистості. А так ми очолимо Рух Опору. Відродимо народний супротив!"<br/>
-Ти киваєш у відповідь, посміхаєшся та випускаєш кільце диму в повітря.
+<div>РўРё РїС–РґС–Р№РјР°С”С€СЃСЏ РЅР° РґР°С…, С‚СЂРёС‡С– РїРѕСЃРІРёСЃС‚СѓС”С€ С– РїРµСЂРµРґ Р±Р°С€С‚РѕСЋ Р·'СЏРІР»СЏС”С‚СЊСЃСЏ РґСЂР°РєРѕРЅ, РІ СЏРєРѕРіРѕ РЅР° РїР»РµС‡Р°С… СЃРёРґРёС‚СЊ РїРѕРіРѕРЅРёС‡, Р° С‚СЂРѕС…Рё РґР°Р»С– РїСЂРёРЅС†РµСЃР°.<br/>
+"Р”СЂР°РєРѕРЅ-С‚Р°РєСЃС–, - РїРѕС‡РёРЅР°С” РІРѕРґС–Р№. - Р”РѕРјС‡Сѓ Сѓ Р±СѓРґСЊ-СЏРєРёР№ РєСЂР°Р№ СЃРІС–С‚Сѓ!"<br/>
+"РњРµРЅС– РґРѕРґРѕРјСѓ," - Р±СѓСЂРєР°С”С€ С‚Рё, Р·Р°Р»С–Р·Р°С”С€ РїРѕ РєСЂРёР»Сѓ РЅР° С…СЂРµР±РµС‚ РґСЂР°РєРѕРЅР° С– Р·РІС–СЂ Р·Р»С–С‚Р°С” Сѓ РЅРµР±Рѕ.<br/>
+Р’Рё РєСѓРґРёСЃСЊ Р»РµС‚РёС‚Рµ. РџРѕСЂСѓС‡ С‰РѕСЃСЊ РєР°Р¶Рµ РїСЂРёРЅС†РµСЃР°, Р°Р»Рµ С‚Рё Р»РёС€ РґРёРІРёС€СЃСЏ СѓР±С–Рє, Р°Р±СЃРѕР»СЋС‚РЅРѕ СѓСЃРµ С–РіРЅРѕСЂСѓСЋС‡Рё. РўРё РІС–РґС‡СѓРІР°С”С€, СЏРє РЅР°Р±С–РіР°С” Р¶Р°С…Р»РёРІР° РґРµРїСЂРµСЃС–СЏ С‚Р° Р¶РёС‚С‚СЏ РІС‚СЂР°С‡Р°С” СЃРІС–Р№ СЃРµРЅСЃ.<br/>
+"РџСЂРёС—С…Р°Р»Рё," - С‡СѓС”С€ РіРѕР»РѕСЃ РїРѕРіРѕРЅРёС‡Р° С– РѕР·РёСЂР°С”С€СЃСЏ РЅР°РІРєРѕР»Рѕ.<br/>
+Р’Рё Р·РЅР°С…РѕРґРёС‚РµСЃСЊ Р±С–Р»СЏ СЏРєРѕРіРѕСЃСЊ РґРѕСЂРѕРіРѕРіРѕ Р±СѓРґРёРЅРєСѓ, РїСЂРёРЅС†РµСЃР° РІР¶Рµ СЃС‚СЏРіРЅСѓР»Р° РґРѕРЅРёР·Сѓ СЃРІРѕС— РјР°РЅР°С‚РєРё С‚Р° РїРѕРєСѓСЂСЋС”, СЃРёРґСЏС‡Рё РЅР° РІР°Р»С–Р·С–. РўРµР¶ СЃРїСѓСЃРєР°С”С€СЃСЏ, СЃС–РґР°С”С€ РїРѕСЂСѓС‡, Р·Р°С‚СЏРіСѓС”С€СЃСЏ С—С— С†РёРіР°СЂРєРѕСЋ, РґСЂР°РєРѕРЅ РІС–РґР»С–С‚Р°С”.<br/>
+"РћСЃСЊ С‚СѓС‚ РјРё С– Р¶РёС‚РёРјРµРјРѕ, - РєР°Р¶Рµ РїСЂРёРЅС†РµСЃР°. - Р¦Рµ РЅР°С€Р° РґР°С‡Р°, РїСЂРѕ СЏРєСѓ РјР°Р»Рѕ С…С‚Рѕ Р·РЅР°С”. РџСЂРѕРґСѓРєС‚С–РІ С‚СѓС‚ Р»СЊРѕС…Рё РЅР°РїРѕРІРЅРµРЅС–, РїС–Р№Р»Р° Р±РѕС‡РєРё Р±РµР·РґРѕРЅРЅС–. РќРµ РїР°СЂСЃСЏ. РЇ РЅРµ СЃРµСЂР¶СѓСЃСЊ Р·Р° РІР±РёРІСЃС‚РІРѕ РјРѕРіРѕ Р±Р°С‚СЊРєР°. Р’С–РЅ РІСЃРµ РѕРґРЅРѕ Р±СѓРІ РјСѓРґРёР»РѕРј. РќРµ РґР°РІР°РІ РјРµРЅС– СЂРѕР·РІРёРІР°С‚РёСЃСЏ, СЏРє РѕСЃРѕР±РёСЃС‚РѕСЃС‚С–. Рђ С‚Р°Рє РјРё РѕС‡РѕР»РёРјРѕ Р СѓС… РћРїРѕСЂСѓ. Р’С–РґСЂРѕРґРёРјРѕ РЅР°СЂРѕРґРЅРёР№ СЃСѓРїСЂРѕС‚РёРІ!"<br/>
+РўРё РєРёРІР°С”С€ Сѓ РІС–РґРїРѕРІС–РґСЊ, РїРѕСЃРјС–С…Р°С”С€СЃСЏ С‚Р° РІРёРїСѓСЃРєР°С”С€ РєС–Р»СЊС†Рµ РґРёРјСѓ РІ РїРѕРІС–С‚СЂСЏ.
 </div>
 <div>
-<a href="0.html">КІНЕЦЬ  ?</a><br>
+<a href="0.html">РљР†РќР•Р¦Р¬  ?</a><br>
 </div>
 </body>
