--- a/loc/13i.html
+++ b/loc/13i.html
@@ -1,10 +1,10 @@
 <body>
-<div>"Дідька лисого! Ми про таке не домовлялися!" - скрикуєш ти та вимахуєш клинком майже перед носом Евглени.<br/>
-"Сонечко, - посміхається та. - Та ми взагалі ні про що не домовлялися. Твоя ціль - убити правителя та викрасти принцесу. Про винагороду мови не було. Все чесно.<br/>
-Ти скрикуєш своє ім'я та кидаєшся в атаку, махаючи мечем, наче мухобійкою. Евглена відбиває один удар, другий, третій, потім якимось чином опиняється позаду... Наступної миті ти відчуваєш ні з чим не зрівняний ефект, коли бачиш власне обезголовлене тіло, яке елегантно плюхається на підлогу за секунду після падіння голови.<br/>
-Думаю, не варто пояснювати, що це означає.
+<div>"Р”С–РґСЊРєР° Р»РёСЃРѕРіРѕ! РњРё РїСЂРѕ С‚Р°РєРµ РЅРµ РґРѕРјРѕРІР»СЏР»РёСЃСЏ!" - СЃРєСЂРёРєСѓС”С€ С‚Рё С‚Р° РІРёРјР°С…СѓС”С€ РєР»РёРЅРєРѕРј РјР°Р№Р¶Рµ РїРµСЂРµРґ РЅРѕСЃРѕРј Р•РІРіР»РµРЅРё.<br/>
+"РЎРѕРЅРµС‡РєРѕ, - РїРѕСЃРјС–С…Р°С”С‚СЊСЃСЏ С‚Р°. - РўР° РјРё РІР·Р°РіР°Р»С– РЅС– РїСЂРѕ С‰Рѕ РЅРµ РґРѕРјРѕРІР»СЏР»РёСЃСЏ. РўРІРѕСЏ С†С–Р»СЊ - СѓР±РёС‚Рё РїСЂР°РІРёС‚РµР»СЏ С‚Р° РІРёРєСЂР°СЃС‚Рё РїСЂРёРЅС†РµСЃСѓ. РџСЂРѕ РІРёРЅР°РіРѕСЂРѕРґСѓ РјРѕРІРё РЅРµ Р±СѓР»Рѕ. Р’СЃРµ С‡РµСЃРЅРѕ.<br/>
+РўРё СЃРєСЂРёРєСѓС”С€ СЃРІРѕС” С–Рј'СЏ С‚Р° РєРёРґР°С”С€СЃСЏ РІ Р°С‚Р°РєСѓ, РјР°С…Р°СЋС‡Рё РјРµС‡РµРј, РЅР°С‡Рµ РјСѓС…РѕР±С–Р№РєРѕСЋ. Р•РІРіР»РµРЅР° РІС–РґР±РёРІР°С” РѕРґРёРЅ СѓРґР°СЂ, РґСЂСѓРіРёР№, С‚СЂРµС‚С–Р№, РїРѕС‚С–Рј СЏРєРёРјРѕСЃСЊ С‡РёРЅРѕРј РѕРїРёРЅСЏС”С‚СЊСЃСЏ РїРѕР·Р°РґСѓ... РќР°СЃС‚СѓРїРЅРѕС— РјРёС‚С– С‚Рё РІС–РґС‡СѓРІР°С”С€ РЅС– Р· С‡РёРј РЅРµ Р·СЂС–РІРЅСЏРЅРёР№ РµС„РµРєС‚, РєРѕР»Рё Р±Р°С‡РёС€ РІР»Р°СЃРЅРµ РѕР±РµР·РіРѕР»РѕРІР»РµРЅРµ С‚С–Р»Рѕ, СЏРєРµ РµР»РµРіР°РЅС‚РЅРѕ РїР»СЋС…Р°С”С‚СЊСЃСЏ РЅР° РїС–РґР»РѕРіСѓ Р·Р° СЃРµРєСѓРЅРґСѓ РїС–СЃР»СЏ РїР°РґС–РЅРЅСЏ РіРѕР»РѕРІРё.<br/>
+Р”СѓРјР°СЋ, РЅРµ РІР°СЂС‚Рѕ РїРѕСЏСЃРЅСЋРІР°С‚Рё, С‰Рѕ С†Рµ РѕР·РЅР°С‡Р°С”.
 </div>
 <div>
-<a href="0.html">Гру закінчено</a><br>
+<a href="0.html">Р“СЂСѓ Р·Р°РєС–РЅС‡РµРЅРѕ</a><br>
 </div>
 </body>
