--- a/loc/13j.html
+++ b/loc/13j.html
@@ -1,8 +1,8 @@
 <body>
-<div>"Прикро, дуже прикро! - зітхає правитель. - Але хай так. Це твій вибір! Удачі тобі в подальшому житті!"<br/>
-Після цього він сплескує долонями і...
+<div>"РџСЂРёРєСЂРѕ, РґСѓР¶Рµ РїСЂРёРєСЂРѕ! - Р·С–С‚С…Р°С” РїСЂР°РІРёС‚РµР»СЊ. - РђР»Рµ С…Р°Р№ С‚Р°Рє. Р¦Рµ С‚РІС–Р№ РІРёР±С–СЂ! РЈРґР°С‡С– С‚РѕР±С– РІ РїРѕРґР°Р»СЊС€РѕРјСѓ Р¶РёС‚С‚С–!"<br/>
+РџС–СЃР»СЏ С†СЊРѕРіРѕ РІС–РЅ СЃРїР»РµСЃРєСѓС” РґРѕР»РѕРЅСЏРјРё С–...
 </div>
 <div>
-<a href="141.html">...і?!</a><br>
+<a href="141.html">...С–?!</a><br>
 </div>
 </body>
