--- a/loc/141.html
+++ b/loc/141.html
@@ -1,10 +1,10 @@
 <body>
-<div>Розплющуєш очі і бачиш себе у своїй кімнаті. На моніторі сусідяться вікно якоїсь фентезійної РПГ та музичний плеєр. Рубає якась пісня. Клавіатура звисає зі столу. Ти лежиш на підлозі біля крісла. Неподалік похропує друзяка. Наче все повернулося на свої місця.<br/>
-Підіймаєшся з підлоги та виходиш на балкон, ледве не перекинувши напівпорожню пластикову пляшку з обрізаним верхом. Дістаєш з пачки на підвіконні цигарку та запалюєш. Потім розумієш, що це позиціонує гру, як пропаганду тютюнопаління і тихенько бичкуєш, ніби і в думках не було. <br/>
-Вдихаєш повними грудьми свіже повітря, давишся вихлопами жигуля, що проїжджає знизу, та крізь кашель усміхаєшся, проказуючи:
+<div>Р РѕР·РїР»СЋС‰СѓС”С€ РѕС‡С– С– Р±Р°С‡РёС€ СЃРµР±Рµ Сѓ СЃРІРѕС—Р№ РєС–РјРЅР°С‚С–. РќР° РјРѕРЅС–С‚РѕСЂС– СЃСѓСЃС–РґСЏС‚СЊСЃСЏ РІС–РєРЅРѕ СЏРєРѕС—СЃСЊ С„РµРЅС‚РµР·С–Р№РЅРѕС— Р РџР“ С‚Р° РјСѓР·РёС‡РЅРёР№ РїР»РµС”СЂ. Р СѓР±Р°С” СЏРєР°СЃСЊ РїС–СЃРЅСЏ. РљР»Р°РІС–Р°С‚СѓСЂР° Р·РІРёСЃР°С” Р·С– СЃС‚РѕР»Сѓ. РўРё Р»РµР¶РёС€ РЅР° РїС–РґР»РѕР·С– Р±С–Р»СЏ РєСЂС–СЃР»Р°. РќРµРїРѕРґР°Р»С–Рє РїРѕС…СЂРѕРїСѓС” РґСЂСѓР·СЏРєР°. РќР°С‡Рµ РІСЃРµ РїРѕРІРµСЂРЅСѓР»РѕСЃСЏ РЅР° СЃРІРѕС— РјС–СЃС†СЏ.<br/>
+РџС–РґС–Р№РјР°С”С€СЃСЏ Р· РїС–РґР»РѕРіРё С‚Р° РІРёС…РѕРґРёС€ РЅР° Р±Р°Р»РєРѕРЅ, Р»РµРґРІРµ РЅРµ РїРµСЂРµРєРёРЅСѓРІС€Рё РЅР°РїС–РІРїРѕСЂРѕР¶РЅСЋ РїР»Р°СЃС‚РёРєРѕРІСѓ РїР»СЏС€РєСѓ Р· РѕР±СЂС–Р·Р°РЅРёРј РІРµСЂС…РѕРј. Р”С–СЃС‚Р°С”С€ Р· РїР°С‡РєРё РЅР° РїС–РґРІС–РєРѕРЅРЅС– С†РёРіР°СЂРєСѓ С‚Р° Р·Р°РїР°Р»СЋС”С€. РџРѕС‚С–Рј СЂРѕР·СѓРјС–С”С€, С‰Рѕ С†Рµ РїРѕР·РёС†С–РѕРЅСѓС” РіСЂСѓ, СЏРє РїСЂРѕРїР°РіР°РЅРґСѓ С‚СЋС‚СЋРЅРѕРїР°Р»С–РЅРЅСЏ С– С‚РёС…РµРЅСЊРєРѕ Р±РёС‡РєСѓС”С€, РЅС–Р±Рё С– РІ РґСѓРјРєР°С… РЅРµ Р±СѓР»Рѕ. <br/>
+Р’РґРёС…Р°С”С€ РїРѕРІРЅРёРјРё РіСЂСѓРґСЊРјРё СЃРІС–Р¶Рµ РїРѕРІС–С‚СЂСЏ, РґР°РІРёС€СЃСЏ РІРёС…Р»РѕРїР°РјРё Р¶РёРіСѓР»СЏ, С‰Рѕ РїСЂРѕС—Р¶РґР¶Р°С” Р·РЅРёР·Сѓ, С‚Р° РєСЂС–Р·СЊ РєР°С€РµР»СЊ СѓСЃРјС–С…Р°С”С€СЃСЏ, РїСЂРѕРєР°Р·СѓСЋС‡Рё:
 </div>
 <div>
-<a href="end.html">"Життя прекрасне, тому на цьому і закінчимо"</a><br>
-<a href="after.html">"Життя прекрасне, тому почитаємо і післямову"</a></br>
+<a href="end.html">"Р–РёС‚С‚СЏ РїСЂРµРєСЂР°СЃРЅРµ, С‚РѕРјСѓ РЅР° С†СЊРѕРјСѓ С– Р·Р°РєС–РЅС‡РёРјРѕ"</a><br>
+<a href="after.html">"Р–РёС‚С‚СЏ РїСЂРµРєСЂР°СЃРЅРµ, С‚РѕРјСѓ РїРѕС‡РёС‚Р°С”РјРѕ С– РїС–СЃР»СЏРјРѕРІСѓ"</a></br>
 </div>
 </body>
