--- a/loc/151.html
+++ b/loc/151.html
@@ -1,8 +1,8 @@
 <body>
-<div>Ти починаєш служити правителю вірою і правдою. Спершу отримуєш посаду стажера, потім молодшого слуги, потім служки, далі топ-слуги...<br/>
-На цьому кар'єрний зріст і закінчується. Правитель живе довго і щасливо, не хворіючи та не старіючи. Натомість ти з року в рік марнієш та помираєш у віці близько шістдесяти років, траванувшись скисшим пивом. Остання думка перед смертю була - "Невже життєвий поворот був таки неправильний?"
+<div>РўРё РїРѕС‡РёРЅР°С”С€ СЃР»СѓР¶РёС‚Рё РїСЂР°РІРёС‚РµР»СЋ РІС–СЂРѕСЋ С– РїСЂР°РІРґРѕСЋ. РЎРїРµСЂС€Сѓ РѕС‚СЂРёРјСѓС”С€ РїРѕСЃР°РґСѓ СЃС‚Р°Р¶РµСЂР°, РїРѕС‚С–Рј РјРѕР»РѕРґС€РѕРіРѕ СЃР»СѓРіРё, РїРѕС‚С–Рј СЃР»СѓР¶РєРё, РґР°Р»С– С‚РѕРї-СЃР»СѓРіРё...<br/>
+РќР° С†СЊРѕРјСѓ РєР°СЂ'С”СЂРЅРёР№ Р·СЂС–СЃС‚ С– Р·Р°РєС–РЅС‡СѓС”С‚СЊСЃСЏ. РџСЂР°РІРёС‚РµР»СЊ Р¶РёРІРµ РґРѕРІРіРѕ С– С‰Р°СЃР»РёРІРѕ, РЅРµ С…РІРѕСЂС–СЋС‡Рё С‚Р° РЅРµ СЃС‚Р°СЂС–СЋС‡Рё. РќР°С‚РѕРјС–СЃС‚СЊ С‚Рё Р· СЂРѕРєСѓ РІ СЂС–Рє РјР°СЂРЅС–С”С€ С‚Р° РїРѕРјРёСЂР°С”С€ Сѓ РІС–С†С– Р±Р»РёР·СЊРєРѕ С€С–СЃС‚РґРµСЃСЏС‚Рё СЂРѕРєС–РІ, С‚СЂР°РІР°РЅСѓРІС€РёСЃСЊ СЃРєРёСЃС€РёРј РїРёРІРѕРј. РћСЃС‚Р°РЅРЅСЏ РґСѓРјРєР° РїРµСЂРµРґ СЃРјРµСЂС‚СЋ Р±СѓР»Р° - "РќРµРІР¶Рµ Р¶РёС‚С‚С”РІРёР№ РїРѕРІРѕСЂРѕС‚ Р±СѓРІ С‚Р°РєРё РЅРµРїСЂР°РІРёР»СЊРЅРёР№?"
 </div>
 <div>
-<a href="0.html">Гру закінчено</a><br>
+<a href="0.html">Р“СЂСѓ Р·Р°РєС–РЅС‡РµРЅРѕ</a><br>
 </div>
 </body>
