--- a/loc/161.html
+++ b/loc/161.html
@@ -1,10 +1,10 @@
 <body>
-<div>"Агов! - скрикуєш ти. - Привіт!"<br/>
-Тінь нагорі незграбно змахує руками і донизу падає те, що там збиралися курити. На цигарці маленькими літерами викарбувана марка - "Пихман". Твоє дослідження перериває жіночий голос згори:<br/>
-"Слухай, ти! Досить байдики бити! Забігай сюди. Потріщимо за життя."
+<div>"РђРіРѕРІ! - СЃРєСЂРёРєСѓС”С€ С‚Рё. - РџСЂРёРІС–С‚!"<br/>
+РўС–РЅСЊ РЅР°РіРѕСЂС– РЅРµР·РіСЂР°Р±РЅРѕ Р·РјР°С…СѓС” СЂСѓРєР°РјРё С– РґРѕРЅРёР·Сѓ РїР°РґР°С” С‚Рµ, С‰Рѕ С‚Р°Рј Р·Р±РёСЂР°Р»РёСЃСЏ РєСѓСЂРёС‚Рё. РќР° С†РёРіР°СЂС†С– РјР°Р»РµРЅСЊРєРёРјРё Р»С–С‚РµСЂР°РјРё РІРёРєР°СЂР±СѓРІР°РЅР° РјР°СЂРєР° - "РџРёС…РјР°РЅ". РўРІРѕС” РґРѕСЃР»С–РґР¶РµРЅРЅСЏ РїРµСЂРµСЂРёРІР°С” Р¶С–РЅРѕС‡РёР№ РіРѕР»РѕСЃ Р·РіРѕСЂРё:<br/>
+"РЎР»СѓС…Р°Р№, С‚Рё! Р”РѕСЃРёС‚СЊ Р±Р°Р№РґРёРєРё Р±РёС‚Рё! Р—Р°Р±С–РіР°Р№ СЃСЋРґРё. РџРѕС‚СЂС–С‰РёРјРѕ Р·Р° Р¶РёС‚С‚СЏ."
 </div>
 <div>
-<a href="11.html">Побігти городами</a><br>
-<a href="171.html">Зайти всередину</a></br>
+<a href="11.html">РџРѕР±С–РіС‚Рё РіРѕСЂРѕРґР°РјРё</a><br>
+<a href="171.html">Р—Р°Р№С‚Рё РІСЃРµСЂРµРґРёРЅСѓ</a></br>
 </div>
 </body>
