--- a/loc/171.html
+++ b/loc/171.html
@@ -1,11 +1,11 @@
 <body>
-<div>Перед тобою відчиняється потаємна дверця і ти потихеньку чапаєш східцями нагору. На одному із поверхів чуєш з бокових дверцят "Псс! Сюди!" і заходиш туди. Там за столиком сидить принцеса і малює собі одну із брів. Вона виходить товщою за іншу, тому мадмуазель вже вкотре сердиться, витирає і перемальовує.<br/>
-"Не стій, не стій - сідай!" - каже тобі, не відриваючись від роботи.<br/>
-Сідаєш на найближчий стілець. Принцеса з горем пополам домальовує брови та підходить:<br/>
-"Тобі не передати як воно - бути єдиною дитиною. Мені ні з ким бавитися, ні з ким потусити, навіть палити на дах доводиться самій. До речі, цигарка моя в тебе?"
+<div>РџРµСЂРµРґ С‚РѕР±РѕСЋ РІС–РґС‡РёРЅСЏС”С‚СЊСЃСЏ РїРѕС‚Р°С”РјРЅР° РґРІРµСЂС†СЏ С– С‚Рё РїРѕС‚РёС…РµРЅСЊРєСѓ С‡Р°РїР°С”С€ СЃС…С–РґС†СЏРјРё РЅР°РіРѕСЂСѓ. РќР° РѕРґРЅРѕРјСѓ С–Р· РїРѕРІРµСЂС…С–РІ С‡СѓС”С€ Р· Р±РѕРєРѕРІРёС… РґРІРµСЂС†СЏС‚ "РџСЃСЃ! РЎСЋРґРё!" С– Р·Р°С…РѕРґРёС€ С‚СѓРґРё. РўР°Рј Р·Р° СЃС‚РѕР»РёРєРѕРј СЃРёРґРёС‚СЊ РїСЂРёРЅС†РµСЃР° С– РјР°Р»СЋС” СЃРѕР±С– РѕРґРЅСѓ С–Р· Р±СЂС–РІ. Р’РѕРЅР° РІРёС…РѕРґРёС‚СЊ С‚РѕРІС‰РѕСЋ Р·Р° С–РЅС€Сѓ, С‚РѕРјСѓ РјР°РґРјСѓР°Р·РµР»СЊ РІР¶Рµ РІРєРѕС‚СЂРµ СЃРµСЂРґРёС‚СЊСЃСЏ, РІРёС‚РёСЂР°С” С– РїРµСЂРµРјР°Р»СЊРѕРІСѓС”.<br/>
+"РќРµ СЃС‚С–Р№, РЅРµ СЃС‚С–Р№ - СЃС–РґР°Р№!" - РєР°Р¶Рµ С‚РѕР±С–, РЅРµ РІС–РґСЂРёРІР°СЋС‡РёСЃСЊ РІС–Рґ СЂРѕР±РѕС‚Рё.<br/>
+РЎС–РґР°С”С€ РЅР° РЅР°Р№Р±Р»РёР¶С‡РёР№ СЃС‚С–Р»РµС†СЊ. РџСЂРёРЅС†РµСЃР° Р· РіРѕСЂРµРј РїРѕРїРѕР»Р°Рј РґРѕРјР°Р»СЊРѕРІСѓС” Р±СЂРѕРІРё С‚Р° РїС–РґС…РѕРґРёС‚СЊ:<br/>
+"РўРѕР±С– РЅРµ РїРµСЂРµРґР°С‚Рё СЏРє РІРѕРЅРѕ - Р±СѓС‚Рё С”РґРёРЅРѕСЋ РґРёС‚РёРЅРѕСЋ. РњРµРЅС– РЅС– Р· РєРёРј Р±Р°РІРёС‚РёСЃСЏ, РЅС– Р· РєРёРј РїРѕС‚СѓСЃРёС‚Рё, РЅР°РІС–С‚СЊ РїР°Р»РёС‚Рё РЅР° РґР°С… РґРѕРІРѕРґРёС‚СЊСЃСЏ СЃР°РјС–Р№. Р”Рѕ СЂРµС‡С–, С†РёРіР°СЂРєР° РјРѕСЏ РІ С‚РµР±Рµ?"
 </div>
 <div>
-<a href="172.html">Так! У мене</a><br>
-<a href="172a.html">Ні, не в мене</a></br>
+<a href="172.html">РўР°Рє! РЈ РјРµРЅРµ</a><br>
+<a href="172a.html">РќС–, РЅРµ РІ РјРµРЅРµ</a></br>
 </div>
 </body>
