--- a/loc/172a.html
+++ b/loc/172a.html
@@ -1,8 +1,8 @@
 <body>
-<div>"Прикро, але пофігу - в мене ще півпачки. І ще десять блоків! - каже принцеса і підморгує. - Я дуже рада, що ми зустрілись. Батя мій все про якісь перспективи говорить, про розвиток, про потомство, про ше якусь байду. Нудьга же, ну? А я тусити хочу! Розважатися та квасити! А це складно, коли всюди змови, інтриги і самі лиш дорослі. А залишайся в мене! Я тебе з татком познайомлю. Чи не треба?"
+<div>"РџСЂРёРєСЂРѕ, Р°Р»Рµ РїРѕС„С–РіСѓ - РІ РјРµРЅРµ С‰Рµ РїС–РІРїР°С‡РєРё. Р† С‰Рµ РґРµСЃСЏС‚СЊ Р±Р»РѕРєС–РІ! - РєР°Р¶Рµ РїСЂРёРЅС†РµСЃР° С– РїС–РґРјРѕСЂРіСѓС”. - РЇ РґСѓР¶Рµ СЂР°РґР°, С‰Рѕ РјРё Р·СѓСЃС‚СЂС–Р»РёСЃСЊ. Р‘Р°С‚СЏ РјС–Р№ РІСЃРµ РїСЂРѕ СЏРєС–СЃСЊ РїРµСЂСЃРїРµРєС‚РёРІРё РіРѕРІРѕСЂРёС‚СЊ, РїСЂРѕ СЂРѕР·РІРёС‚РѕРє, РїСЂРѕ РїРѕС‚РѕРјСЃС‚РІРѕ, РїСЂРѕ С€Рµ СЏРєСѓСЃСЊ Р±Р°Р№РґСѓ. РќСѓРґСЊРіР° Р¶Рµ, РЅСѓ? Рђ СЏ С‚СѓСЃРёС‚Рё С…РѕС‡Сѓ! Р РѕР·РІР°Р¶Р°С‚РёСЃСЏ С‚Р° РєРІР°СЃРёС‚Рё! Рђ С†Рµ СЃРєР»Р°РґРЅРѕ, РєРѕР»Рё РІСЃСЋРґРё Р·РјРѕРІРё, С–РЅС‚СЂРёРіРё С– СЃР°РјС– Р»РёС€ РґРѕСЂРѕСЃР»С–. Рђ Р·Р°Р»РёС€Р°Р№СЃСЏ РІ РјРµРЅРµ! РЇ С‚РµР±Рµ Р· С‚Р°С‚РєРѕРј РїРѕР·РЅР°Р№РѕРјР»СЋ. Р§Рё РЅРµ С‚СЂРµР±Р°?"
 </div>
 <div>
-<a href="173.html">Так! Це було б непогано.</a><br>
-<a href="174.html">Думаю, краще йому не знати</a></br>
+<a href="173.html">РўР°Рє! Р¦Рµ Р±СѓР»Рѕ Р± РЅРµРїРѕРіР°РЅРѕ.</a><br>
+<a href="174.html">Р”СѓРјР°СЋ, РєСЂР°С‰Рµ Р№РѕРјСѓ РЅРµ Р·РЅР°С‚Рё</a></br>
 </div>
 </body>
