--- a/loc/173.html
+++ b/loc/173.html
@@ -1,9 +1,9 @@
 <body>
-<div>"Тоді пішли прямо зараз!" - вигукує принцеса.<br/>
-"Думаю, надто рано, - кажеш ти. - Давай почекаємо вечері, і десь там потім..."<br/>
-"Гм, - чухає носа вона. - Добре. Це розумно. Якраз усі мізки у нього на місці будуть. Вирішено. Після вечері, перед сном відправлю тебе знайомитися з батьком! А поки давай бавитися - у мене є ляльковий театр. Покажи виставу!"
+<div>"РўРѕРґС– РїС–С€Р»Рё РїСЂСЏРјРѕ Р·Р°СЂР°Р·!" - РІРёРіСѓРєСѓС” РїСЂРёРЅС†РµСЃР°.<br/>
+"Р”СѓРјР°СЋ, РЅР°РґС‚Рѕ СЂР°РЅРѕ, - РєР°Р¶РµС€ С‚Рё. - Р”Р°РІР°Р№ РїРѕС‡РµРєР°С”РјРѕ РІРµС‡РµСЂС–, С– РґРµСЃСЊ С‚Р°Рј РїРѕС‚С–Рј..."<br/>
+"Р“Рј, - С‡СѓС…Р°С” РЅРѕСЃР° РІРѕРЅР°. - Р”РѕР±СЂРµ. Р¦Рµ СЂРѕР·СѓРјРЅРѕ. РЇРєСЂР°Р· СѓСЃС– РјС–Р·РєРё Сѓ РЅСЊРѕРіРѕ РЅР° РјС–СЃС†С– Р±СѓРґСѓС‚СЊ. Р’РёСЂС–С€РµРЅРѕ. РџС–СЃР»СЏ РІРµС‡РµСЂС–, РїРµСЂРµРґ СЃРЅРѕРј РІС–РґРїСЂР°РІР»СЋ С‚РµР±Рµ Р·РЅР°Р№РѕРјРёС‚РёСЃСЏ Р· Р±Р°С‚СЊРєРѕРј! Рђ РїРѕРєРё РґР°РІР°Р№ Р±Р°РІРёС‚РёСЃСЏ - Сѓ РјРµРЅРµ С” Р»СЏР»СЊРєРѕРІРёР№ С‚РµР°С‚СЂ. РџРѕРєР°Р¶Рё РІРёСЃС‚Р°РІСѓ!"
 </div>
 <div>
-<a href="175.html">Згаяти решту часу за показом вистави під ексцентричною назвою "ПИХМАН та всі-всі-всі"</a><br>
+<a href="175.html">Р—РіР°СЏС‚Рё СЂРµС€С‚Сѓ С‡Р°СЃСѓ Р·Р° РїРѕРєР°Р·РѕРј РІРёСЃС‚Р°РІРё РїС–Рґ РµРєСЃС†РµРЅС‚СЂРёС‡РЅРѕСЋ РЅР°Р·РІРѕСЋ "РџРРҐРњРђРќ С‚Р° РІСЃС–-РІСЃС–-РІСЃС–"</a><br>
 </div>
 </body>
