--- a/loc/174.html
+++ b/loc/174.html
@@ -1,8 +1,8 @@
 <body>
-<div>"Може, ти й маєш рацію, - каже принцеса. - Добре. Тоді ти добре ховайся, коли мене не буде в кімнаті, а я приноситиму тобі поїсти та попити."<br/>
-Ти згоджуєшся. Життя стає простим та спокійним. Більш не потрібно думати про їжу, квартплату, комуналку, сімейні чвари та політичну ситуацію. Ти просто живеш та розслабляєшся...<br/>
-Поки одного разу випадково не зайшов правитель, коли ви гралися в лицарів і неправильно все зрозумівши, не розмазав тебе на клапті. Думаю, не варто тут і казати, що...</div>
+<div>"РњРѕР¶Рµ, С‚Рё Р№ РјР°С”С€ СЂР°С†С–СЋ, - РєР°Р¶Рµ РїСЂРёРЅС†РµСЃР°. - Р”РѕР±СЂРµ. РўРѕРґС– С‚Рё РґРѕР±СЂРµ С…РѕРІР°Р№СЃСЏ, РєРѕР»Рё РјРµРЅРµ РЅРµ Р±СѓРґРµ РІ РєС–РјРЅР°С‚С–, Р° СЏ РїСЂРёРЅРѕСЃРёС‚РёРјСѓ С‚РѕР±С– РїРѕС—СЃС‚Рё С‚Р° РїРѕРїРёС‚Рё."<br/>
+РўРё Р·РіРѕРґР¶СѓС”С€СЃСЏ. Р–РёС‚С‚СЏ СЃС‚Р°С” РїСЂРѕСЃС‚РёРј С‚Р° СЃРїРѕРєС–Р№РЅРёРј. Р‘С–Р»СЊС€ РЅРµ РїРѕС‚СЂС–Р±РЅРѕ РґСѓРјР°С‚Рё РїСЂРѕ С—Р¶Сѓ, РєРІР°СЂС‚РїР»Р°С‚Сѓ, РєРѕРјСѓРЅР°Р»РєСѓ, СЃС–РјРµР№РЅС– С‡РІР°СЂРё С‚Р° РїРѕР»С–С‚РёС‡РЅСѓ СЃРёС‚СѓР°С†С–СЋ. РўРё РїСЂРѕСЃС‚Рѕ Р¶РёРІРµС€ С‚Р° СЂРѕР·СЃР»Р°Р±Р»СЏС”С€СЃСЏ...<br/>
+РџРѕРєРё РѕРґРЅРѕРіРѕ СЂР°Р·Сѓ РІРёРїР°РґРєРѕРІРѕ РЅРµ Р·Р°Р№С€РѕРІ РїСЂР°РІРёС‚РµР»СЊ, РєРѕР»Рё РІРё РіСЂР°Р»РёСЃСЏ РІ Р»РёС†Р°СЂС–РІ С– РЅРµРїСЂР°РІРёР»СЊРЅРѕ РІСЃРµ Р·СЂРѕР·СѓРјС–РІС€Рё, РЅРµ СЂРѕР·РјР°Р·Р°РІ С‚РµР±Рµ РЅР° РєР»Р°РїС‚С–. Р”СѓРјР°СЋ, РЅРµ РІР°СЂС‚Рѕ С‚СѓС‚ С– РєР°Р·Р°С‚Рё, С‰Рѕ...</div>
 <div>
-<a href="0.html">Гру закінчено</a><br>
+<a href="0.html">Р“СЂСѓ Р·Р°РєС–РЅС‡РµРЅРѕ</a><br>
 </div>
 </body>
