--- a/loc/175.html
+++ b/loc/175.html
@@ -1,11 +1,11 @@
 <body>
-<div>Година Г настала. Принцеса вводить тебе в зал, де на троні сидить правитель. Ти вклоняєшся тому і він теж ледве помітно робить кивок головою.<br/>
-"Доброї ночі, ясновельможний, - кажеш ти. - Хай Творець продовжить твої дні."<br/>
-"Приємно чути це з твоїх вуст, о незнайома особо, - відповідає той. - Але я чув про тебе від своєї доньки. Вона каже, ви потоваришували і просить про твоє поселення в замку."<br/>
-"Так і є. Це була б честь для мене."<br/>
-"Що ж, думаю, це непогана ідея. Хай буде так!" - каже правитель і стукає посохом об підлогу.
+<div>Р“РѕРґРёРЅР° Р“ РЅР°СЃС‚Р°Р»Р°. РџСЂРёРЅС†РµСЃР° РІРІРѕРґРёС‚СЊ С‚РµР±Рµ РІ Р·Р°Р», РґРµ РЅР° С‚СЂРѕРЅС– СЃРёРґРёС‚СЊ РїСЂР°РІРёС‚РµР»СЊ. РўРё РІРєР»РѕРЅСЏС”С€СЃСЏ С‚РѕРјСѓ С– РІС–РЅ С‚РµР¶ Р»РµРґРІРµ РїРѕРјС–С‚РЅРѕ СЂРѕР±РёС‚СЊ РєРёРІРѕРє РіРѕР»РѕРІРѕСЋ.<br/>
+"Р”РѕР±СЂРѕС— РЅРѕС‡С–, СЏСЃРЅРѕРІРµР»СЊРјРѕР¶РЅРёР№, - РєР°Р¶РµС€ С‚Рё. - РҐР°Р№ РўРІРѕСЂРµС†СЊ РїСЂРѕРґРѕРІР¶РёС‚СЊ С‚РІРѕС— РґРЅС–."<br/>
+"РџСЂРёС”РјРЅРѕ С‡СѓС‚Рё С†Рµ Р· С‚РІРѕС—С… РІСѓСЃС‚, Рѕ РЅРµР·РЅР°Р№РѕРјР° РѕСЃРѕР±Рѕ, - РІС–РґРїРѕРІС–РґР°С” С‚РѕР№. - РђР»Рµ СЏ С‡СѓРІ РїСЂРѕ С‚РµР±Рµ РІС–Рґ СЃРІРѕС”С— РґРѕРЅСЊРєРё. Р’РѕРЅР° РєР°Р¶Рµ, РІРё РїРѕС‚РѕРІР°СЂРёС€СѓРІР°Р»Рё С– РїСЂРѕСЃРёС‚СЊ РїСЂРѕ С‚РІРѕС” РїРѕСЃРµР»РµРЅРЅСЏ РІ Р·Р°РјРєСѓ."<br/>
+"РўР°Рє С– С”. Р¦Рµ Р±СѓР»Р° Р± С‡РµСЃС‚СЊ РґР»СЏ РјРµРЅРµ."<br/>
+"Р©Рѕ Р¶, РґСѓРјР°СЋ, С†Рµ РЅРµРїРѕРіР°РЅР° С–РґРµСЏ. РҐР°Р№ Р±СѓРґРµ С‚Р°Рє!" - РєР°Р¶Рµ РїСЂР°РІРёС‚РµР»СЊ С– СЃС‚СѓРєР°С” РїРѕСЃРѕС…РѕРј РѕР± РїС–РґР»РѕРіСѓ.
 </div>
 <div>
-<a href="138.html">Усміхнутися у відповідь</a><br>
+<a href="138.html">РЈСЃРјС–С…РЅСѓС‚РёСЃСЏ Сѓ РІС–РґРїРѕРІС–РґСЊ</a><br>
 </div>
 </body>
