--- a/loc/21.html
+++ b/loc/21.html
@@ -1,9 +1,9 @@
 <body>
-<div>Дракон від несподіванки гикає, ледве не давиться цукеркою і підходить ближче. "О, прівєт!" - каже він, виймає маркер і щось малює тобі на щиту (так, в тебе є щит - я забув сказати). Потім підморгує, знову всідається посеред галявини та далі жує чупа-чупс, час від часу помахуючи булавою над своєю макітрою.
+<div>Р”СЂР°РєРѕРЅ РІС–Рґ РЅРµСЃРїРѕРґС–РІР°РЅРєРё РіРёРєР°С”, Р»РµРґРІРµ РЅРµ РґР°РІРёС‚СЊСЃСЏ С†СѓРєРµСЂРєРѕСЋ С– РїС–РґС…РѕРґРёС‚СЊ Р±Р»РёР¶С‡Рµ. "Рћ, РїСЂС–РІС”С‚!" - РєР°Р¶Рµ РІС–РЅ, РІРёР№РјР°С” РјР°СЂРєРµСЂ С– С‰РѕСЃСЊ РјР°Р»СЋС” С‚РѕР±С– РЅР° С‰РёС‚Сѓ (С‚Р°Рє, РІ С‚РµР±Рµ С” С‰РёС‚ - СЏ Р·Р°Р±СѓРІ СЃРєР°Р·Р°С‚Рё). РџРѕС‚С–Рј РїС–РґРјРѕСЂРіСѓС”, Р·РЅРѕРІСѓ РІСЃС–РґР°С”С‚СЊСЃСЏ РїРѕСЃРµСЂРµРґ РіР°Р»СЏРІРёРЅРё С‚Р° РґР°Р»С– Р¶СѓС” С‡СѓРїР°-С‡СѓРїСЃ, С‡Р°СЃ РІС–Рґ С‡Р°СЃСѓ РїРѕРјР°С…СѓСЋС‡Рё Р±СѓР»Р°РІРѕСЋ РЅР°Рґ СЃРІРѕС”СЋ РјР°РєС–С‚СЂРѕСЋ.
 <br>
-Тобі нічого не залишається, окрім як...</div>
+РўРѕР±С– РЅС–С‡РѕРіРѕ РЅРµ Р·Р°Р»РёС€Р°С”С‚СЊСЃСЏ, РѕРєСЂС–Рј СЏРє...</div>
 <div>
-<a href="01.html">...піти назад.</a><br>
-<a href="31.html">...піти далі </a></br>
+<a href="01.html">...РїС–С‚Рё РЅР°Р·Р°Рґ.</a><br>
+<a href="31.html">...РїС–С‚Рё РґР°Р»С– </a></br>
 </div>
 </body>
