--- a/loc/22.html
+++ b/loc/22.html
@@ -1,14 +1,14 @@
 <body>
-<div>Дракон здригається, обертається і ми бачимо, як його очі наливаються червоним. Він підскакує, змахує булавою і зносить півдерева над твоєю головою. Потім верещить, хапає тебе в руку, підіймає до рівня своєї голови і кричить "Ти що, БЛЯТЬ, ОХУЇВ, НАХУЙ?! А раптом діти, СУКА, грають?! НАХУЯ ти матюжишся?"
+<div>Р”СЂР°РєРѕРЅ Р·РґСЂРёРіР°С”С‚СЊСЃСЏ, РѕР±РµСЂС‚Р°С”С‚СЊСЃСЏ С– РјРё Р±Р°С‡РёРјРѕ, СЏРє Р№РѕРіРѕ РѕС‡С– РЅР°Р»РёРІР°СЋС‚СЊСЃСЏ С‡РµСЂРІРѕРЅРёРј. Р’С–РЅ РїС–РґСЃРєР°РєСѓС”, Р·РјР°С…СѓС” Р±СѓР»Р°РІРѕСЋ С– Р·РЅРѕСЃРёС‚СЊ РїС–РІРґРµСЂРµРІР° РЅР°Рґ С‚РІРѕС”СЋ РіРѕР»РѕРІРѕСЋ. РџРѕС‚С–Рј РІРµСЂРµС‰РёС‚СЊ, С…Р°РїР°С” С‚РµР±Рµ РІ СЂСѓРєСѓ, РїС–РґС–Р№РјР°С” РґРѕ СЂС–РІРЅСЏ СЃРІРѕС”С— РіРѕР»РѕРІРё С– РєСЂРёС‡РёС‚СЊ "РўРё С‰Рѕ, Р‘Р›РЇРўР¬, РћРҐРЈР‡Р’, РќРђРҐРЈР™?! Рђ СЂР°РїС‚РѕРј РґС–С‚Рё, РЎРЈРљРђ, РіСЂР°СЋС‚СЊ?! РќРђРҐРЈРЇ С‚Рё РјР°С‚СЋР¶РёС€СЃСЏ?"
 <br>
-"Я хоча б запікав символами," - відповідаєш ти.
+"РЇ С…РѕС‡Р° Р± Р·Р°РїС–РєР°РІ СЃРёРјРІРѕР»Р°РјРё," - РІС–РґРїРѕРІС–РґР°С”С€ С‚Рё.
 <br>
-"БЛЯЯЯЯТЬ!" - кричить дракон, починає диміти і торпедою злітає в небеса. За мить і слід його зникає.
+"Р‘Р›РЇРЇРЇРЇРўР¬!" - РєСЂРёС‡РёС‚СЊ РґСЂР°РєРѕРЅ, РїРѕС‡РёРЅР°С” РґРёРјС–С‚Рё С– С‚РѕСЂРїРµРґРѕСЋ Р·Р»С–С‚Р°С” РІ РЅРµР±РµСЃР°. Р—Р° РјРёС‚СЊ С– СЃР»С–Рґ Р№РѕРіРѕ Р·РЅРёРєР°С”.
 <br>
-Після такого шоу вихід лиш один.
+РџС–СЃР»СЏ С‚Р°РєРѕРіРѕ С€РѕСѓ РІРёС…С–Рґ Р»РёС€ РѕРґРёРЅ.
 </div>
 <div>
-<a href="31.html">Рухатися далі</a><br>
-<a href="01.html">Почати з самісінького початку і більше не обирати цей варіант</a></br>
+<a href="31.html">Р СѓС…Р°С‚РёСЃСЏ РґР°Р»С–</a><br>
+<a href="01.html">РџРѕС‡Р°С‚Рё Р· СЃР°РјС–СЃС–РЅСЊРєРѕРіРѕ РїРѕС‡Р°С‚РєСѓ С– Р±С–Р»СЊС€Рµ РЅРµ РѕР±РёСЂР°С‚Рё С†РµР№ РІР°СЂС–Р°РЅС‚</a></br>
 </div>
 </body>
