--- a/loc/31.html
+++ b/loc/31.html
@@ -1,7 +1,7 @@
 <body>
-<div>Непролазні хащі тривали ще рівно дванадцять кроків. Потім ти бачиш велетенський пагорб, на якому майорить червоно-чорний стяг. А також велику купу гілляк, якими точно хотіли щось замаскувати. Але що ж саме? Звичайно, ти вирішуєш...</div>
+<div>РќРµРїСЂРѕР»Р°Р·РЅС– С…Р°С‰С– С‚СЂРёРІР°Р»Рё С‰Рµ СЂС–РІРЅРѕ РґРІР°РЅР°РґС†СЏС‚СЊ РєСЂРѕРєС–РІ. РџРѕС‚С–Рј С‚Рё Р±Р°С‡РёС€ РІРµР»РµС‚РµРЅСЃСЊРєРёР№ РїР°РіРѕСЂР±, РЅР° СЏРєРѕРјСѓ РјР°Р№РѕСЂРёС‚СЊ С‡РµСЂРІРѕРЅРѕ-С‡РѕСЂРЅРёР№ СЃС‚СЏРі. Рђ С‚Р°РєРѕР¶ РІРµР»РёРєСѓ РєСѓРїСѓ РіС–Р»Р»СЏРє, СЏРєРёРјРё С‚РѕС‡РЅРѕ С…РѕС‚С–Р»Рё С‰РѕСЃСЊ Р·Р°РјР°СЃРєСѓРІР°С‚Рё. РђР»Рµ С‰Рѕ Р¶ СЃР°РјРµ? Р—РІРёС‡Р°Р№РЅРѕ, С‚Рё РІРёСЂС–С€СѓС”С€...</div>
 <div>
-<a href="41.html">Підійти ближче</a><br>
-<a href="42.html">Погукати гучніше - раптом хтось вийде</a></br>
+<a href="41.html">РџС–РґС–Р№С‚Рё Р±Р»РёР¶С‡Рµ</a><br>
+<a href="42.html">РџРѕРіСѓРєР°С‚Рё РіСѓС‡РЅС–С€Рµ - СЂР°РїС‚РѕРј С…С‚РѕСЃСЊ РІРёР№РґРµ</a></br>
 </div>
 </body>
