--- a/loc/41.html
+++ b/loc/41.html
@@ -1,9 +1,9 @@
 <body>
-<div>Крадучись, наче справжній шпигун, ти переміщаєшся майже упритул до печери і розглядаєш купу звалених гілляк. Вочевидь, це не просто гілляки, а цілком замасковане ЩОСЬ (можливо, хід). Під ногами хрускає гілка і ти завмираєш, немов школяр спалений за смалінням цигарок у туалеті. Але наче минулося...<br/>
-Чи ні?
+<div>РљСЂР°РґСѓС‡РёСЃСЊ, РЅР°С‡Рµ СЃРїСЂР°РІР¶РЅС–Р№ С€РїРёРіСѓРЅ, С‚Рё РїРµСЂРµРјС–С‰Р°С”С€СЃСЏ РјР°Р№Р¶Рµ СѓРїСЂРёС‚СѓР» РґРѕ РїРµС‡РµСЂРё С– СЂРѕР·РіР»СЏРґР°С”С€ РєСѓРїСѓ Р·РІР°Р»РµРЅРёС… РіС–Р»Р»СЏРє. Р’РѕС‡РµРІРёРґСЊ, С†Рµ РЅРµ РїСЂРѕСЃС‚Рѕ РіС–Р»Р»СЏРєРё, Р° С†С–Р»РєРѕРј Р·Р°РјР°СЃРєРѕРІР°РЅРµ Р©РћРЎР¬ (РјРѕР¶Р»РёРІРѕ, С…С–Рґ). РџС–Рґ РЅРѕРіР°РјРё С…СЂСѓСЃРєР°С” РіС–Р»РєР° С– С‚Рё Р·Р°РІРјРёСЂР°С”С€, РЅРµРјРѕРІ С€РєРѕР»СЏСЂ СЃРїР°Р»РµРЅРёР№ Р·Р° СЃРјР°Р»С–РЅРЅСЏРј С†РёРіР°СЂРѕРє Сѓ С‚СѓР°Р»РµС‚С–. РђР»Рµ РЅР°С‡Рµ РјРёРЅСѓР»РѕСЃСЏ...<br/>
+Р§Рё РЅС–?
 </div>
 <div>
-<a href="51.html">Звичайно, минулося.</a><br>
-<a href="52.html">Звичайно, що ні.</a></br>
+<a href="51.html">Р—РІРёС‡Р°Р№РЅРѕ, РјРёРЅСѓР»РѕСЃСЏ.</a><br>
+<a href="52.html">Р—РІРёС‡Р°Р№РЅРѕ, С‰Рѕ РЅС–.</a></br>
 </div>
 </body>
