--- a/loc/42.html
+++ b/loc/42.html
@@ -1,8 +1,8 @@
 <body>
-<div>"АААГОООООВ!!" - верещиш, наче недорізаний бурундук, чуєш легенький свист, потім щось обпалює тіло в правому плечі, в сонячному сплетінні та точно посередині горла. "Який красивий колір крові," - помічаєш ти і змінюєш свою позицію на строго горизонтальну.<br/>
-Уже помираючи, бачиш чиїсь ноги в шкіряних капцях, які кілька разів буцають твоє тіло, потім щось хапає за комір і відтягає кудись у темряву, де світ остаточно і згасає. 
+<div>"РђРђРђР“РћРћРћРћРћР’!!" - РІРµСЂРµС‰РёС€, РЅР°С‡Рµ РЅРµРґРѕСЂС–Р·Р°РЅРёР№ Р±СѓСЂСѓРЅРґСѓРє, С‡СѓС”С€ Р»РµРіРµРЅСЊРєРёР№ СЃРІРёСЃС‚, РїРѕС‚С–Рј С‰РѕСЃСЊ РѕР±РїР°Р»СЋС” С‚С–Р»Рѕ РІ РїСЂР°РІРѕРјСѓ РїР»РµС‡С–, РІ СЃРѕРЅСЏС‡РЅРѕРјСѓ СЃРїР»РµС‚С–РЅРЅС– С‚Р° С‚РѕС‡РЅРѕ РїРѕСЃРµСЂРµРґРёРЅС– РіРѕСЂР»Р°. "РЇРєРёР№ РєСЂР°СЃРёРІРёР№ РєРѕР»С–СЂ РєСЂРѕРІС–," - РїРѕРјС–С‡Р°С”С€ С‚Рё С– Р·РјС–РЅСЋС”С€ СЃРІРѕСЋ РїРѕР·РёС†С–СЋ РЅР° СЃС‚СЂРѕРіРѕ РіРѕСЂРёР·РѕРЅС‚Р°Р»СЊРЅСѓ.<br/>
+РЈР¶Рµ РїРѕРјРёСЂР°СЋС‡Рё, Р±Р°С‡РёС€ С‡РёС—СЃСЊ РЅРѕРіРё РІ С€РєС–СЂСЏРЅРёС… РєР°РїС†СЏС…, СЏРєС– РєС–Р»СЊРєР° СЂР°Р·С–РІ Р±СѓС†Р°СЋС‚СЊ С‚РІРѕС” С‚С–Р»Рѕ, РїРѕС‚С–Рј С‰РѕСЃСЊ С…Р°РїР°С” Р·Р° РєРѕРјС–СЂ С– РІС–РґС‚СЏРіР°С” РєСѓРґРёСЃСЊ Сѓ С‚РµРјСЂСЏРІСѓ, РґРµ СЃРІС–С‚ РѕСЃС‚Р°С‚РѕС‡РЅРѕ С– Р·РіР°СЃР°С”. 
 </div>
 <div>
-<a href="0.html">Гру закінчено</a><br>
+<a href="0.html">Р“СЂСѓ Р·Р°РєС–РЅС‡РµРЅРѕ</a><br>
 </div>
 </body>
