--- a/loc/51.html
+++ b/loc/51.html
@@ -1,9 +1,9 @@
 <body>
-<div>Мені прикро повідомляти цю новину, але ні. Не минулося. Чиїсь руки охоплюють ззаду, закривають рота і шепочуть у вухо: "Хто ти, в біса, і що тут робиш?"
-<br/>А ти тому голосу і кажеш:</div>
+<div>РњРµРЅС– РїСЂРёРєСЂРѕ РїРѕРІС–РґРѕРјР»СЏС‚Рё С†СЋ РЅРѕРІРёРЅСѓ, Р°Р»Рµ РЅС–. РќРµ РјРёРЅСѓР»РѕСЃСЏ. Р§РёС—СЃСЊ СЂСѓРєРё РѕС…РѕРїР»СЋСЋС‚СЊ Р·Р·Р°РґСѓ, Р·Р°РєСЂРёРІР°СЋС‚СЊ СЂРѕС‚Р° С– С€РµРїРѕС‡СѓС‚СЊ Сѓ РІСѓС…Рѕ: "РҐС‚Рѕ С‚Рё, РІ Р±С–СЃР°, С– С‰Рѕ С‚СѓС‚ СЂРѕР±РёС€?"
+<br/>Рђ С‚Рё С‚РѕРјСѓ РіРѕР»РѕСЃСѓ С– РєР°Р¶РµС€:</div>
 <div>
-<a href="53.html">Мамомий момем міма</a><br>
-<a href="53.html">мумумумуму</a></br>
-<a href="53.html">муми мамуй</a></br>
+<a href="53.html">РњР°РјРѕРјРёР№ РјРѕРјРµРј РјС–РјР°</a><br>
+<a href="53.html">РјСѓРјСѓРјСѓРјСѓРјСѓ</a></br>
+<a href="53.html">РјСѓРјРё РјР°РјСѓР№</a></br>
 </div>
 </body>
