--- a/loc/53.html
+++ b/loc/53.html
@@ -1,10 +1,10 @@
 <body>
-<div>"Що? - дивується нападник. - Нічого не зрозуміло. А, стоп..."<br/>
-Він знімає руку з рота, натомість нею притискає лезо ножа до спини. Потім повторює запитання: "Отож, давай ще раз - хто ти і що тут в біса робиш?"
+<div>"Р©Рѕ? - РґРёРІСѓС”С‚СЊСЃСЏ РЅР°РїР°РґРЅРёРє. - РќС–С‡РѕРіРѕ РЅРµ Р·СЂРѕР·СѓРјС–Р»Рѕ. Рђ, СЃС‚РѕРї..."<br/>
+Р’С–РЅ Р·РЅС–РјР°С” СЂСѓРєСѓ Р· СЂРѕС‚Р°, РЅР°С‚РѕРјС–СЃС‚СЊ РЅРµСЋ РїСЂРёС‚РёСЃРєР°С” Р»РµР·Рѕ РЅРѕР¶Р° РґРѕ СЃРїРёРЅРё. РџРѕС‚С–Рј РїРѕРІС‚РѕСЂСЋС” Р·Р°РїРёС‚Р°РЅРЅСЏ: "РћС‚РѕР¶, РґР°РІР°Р№ С‰Рµ СЂР°Р· - С…С‚Рѕ С‚Рё С– С‰Рѕ С‚СѓС‚ РІ Р±С–СЃР° СЂРѕР±РёС€?"
 </div> 
 <div>
-<a href="61.html">Твоя смерть, чортів вилупку!</a><br>
-<a href="62.html">Турист, і я тут випадково</a></br>
-<a href="62.html">Я від Фродо. Знаєш Фродо?</a></br>
+<a href="61.html">РўРІРѕСЏ СЃРјРµСЂС‚СЊ, С‡РѕСЂС‚С–РІ РІРёР»СѓРїРєСѓ!</a><br>
+<a href="62.html">РўСѓСЂРёСЃС‚, С– СЏ С‚СѓС‚ РІРёРїР°РґРєРѕРІРѕ</a></br>
+<a href="62.html">РЇ РІС–Рґ Р¤СЂРѕРґРѕ. Р—РЅР°С”С€ Р¤СЂРѕРґРѕ?</a></br>
 </div>
 </body>
