--- a/loc/61.html
+++ b/loc/61.html
@@ -1,7 +1,7 @@
 <body>
-<div>"Прикольно," - каже нападник і наступної миті ніж входить в тіло практично по ручку, чим ставить велику і смачну крапку в цій мандрівці. І більше ніхто й ніколи не чув про тебе.
+<div>"РџСЂРёРєРѕР»СЊРЅРѕ," - РєР°Р¶Рµ РЅР°РїР°РґРЅРёРє С– РЅР°СЃС‚СѓРїРЅРѕС— РјРёС‚С– РЅС–Р¶ РІС…РѕРґРёС‚СЊ РІ С‚С–Р»Рѕ РїСЂР°РєС‚РёС‡РЅРѕ РїРѕ СЂСѓС‡РєСѓ, С‡РёРј СЃС‚Р°РІРёС‚СЊ РІРµР»РёРєСѓ С– СЃРјР°С‡РЅСѓ РєСЂР°РїРєСѓ РІ С†С–Р№ РјР°РЅРґСЂС–РІС†С–. Р† Р±С–Р»СЊС€Рµ РЅС–С…С‚Рѕ Р№ РЅС–РєРѕР»Рё РЅРµ С‡СѓРІ РїСЂРѕ С‚РµР±Рµ.
 </div>
 <div>
-<a href="0.html">Гру закінчено</a><br>
+<a href="0.html">Р“СЂСѓ Р·Р°РєС–РЅС‡РµРЅРѕ</a><br>
 </div>
 </body>
