--- a/loc/62.html
+++ b/loc/62.html
@@ -1,12 +1,12 @@
 <body>
-<div>Нападник переварює інформацію, каже щось на кшталт "Іноземець якийсь, здається" і ніж опускає. Ти розвертаєшся обличчям до нього і неочікувано для себе розумієш, що це ... ВОНА. Себто нападниця. На ній обтягуючий жилет, туга міні-спідниця і дуже вульгарний макіяж, який проте у купі з усім іншим виглядає навіть привабливо.<br/>
-"Що? - каже вона. - Дивина, правда? Скажи дякую Творцеві. Це у нього така фантазія. Чому мовчиш?"<br/>
-Ти стенаєш плечима і мимриш щось незрозуміле навіть для себе.<br/>
-"Роз'яснимо ситуацію відразу, - додає нападниця. - Ти мені зовсім не до вподоби. Тому статевих сцен для нас у сюжеті не прописано. Плюс стать твоя так і не названа. До речі, хлопець ти, чи дівчина."
+<div>РќР°РїР°РґРЅРёРє РїРµСЂРµРІР°СЂСЋС” С–РЅС„РѕСЂРјР°С†С–СЋ, РєР°Р¶Рµ С‰РѕСЃСЊ РЅР° РєС€С‚Р°Р»С‚ "Р†РЅРѕР·РµРјРµС†СЊ СЏРєРёР№СЃСЊ, Р·РґР°С”С‚СЊСЃСЏ" С– РЅС–Р¶ РѕРїСѓСЃРєР°С”. РўРё СЂРѕР·РІРµСЂС‚Р°С”С€СЃСЏ РѕР±Р»РёС‡С‡СЏРј РґРѕ РЅСЊРѕРіРѕ С– РЅРµРѕС‡С–РєСѓРІР°РЅРѕ РґР»СЏ СЃРµР±Рµ СЂРѕР·СѓРјС–С”С€, С‰Рѕ С†Рµ ... Р’РћРќРђ. РЎРµР±С‚Рѕ РЅР°РїР°РґРЅРёС†СЏ. РќР° РЅС–Р№ РѕР±С‚СЏРіСѓСЋС‡РёР№ Р¶РёР»РµС‚, С‚СѓРіР° РјС–РЅС–-СЃРїС–РґРЅРёС†СЏ С– РґСѓР¶Рµ РІСѓР»СЊРіР°СЂРЅРёР№ РјР°РєС–СЏР¶, СЏРєРёР№ РїСЂРѕС‚Рµ Сѓ РєСѓРїС– Р· СѓСЃС–Рј С–РЅС€РёРј РІРёРіР»СЏРґР°С” РЅР°РІС–С‚СЊ РїСЂРёРІР°Р±Р»РёРІРѕ.<br/>
+"Р©Рѕ? - РєР°Р¶Рµ РІРѕРЅР°. - Р”РёРІРёРЅР°, РїСЂР°РІРґР°? РЎРєР°Р¶Рё РґСЏРєСѓСЋ РўРІРѕСЂС†РµРІС–. Р¦Рµ Сѓ РЅСЊРѕРіРѕ С‚Р°РєР° С„Р°РЅС‚Р°Р·С–СЏ. Р§РѕРјСѓ РјРѕРІС‡РёС€?"<br/>
+РўРё СЃС‚РµРЅР°С”С€ РїР»РµС‡РёРјР° С– РјРёРјСЂРёС€ С‰РѕСЃСЊ РЅРµР·СЂРѕР·СѓРјС–Р»Рµ РЅР°РІС–С‚СЊ РґР»СЏ СЃРµР±Рµ.<br/>
+"Р РѕР·'СЏСЃРЅРёРјРѕ СЃРёС‚СѓР°С†С–СЋ РІС–РґСЂР°Р·Сѓ, - РґРѕРґР°С” РЅР°РїР°РґРЅРёС†СЏ. - РўРё РјРµРЅС– Р·РѕРІСЃС–Рј РЅРµ РґРѕ РІРїРѕРґРѕР±Рё. РўРѕРјСѓ СЃС‚Р°С‚РµРІРёС… СЃС†РµРЅ РґР»СЏ РЅР°СЃ Сѓ СЃСЋР¶РµС‚С– РЅРµ РїСЂРѕРїРёСЃР°РЅРѕ. РџР»СЋСЃ СЃС‚Р°С‚СЊ С‚РІРѕСЏ С‚Р°Рє С– РЅРµ РЅР°Р·РІР°РЅР°. Р”Рѕ СЂРµС‡С–, С…Р»РѕРїРµС†СЊ С‚Рё, С‡Рё РґС–РІС‡РёРЅР°."
 </div>
 <div>
-<a href="63.html">Хлопець</a><br>
-<a href="63.html">Дівчина</a></br>
-<a href="63.html">Трансгендер</a></br>
+<a href="63.html">РҐР»РѕРїРµС†СЊ</a><br>
+<a href="63.html">Р”С–РІС‡РёРЅР°</a></br>
+<a href="63.html">РўСЂР°РЅСЃРіРµРЅРґРµСЂ</a></br>
 </div>
 </body>
