--- a/loc/63.html
+++ b/loc/63.html
@@ -1,8 +1,8 @@
 <body>
-<div>"... Серйозно? Зрештою, це не грає жодної ролі. Тому я навіть не питаю ім'я. Все одно пам'ять у мене не для такої непотрібної і не суттєвої інформації. Менше з тим. Тобі мабуть цікаво хто я і що я тут роблю? Я розповіавм навіть у випадку, якщо ти хочеш сказати, що тобі це сто років не здалося. Я, Евглена Зелена (ще одне спасибі Творцю), лідер (і справедливості заради додам, що поки єдиний учасник) Руху Опору. ти мусиш допомогти у цій справі, оскільки інакше я відправлю тебе на той світ. Третього варіанту нема. Отож, який твій вибір?"
+<div>"... РЎРµСЂР№РѕР·РЅРѕ? Р—СЂРµС€С‚РѕСЋ, С†Рµ РЅРµ РіСЂР°С” Р¶РѕРґРЅРѕС— СЂРѕР»С–. РўРѕРјСѓ СЏ РЅР°РІС–С‚СЊ РЅРµ РїРёС‚Р°СЋ С–Рј'СЏ. Р’СЃРµ РѕРґРЅРѕ РїР°Рј'СЏС‚СЊ Сѓ РјРµРЅРµ РЅРµ РґР»СЏ С‚Р°РєРѕС— РЅРµРїРѕС‚СЂС–Р±РЅРѕС— С– РЅРµ СЃСѓС‚С‚С”РІРѕС— С–РЅС„РѕСЂРјР°С†С–С—. РњРµРЅС€Рµ Р· С‚РёРј. РўРѕР±С– РјР°Р±СѓС‚СЊ С†С–РєР°РІРѕ С…С‚Рѕ СЏ С– С‰Рѕ СЏ С‚СѓС‚ СЂРѕР±Р»СЋ? РЇ СЂРѕР·РїРѕРІС–Р°РІРј РЅР°РІС–С‚СЊ Сѓ РІРёРїР°РґРєСѓ, СЏРєС‰Рѕ С‚Рё С…РѕС‡РµС€ СЃРєР°Р·Р°С‚Рё, С‰Рѕ С‚РѕР±С– С†Рµ СЃС‚Рѕ СЂРѕРєС–РІ РЅРµ Р·РґР°Р»РѕСЃСЏ. РЇ, Р•РІРіР»РµРЅР° Р—РµР»РµРЅР° (С‰Рµ РѕРґРЅРµ СЃРїР°СЃРёР±С– РўРІРѕСЂС†СЋ), Р»С–РґРµСЂ (С– СЃРїСЂР°РІРµРґР»РёРІРѕСЃС‚С– Р·Р°СЂР°РґРё РґРѕРґР°Рј, С‰Рѕ РїРѕРєРё С”РґРёРЅРёР№ СѓС‡Р°СЃРЅРёРє) Р СѓС…Сѓ РћРїРѕСЂСѓ. С‚Рё РјСѓСЃРёС€ РґРѕРїРѕРјРѕРіС‚Рё Сѓ С†С–Р№ СЃРїСЂР°РІС–, РѕСЃРєС–Р»СЊРєРё С–РЅР°РєС€Рµ СЏ РІС–РґРїСЂР°РІР»СЋ С‚РµР±Рµ РЅР° С‚РѕР№ СЃРІС–С‚. РўСЂРµС‚СЊРѕРіРѕ РІР°СЂС–Р°РЅС‚Сѓ РЅРµРјР°. РћС‚РѕР¶, СЏРєРёР№ С‚РІС–Р№ РІРёР±С–СЂ?"
 </div>
 <div>
-<a href="64.html">Цей світ потребує героїв, тому я радо впряжусь!</a><br>
-<a href="65.html">Краще швидка смерть, ніж довготривале конання </a></br>
+<a href="64.html">Р¦РµР№ СЃРІС–С‚ РїРѕС‚СЂРµР±СѓС” РіРµСЂРѕС—РІ, С‚РѕРјСѓ СЏ СЂР°РґРѕ РІРїСЂСЏР¶СѓСЃСЊ!</a><br>
+<a href="65.html">РљСЂР°С‰Рµ С€РІРёРґРєР° СЃРјРµСЂС‚СЊ, РЅС–Р¶ РґРѕРІРіРѕС‚СЂРёРІР°Р»Рµ РєРѕРЅР°РЅРЅСЏ </a></br>
 </div>
 </body>
