--- a/loc/65.html
+++ b/loc/65.html
@@ -1,8 +1,8 @@
 <body>
-<div>"Справді? - дивується Евглена. - Ну, що ж. Як кажуть, Ви самі зробили свій вибір".
-<br/> Наступної миті кинжал коротко посвистує у повітрі і втикається прямісінько тобі межи очі. "Дивно, - промайнула в голові остання думка. - А хіба кинжали свистять при польоті."
+<div>"РЎРїСЂР°РІРґС–? - РґРёРІСѓС”С‚СЊСЃСЏ Р•РІРіР»РµРЅР°. - РќСѓ, С‰Рѕ Р¶. РЇРє РєР°Р¶СѓС‚СЊ, Р’Рё СЃР°РјС– Р·СЂРѕР±РёР»Рё СЃРІС–Р№ РІРёР±С–СЂ".
+<br/> РќР°СЃС‚СѓРїРЅРѕС— РјРёС‚С– РєРёРЅР¶Р°Р» РєРѕСЂРѕС‚РєРѕ РїРѕСЃРІРёСЃС‚СѓС” Сѓ РїРѕРІС–С‚СЂС– С– РІС‚РёРєР°С”С‚СЊСЃСЏ РїСЂСЏРјС–СЃС–РЅСЊРєРѕ С‚РѕР±С– РјРµР¶Рё РѕС‡С–. "Р”РёРІРЅРѕ, - РїСЂРѕРјР°Р№РЅСѓР»Р° РІ РіРѕР»РѕРІС– РѕСЃС‚Р°РЅРЅСЏ РґСѓРјРєР°. - Рђ С…С–Р±Р° РєРёРЅР¶Р°Р»Рё СЃРІРёСЃС‚СЏС‚СЊ РїСЂРё РїРѕР»СЊРѕС‚С–."
 </div>
 <div>
-<a href="0.html">Гру закінчено</a><br>
+<a href="0.html">Р“СЂСѓ Р·Р°РєС–РЅС‡РµРЅРѕ</a><br>
 </div>
 </body>
