--- a/loc/71.html
+++ b/loc/71.html
@@ -1,10 +1,10 @@
 <body>
-<div>На вулиці темрява така, що хоч око виколи, але, здається, Евглені, це не вперше, тому що рухається вона поміж деревами майже так само швидко, як і при денному світлі, а тобі доводиться періодично цілуватися з дуплами дерев та отримувати від них запотиличники.<br/>
-За деякий час ви добираєтесь під самісінькі стіни замку, де спиняєтеся в кущах.<br>
-"Ми на місці, - каже Евглена. - Давай, я вірю в тебе."
+<div>РќР° РІСѓР»РёС†С– С‚РµРјСЂСЏРІР° С‚Р°РєР°, С‰Рѕ С…РѕС‡ РѕРєРѕ РІРёРєРѕР»Рё, Р°Р»Рµ, Р·РґР°С”С‚СЊСЃСЏ, Р•РІРіР»РµРЅС–, С†Рµ РЅРµ РІРїРµСЂС€Рµ, С‚РѕРјСѓ С‰Рѕ СЂСѓС…Р°С”С‚СЊСЃСЏ РІРѕРЅР° РїРѕРјС–Р¶ РґРµСЂРµРІР°РјРё РјР°Р№Р¶Рµ С‚Р°Рє СЃР°РјРѕ С€РІРёРґРєРѕ, СЏРє С– РїСЂРё РґРµРЅРЅРѕРјСѓ СЃРІС–С‚Р»С–, Р° С‚РѕР±С– РґРѕРІРѕРґРёС‚СЊСЃСЏ РїРµСЂС–РѕРґРёС‡РЅРѕ С†С–Р»СѓРІР°С‚РёСЃСЏ Р· РґСѓРїР»Р°РјРё РґРµСЂРµРІ С‚Р° РѕС‚СЂРёРјСѓРІР°С‚Рё РІС–Рґ РЅРёС… Р·Р°РїРѕС‚РёР»РёС‡РЅРёРєРё.<br/>
+Р—Р° РґРµСЏРєРёР№ С‡Р°СЃ РІРё РґРѕР±РёСЂР°С”С‚РµСЃСЊ РїС–Рґ СЃР°РјС–СЃС–РЅСЊРєС– СЃС‚С–РЅРё Р·Р°РјРєСѓ, РґРµ СЃРїРёРЅСЏС”С‚РµСЃСЏ РІ РєСѓС‰Р°С….<br>
+"РњРё РЅР° РјС–СЃС†С–, - РєР°Р¶Рµ Р•РІРіР»РµРЅР°. - Р”Р°РІР°Р№, СЏ РІС–СЂСЋ РІ С‚РµР±Рµ."
 </div>
 <div>
-<a href="72.html">Ні, мені стрьомно.</a><br>
-<a href="73.html">Гаразд, я не підведу </a></br>
+<a href="72.html">РќС–, РјРµРЅС– СЃС‚СЂСЊРѕРјРЅРѕ.</a><br>
+<a href="73.html">Р“Р°СЂР°Р·Рґ, СЏ РЅРµ РїС–РґРІРµРґСѓ </a></br>
 </div>
 </body>
