--- a/loc/72.html
+++ b/loc/72.html
@@ -1,8 +1,8 @@
 <body>
-<div>Евглена прикладаю руку до чола і крутить головою.<br/>
-"Слухай, не створюй зайвих проблем. Я не можу піти, бо я лідер Опору. Якщо я загину, то цьому світу просто кінець. Ніхто більше не зможе протистояти тиранії та захистити простий люд. А ти - герой, і гра про тебе, і якщо не підеш - втратиш супер-пупер класний сюжетний хід. І мудилом будеш кінченим! Так що не випробовуй моє терпіння. Іди, курва, вперед!"
+<div>Р•РІРіР»РµРЅР° РїСЂРёРєР»Р°РґР°СЋ СЂСѓРєСѓ РґРѕ С‡РѕР»Р° С– РєСЂСѓС‚РёС‚СЊ РіРѕР»РѕРІРѕСЋ.<br/>
+"РЎР»СѓС…Р°Р№, РЅРµ СЃС‚РІРѕСЂСЋР№ Р·Р°Р№РІРёС… РїСЂРѕР±Р»РµРј. РЇ РЅРµ РјРѕР¶Сѓ РїС–С‚Рё, Р±Рѕ СЏ Р»С–РґРµСЂ РћРїРѕСЂСѓ. РЇРєС‰Рѕ СЏ Р·Р°РіРёРЅСѓ, С‚Рѕ С†СЊРѕРјСѓ СЃРІС–С‚Сѓ РїСЂРѕСЃС‚Рѕ РєС–РЅРµС†СЊ. РќС–С…С‚Рѕ Р±С–Р»СЊС€Рµ РЅРµ Р·РјРѕР¶Рµ РїСЂРѕС‚РёСЃС‚РѕСЏС‚Рё С‚РёСЂР°РЅС–С— С‚Р° Р·Р°С…РёСЃС‚РёС‚Рё РїСЂРѕСЃС‚РёР№ Р»СЋРґ. Рђ С‚Рё - РіРµСЂРѕР№, С– РіСЂР° РїСЂРѕ С‚РµР±Рµ, С– СЏРєС‰Рѕ РЅРµ РїС–РґРµС€ - РІС‚СЂР°С‚РёС€ СЃСѓРїРµСЂ-РїСѓРїРµСЂ РєР»Р°СЃРЅРёР№ СЃСЋР¶РµС‚РЅРёР№ С…С–Рґ. Р† РјСѓРґРёР»РѕРј Р±СѓРґРµС€ РєС–РЅС‡РµРЅРёРј! РўР°Рє С‰Рѕ РЅРµ РІРёРїСЂРѕР±РѕРІСѓР№ РјРѕС” С‚РµСЂРїС–РЅРЅСЏ. Р†РґРё, РєСѓСЂРІР°, РІРїРµСЂРµРґ!"
 </div>
 <div>
-<a href="73.html">Ну, ок.</a><br>
+<a href="73.html">РќСѓ, РѕРє.</a><br>
 </div>
 </body>
