--- a/loc/73.html
+++ b/loc/73.html
@@ -1,9 +1,9 @@
 <body>
-<div>Ти переміщаєшся під стіни, тримаючи в руках свій щит і отриманий від Евглени клинок. Під стіни падає трохи світла від розведених на вежах багатть. А в цілому пітьма та морок, страх та жах, невідомість та небезпека.<br/>
-За деякий час мозок дає команду рухатися хоча б в якийсь бік, але залишилось всього нічого - обрати в який саме.
+<div>РўРё РїРµСЂРµРјС–С‰Р°С”С€СЃСЏ РїС–Рґ СЃС‚С–РЅРё, С‚СЂРёРјР°СЋС‡Рё РІ СЂСѓРєР°С… СЃРІС–Р№ С‰РёС‚ С– РѕС‚СЂРёРјР°РЅРёР№ РІС–Рґ Р•РІРіР»РµРЅРё РєР»РёРЅРѕРє. РџС–Рґ СЃС‚С–РЅРё РїР°РґР°С” С‚СЂРѕС…Рё СЃРІС–С‚Р»Р° РІС–Рґ СЂРѕР·РІРµРґРµРЅРёС… РЅР° РІРµР¶Р°С… Р±Р°РіР°С‚С‚СЊ. Рђ РІ С†С–Р»РѕРјСѓ РїС–С‚СЊРјР° С‚Р° РјРѕСЂРѕРє, СЃС‚СЂР°С… С‚Р° Р¶Р°С…, РЅРµРІС–РґРѕРјС–СЃС‚СЊ С‚Р° РЅРµР±РµР·РїРµРєР°.<br/>
+Р—Р° РґРµСЏРєРёР№ С‡Р°СЃ РјРѕР·РѕРє РґР°С” РєРѕРјР°РЅРґСѓ СЂСѓС…Р°С‚РёСЃСЏ С…РѕС‡Р° Р± РІ СЏРєРёР№СЃСЊ Р±С–Рє, Р°Р»Рµ Р·Р°Р»РёС€РёР»РѕСЃСЊ РІСЃСЊРѕРіРѕ РЅС–С‡РѕРіРѕ - РѕР±СЂР°С‚Рё РІ СЏРєРёР№ СЃР°РјРµ.
 </div>
 <div>
-<a href="81.html">Чапаємо вліво</a><br>
-<a href="91.html">Чапаємо вправо</a></br>
+<a href="81.html">Р§Р°РїР°С”РјРѕ РІР»С–РІРѕ</a><br>
+<a href="91.html">Р§Р°РїР°С”РјРѕ РІРїСЂР°РІРѕ</a></br>
 </div>
 </body>
