--- a/loc/81.html
+++ b/loc/81.html
@@ -1,8 +1,8 @@
 <body>
-<div>Ти рухаєшся вліво, час від часу пильним поглядом обводячи все навколо. У голові грає епічна музика, жижки трясуться, а меч ледве не падає із рук. Помічаєш якісь двері. Але на них висить замок. Йдемо далі?
+<div>РўРё СЂСѓС…Р°С”С€СЃСЏ РІР»С–РІРѕ, С‡Р°СЃ РІС–Рґ С‡Р°СЃСѓ РїРёР»СЊРЅРёРј РїРѕРіР»СЏРґРѕРј РѕР±РІРѕРґСЏС‡Рё РІСЃРµ РЅР°РІРєРѕР»Рѕ. РЈ РіРѕР»РѕРІС– РіСЂР°С” РµРїС–С‡РЅР° РјСѓР·РёРєР°, Р¶РёР¶РєРё С‚СЂСЏСЃСѓС‚СЊСЃСЏ, Р° РјРµС‡ Р»РµРґРІРµ РЅРµ РїР°РґР°С” С–Р· СЂСѓРє. РџРѕРјС–С‡Р°С”С€ СЏРєС–СЃСЊ РґРІРµСЂС–. РђР»Рµ РЅР° РЅРёС… РІРёСЃРёС‚СЊ Р·Р°РјРѕРє. Р™РґРµРјРѕ РґР°Р»С–?
 </div>
 <div>
-<a href="82.html">Чапаємо далі - шукаємо інший вхід</a><br>
-<a href="83.html">Залишаємось тут </a></br>
+<a href="82.html">Р§Р°РїР°С”РјРѕ РґР°Р»С– - С€СѓРєР°С”РјРѕ С–РЅС€РёР№ РІС…С–Рґ</a><br>
+<a href="83.html">Р—Р°Р»РёС€Р°С”РјРѕСЃСЊ С‚СѓС‚ </a></br>
 </div>
 </body>
