--- a/loc/82.html
+++ b/loc/82.html
@@ -1,8 +1,8 @@
 <body>
-<div>Ти доходиш до кутка замку. Далі глибочезна прірва, з якої шось гарчить, сичить та булькає. Вочевидь, робити тут нічого.
+<div>РўРё РґРѕС…РѕРґРёС€ РґРѕ РєСѓС‚РєР° Р·Р°РјРєСѓ. Р”Р°Р»С– РіР»РёР±РѕС‡РµР·РЅР° РїСЂС–СЂРІР°, Р· СЏРєРѕС— С€РѕСЃСЊ РіР°СЂС‡РёС‚СЊ, СЃРёС‡РёС‚СЊ С‚Р° Р±СѓР»СЊРєР°С”. Р’РѕС‡РµРІРёРґСЊ, СЂРѕР±РёС‚Рё С‚СѓС‚ РЅС–С‡РѕРіРѕ.
 </div>
 <div>
-<a href="84.html">Злізти в яму і перевірити що там</a><br>
-<a href="83.html">Повернутися до замка на дверях </a></br>
+<a href="84.html">Р—Р»С–Р·С‚Рё РІ СЏРјСѓ С– РїРµСЂРµРІС–СЂРёС‚Рё С‰Рѕ С‚Р°Рј</a><br>
+<a href="83.html">РџРѕРІРµСЂРЅСѓС‚РёСЃСЏ РґРѕ Р·Р°РјРєР° РЅР° РґРІРµСЂСЏС… </a></br>
 </div>
 </body>
