--- a/loc/83.html
+++ b/loc/83.html
@@ -1,8 +1,8 @@
 <body>
-<div>Перед тобою двері. На них замок. Якщо всунути туди меча, це точно не принесе жодної користі, а шуму наробить добрячого. Ключа під ногами теж немає, відмичок Евглена не дала, чіт-кодів на гру немає. Що робимо?
+<div>РџРµСЂРµРґ С‚РѕР±РѕСЋ РґРІРµСЂС–. РќР° РЅРёС… Р·Р°РјРѕРє. РЇРєС‰Рѕ РІСЃСѓРЅСѓС‚Рё С‚СѓРґРё РјРµС‡Р°, С†Рµ С‚РѕС‡РЅРѕ РЅРµ РїСЂРёРЅРµСЃРµ Р¶РѕРґРЅРѕС— РєРѕСЂРёСЃС‚С–, Р° С€СѓРјСѓ РЅР°СЂРѕР±РёС‚СЊ РґРѕР±СЂСЏС‡РѕРіРѕ. РљР»СЋС‡Р° РїС–Рґ РЅРѕРіР°РјРё С‚РµР¶ РЅРµРјР°С”, РІС–РґРјРёС‡РѕРє Р•РІРіР»РµРЅР° РЅРµ РґР°Р»Р°, С‡С–С‚-РєРѕРґС–РІ РЅР° РіСЂСѓ РЅРµРјР°С”. Р©Рѕ СЂРѕР±РёРјРѕ?
 </div>
 <div>
-<a href="91.html">Чапаємо вправо</a><br>
-<a href="85.html">Молимося. Це має допомогти</a></br>
+<a href="91.html">Р§Р°РїР°С”РјРѕ РІРїСЂР°РІРѕ</a><br>
+<a href="85.html">РњРѕР»РёРјРѕСЃСЏ. Р¦Рµ РјР°С” РґРѕРїРѕРјРѕРіС‚Рё</a></br>
 </div>
 </body>
