--- a/loc/84.html
+++ b/loc/84.html
@@ -1,7 +1,7 @@
 <body>
-<div>Ти звішуєш ноги вниз у яму, повисаєш на руках і зістрибуєш донизу. Відчуття вільного польоту надає наснаги, віри в себе і натхнення, а зіткнення із землею забирає все це назад. Ти лежиш і не можеш навіть дізнатися хто ж це такий шумів у ямі. Відомо тільки одне - він точно їсть людей, оскільки наминає тебе з неабияким апетитом. Ну, і смачного йому.
+<div>РўРё Р·РІС–С€СѓС”С€ РЅРѕРіРё РІРЅРёР· Сѓ СЏРјСѓ, РїРѕРІРёСЃР°С”С€ РЅР° СЂСѓРєР°С… С– Р·С–СЃС‚СЂРёР±СѓС”С€ РґРѕРЅРёР·Сѓ. Р’С–РґС‡СѓС‚С‚СЏ РІС–Р»СЊРЅРѕРіРѕ РїРѕР»СЊРѕС‚Сѓ РЅР°РґР°С” РЅР°СЃРЅР°РіРё, РІС–СЂРё РІ СЃРµР±Рµ С– РЅР°С‚С…РЅРµРЅРЅСЏ, Р° Р·С–С‚РєРЅРµРЅРЅСЏ С–Р· Р·РµРјР»РµСЋ Р·Р°Р±РёСЂР°С” РІСЃРµ С†Рµ РЅР°Р·Р°Рґ. РўРё Р»РµР¶РёС€ С– РЅРµ РјРѕР¶РµС€ РЅР°РІС–С‚СЊ РґС–Р·РЅР°С‚РёСЃСЏ С…С‚Рѕ Р¶ С†Рµ С‚Р°РєРёР№ С€СѓРјС–РІ Сѓ СЏРјС–. Р’С–РґРѕРјРѕ С‚С–Р»СЊРєРё РѕРґРЅРµ - РІС–РЅ С‚РѕС‡РЅРѕ С—СЃС‚СЊ Р»СЋРґРµР№, РѕСЃРєС–Р»СЊРєРё РЅР°РјРёРЅР°С” С‚РµР±Рµ Р· РЅРµР°Р±РёСЏРєРёРј Р°РїРµС‚РёС‚РѕРј. РќСѓ, С– СЃРјР°С‡РЅРѕРіРѕ Р№РѕРјСѓ.
 </div>
 <div>
-<a href="0.html">Гру закінчено</a><br>
+<a href="0.html">Р“СЂСѓ Р·Р°РєС–РЅС‡РµРЅРѕ</a><br>
 </div>
 </body>
