--- a/loc/86.html
+++ b/loc/86.html
@@ -1,7 +1,7 @@
 <body>
-<div>"БАБАХ!" - кажеш ти, але скидається, що це не допоможе у цій справі абсолютно. Ключа, як пам'ятаємо не спостерігається, тому варіант лише один.
+<div>"Р‘РђР‘РђРҐ!" - РєР°Р¶РµС€ С‚Рё, Р°Р»Рµ СЃРєРёРґР°С”С‚СЊСЃСЏ, С‰Рѕ С†Рµ РЅРµ РґРѕРїРѕРјРѕР¶Рµ Сѓ С†С–Р№ СЃРїСЂР°РІС– Р°Р±СЃРѕР»СЋС‚РЅРѕ. РљР»СЋС‡Р°, СЏРє РїР°Рј'СЏС‚Р°С”РјРѕ РЅРµ СЃРїРѕСЃС‚РµСЂС–РіР°С”С‚СЊСЃСЏ, С‚РѕРјСѓ РІР°СЂС–Р°РЅС‚ Р»РёС€Рµ РѕРґРёРЅ.
 </div>
 <div>
-<a href="85a.html">Помолитися</a><br>
+<a href="85a.html">РџРѕРјРѕР»РёС‚РёСЃСЏ</a><br>
 </div>
 </body>
