--- a/loc/91.html
+++ b/loc/91.html
@@ -1,8 +1,8 @@
 <body>
-<div>Рух вправо дещо ускладнений. Трапляються кущі, колючки, рови з крокодилами та розтяжки з гранатами (<i>насправді, ровів з розтяжками нема, але було несподівано, га?</i>). Практично на розі замку ледве не налітаєш на якусь постать, яка стоїть спиною до тебе і обличчям до глибочезного рову. Від постаті долинає звук текучої рідини. Часу на роздуми немає, тому ти...
+<div>Р СѓС… РІРїСЂР°РІРѕ РґРµС‰Рѕ СѓСЃРєР»Р°РґРЅРµРЅРёР№. РўСЂР°РїР»СЏСЋС‚СЊСЃСЏ РєСѓС‰С–, РєРѕР»СЋС‡РєРё, СЂРѕРІРё Р· РєСЂРѕРєРѕРґРёР»Р°РјРё С‚Р° СЂРѕР·С‚СЏР¶РєРё Р· РіСЂР°РЅР°С‚Р°РјРё (<i>РЅР°СЃРїСЂР°РІРґС–, СЂРѕРІС–РІ Р· СЂРѕР·С‚СЏР¶РєР°РјРё РЅРµРјР°, Р°Р»Рµ Р±СѓР»Рѕ РЅРµСЃРїРѕРґС–РІР°РЅРѕ, РіР°?</i>). РџСЂР°РєС‚РёС‡РЅРѕ РЅР° СЂРѕР·С– Р·Р°РјРєСѓ Р»РµРґРІРµ РЅРµ РЅР°Р»С–С‚Р°С”С€ РЅР° СЏРєСѓСЃСЊ РїРѕСЃС‚Р°С‚СЊ, СЏРєР° СЃС‚РѕС—С‚СЊ СЃРїРёРЅРѕСЋ РґРѕ С‚РµР±Рµ С– РѕР±Р»РёС‡С‡СЏРј РґРѕ РіР»РёР±РѕС‡РµР·РЅРѕРіРѕ СЂРѕРІСѓ. Р’С–Рґ РїРѕСЃС‚Р°С‚С– РґРѕР»РёРЅР°С” Р·РІСѓРє С‚РµРєСѓС‡РѕС— СЂС–РґРёРЅРё. Р§Р°СЃСѓ РЅР° СЂРѕР·РґСѓРјРё РЅРµРјР°С”, С‚РѕРјСѓ С‚Рё...
 </div>
 <div>
-<a href="92.html">...буцаю ногою що є сили</a><br>
-<a href="93.html">...обхоплюю постать за шию та починаю допит</a></br>
+<a href="92.html">...Р±СѓС†Р°СЋ РЅРѕРіРѕСЋ С‰Рѕ С” СЃРёР»Рё</a><br>
+<a href="93.html">...РѕР±С…РѕРїР»СЋСЋ РїРѕСЃС‚Р°С‚СЊ Р·Р° С€РёСЋ С‚Р° РїРѕС‡РёРЅР°СЋ РґРѕРїРёС‚</a></br>
 </div>
 </body>
