--- a/loc/92.html
+++ b/loc/92.html
@@ -1,11 +1,11 @@
 <body>
-<div>Все виходить якнайкраще. Хлопець (постать виявилась чоловічої статі) змахнув руками та з диким вереском полетів донизу, звідки долинуло чавкання та хрумкання. Більше тут робити нічого.
+<div>Р’СЃРµ РІРёС…РѕРґРёС‚СЊ СЏРєРЅР°Р№РєСЂР°С‰Рµ. РҐР»РѕРїРµС†СЊ (РїРѕСЃС‚Р°С‚СЊ РІРёСЏРІРёР»Р°СЃСЊ С‡РѕР»РѕРІС–С‡РѕС— СЃС‚Р°С‚С–) Р·РјР°С…РЅСѓРІ СЂСѓРєР°РјРё С‚Р° Р· РґРёРєРёРј РІРµСЂРµСЃРєРѕРј РїРѕР»РµС‚С–РІ РґРѕРЅРёР·Сѓ, Р·РІС–РґРєРё РґРѕР»РёРЅСѓР»Рѕ С‡Р°РІРєР°РЅРЅСЏ С‚Р° С…СЂСѓРјРєР°РЅРЅСЏ. Р‘С–Р»СЊС€Рµ С‚СѓС‚ СЂРѕР±РёС‚Рё РЅС–С‡РѕРіРѕ.
 </div>
 <div>
-<a href="81.html">Ідемо вліво</a><br>
-<a href="84.html">Ліземо в яму на пошуки решток хлопаки та збору луту</a></br>
+<a href="81.html">Р†РґРµРјРѕ РІР»С–РІРѕ</a><br>
+<a href="84.html">Р›С–Р·РµРјРѕ РІ СЏРјСѓ РЅР° РїРѕС€СѓРєРё СЂРµС€С‚РѕРє С…Р»РѕРїР°РєРё С‚Р° Р·Р±РѕСЂСѓ Р»СѓС‚Сѓ</a></br>
 </div>
 <div>
-(якщо ти не знаєш, що таке лут, не заморочуй собі голову)
+(СЏРєС‰Рѕ С‚Рё РЅРµ Р·РЅР°С”С€, С‰Рѕ С‚Р°РєРµ Р»СѓС‚, РЅРµ Р·Р°РјРѕСЂРѕС‡СѓР№ СЃРѕР±С– РіРѕР»РѕРІСѓ)
 </div>
 </body>
