--- a/loc/94.html
+++ b/loc/94.html
@@ -1,11 +1,11 @@
 <body>
-<div>"Ги-ги-ги, - пожвавлюється полонений. - Я знаю цей фільм." Здається, з питанням облом вийшов. Може, яке інше?
+<div>"Р“Рё-РіРё-РіРё, - РїРѕР¶РІР°РІР»СЋС”С‚СЊСЃСЏ РїРѕР»РѕРЅРµРЅРёР№. - РЇ Р·РЅР°СЋ С†РµР№ С„С–Р»СЊРј." Р—РґР°С”С‚СЊСЃСЏ, Р· РїРёС‚Р°РЅРЅСЏРј РѕР±Р»РѕРј РІРёР№С€РѕРІ. РњРѕР¶Рµ, СЏРєРµ С–РЅС€Рµ?
 </div>
 <div>
-<a href="94.html">А ви не підкажете, як пройти в бібліотеку?</a><br>
-<a href="94.html">Вогнику не буде?</a></br>
-<a href="95.html">Ти чий будеш?</a></br>
-<a href="96.html">Ти ж хочеш провести мене до замку?</a></br>
-<a href="92.html">Нічого не питати, а просто буцнути ногою</a></br>
+<a href="94.html">Рђ РІРё РЅРµ РїС–РґРєР°Р¶РµС‚Рµ, СЏРє РїСЂРѕР№С‚Рё РІ Р±С–Р±Р»С–РѕС‚РµРєСѓ?</a><br>
+<a href="94.html">Р’РѕРіРЅРёРєСѓ РЅРµ Р±СѓРґРµ?</a></br>
+<a href="95.html">РўРё С‡РёР№ Р±СѓРґРµС€?</a></br>
+<a href="96.html">РўРё Р¶ С…РѕС‡РµС€ РїСЂРѕРІРµСЃС‚Рё РјРµРЅРµ РґРѕ Р·Р°РјРєСѓ?</a></br>
+<a href="92.html">РќС–С‡РѕРіРѕ РЅРµ РїРёС‚Р°С‚Рё, Р° РїСЂРѕСЃС‚Рѕ Р±СѓС†РЅСѓС‚Рё РЅРѕРіРѕСЋ</a></br>
 </div>
 </body>
