--- a/loc/95.html
+++ b/loc/95.html
@@ -1,12 +1,12 @@
 <body>
-<div>Хлопець шморгає носом і каже: "Я просто хлопець. Думаєш, я хотів стати охоронцем, тинятися ось тут, втикати на це все, стати полоненим, або кормом для тварин із рову? Звичайно, ні. Я хотів тьолку з буферами і задком, купу грошей, айфон, ящик пива та простого людського щастя. Чому, ну, чому все не так? Чому я зараз стою і відливаю прямо собі під ноги, подумуючи про суїцид? Невже, це тому, що одного разу я звернув не туди?"
-<br/>Ну, що - це та інформація, яку тобі хотілось отримати?
+<div>РҐР»РѕРїРµС†СЊ С€РјРѕСЂРіР°С” РЅРѕСЃРѕРј С– РєР°Р¶Рµ: "РЇ РїСЂРѕСЃС‚Рѕ С…Р»РѕРїРµС†СЊ. Р”СѓРјР°С”С€, СЏ С…РѕС‚С–РІ СЃС‚Р°С‚Рё РѕС…РѕСЂРѕРЅС†РµРј, С‚РёРЅСЏС‚РёСЃСЏ РѕСЃСЊ С‚СѓС‚, РІС‚РёРєР°С‚Рё РЅР° С†Рµ РІСЃРµ, СЃС‚Р°С‚Рё РїРѕР»РѕРЅРµРЅРёРј, Р°Р±Рѕ РєРѕСЂРјРѕРј РґР»СЏ С‚РІР°СЂРёРЅ С–Р· СЂРѕРІСѓ? Р—РІРёС‡Р°Р№РЅРѕ, РЅС–. РЇ С…РѕС‚С–РІ С‚СЊРѕР»РєСѓ Р· Р±СѓС„РµСЂР°РјРё С– Р·Р°РґРєРѕРј, РєСѓРїСѓ РіСЂРѕС€РµР№, Р°Р№С„РѕРЅ, СЏС‰РёРє РїРёРІР° С‚Р° РїСЂРѕСЃС‚РѕРіРѕ Р»СЋРґСЃСЊРєРѕРіРѕ С‰Р°СЃС‚СЏ. Р§РѕРјСѓ, РЅСѓ, С‡РѕРјСѓ РІСЃРµ РЅРµ С‚Р°Рє? Р§РѕРјСѓ СЏ Р·Р°СЂР°Р· СЃС‚РѕСЋ С– РІС–РґР»РёРІР°СЋ РїСЂСЏРјРѕ СЃРѕР±С– РїС–Рґ РЅРѕРіРё, РїРѕРґСѓРјСѓСЋС‡Рё РїСЂРѕ СЃСѓС—С†РёРґ? РќРµРІР¶Рµ, С†Рµ С‚РѕРјСѓ, С‰Рѕ РѕРґРЅРѕРіРѕ СЂР°Р·Сѓ СЏ Р·РІРµСЂРЅСѓРІ РЅРµ С‚СѓРґРё?"
+<br/>РќСѓ, С‰Рѕ - С†Рµ С‚Р° С–РЅС„РѕСЂРјР°С†С–СЏ, СЏРєСѓ С‚РѕР±С– С…РѕС‚С–Р»РѕСЃСЊ РѕС‚СЂРёРјР°С‚Рё?
 </div>
 <div>
-<a href="94.html">А ви не підкажете, як пройти в бібліотеку?</a><br>
-<a href="94.html">Вогнику не буде?</a></br>
-<a href="95.html">Ти чий будеш?</a></br>
-<a href="96.html">Ти ж хочеш провести мене до замку?</a></br>
-<a href="92.html">Нічого не питати, а просто буцнути ногою</a></br>
+<a href="94.html">Рђ РІРё РЅРµ РїС–РґРєР°Р¶РµС‚Рµ, СЏРє РїСЂРѕР№С‚Рё РІ Р±С–Р±Р»С–РѕС‚РµРєСѓ?</a><br>
+<a href="94.html">Р’РѕРіРЅРёРєСѓ РЅРµ Р±СѓРґРµ?</a></br>
+<a href="95.html">РўРё С‡РёР№ Р±СѓРґРµС€?</a></br>
+<a href="96.html">РўРё Р¶ С…РѕС‡РµС€ РїСЂРѕРІРµСЃС‚Рё РјРµРЅРµ РґРѕ Р·Р°РјРєСѓ?</a></br>
+<a href="92.html">РќС–С‡РѕРіРѕ РЅРµ РїРёС‚Р°С‚Рё, Р° РїСЂРѕСЃС‚Рѕ Р±СѓС†РЅСѓС‚Рё РЅРѕРіРѕСЋ</a></br>
 </div>
 </body>
