--- a/loc/96.html
+++ b/loc/96.html
@@ -1,10 +1,10 @@
 <body>
-<div>Хлопець злякано здригається і видавлює із себе: "Я... Ну... Добре. Згоден. Але всередину я не зайду. Це для мене надто ризиковано." Тобі не залишається нічого, окрім як погодитись.<br/>
-Ви рушаєте вздовж стінки. За кілька кроків спиняєтеся біля стінки з трохи неправильною кладкою. Охоронець стукає по одному із каменів і стінка з'їжджає вбік, відкриваючи сходи нагору.<br/>
-"Чорний хід, - пояснює хлопець. - Зсередини не відчиняється, якшо що. Заводить прямо у тронний зал. Ідеш?"
+<div>РҐР»РѕРїРµС†СЊ Р·Р»СЏРєР°РЅРѕ Р·РґСЂРёРіР°С”С‚СЊСЃСЏ С– РІРёРґР°РІР»СЋС” С–Р· СЃРµР±Рµ: "РЇ... РќСѓ... Р”РѕР±СЂРµ. Р—РіРѕРґРµРЅ. РђР»Рµ РІСЃРµСЂРµРґРёРЅСѓ СЏ РЅРµ Р·Р°Р№РґСѓ. Р¦Рµ РґР»СЏ РјРµРЅРµ РЅР°РґС‚Рѕ СЂРёР·РёРєРѕРІР°РЅРѕ." РўРѕР±С– РЅРµ Р·Р°Р»РёС€Р°С”С‚СЊСЃСЏ РЅС–С‡РѕРіРѕ, РѕРєСЂС–Рј СЏРє РїРѕРіРѕРґРёС‚РёСЃСЊ.<br/>
+Р’Рё СЂСѓС€Р°С”С‚Рµ РІР·РґРѕРІР¶ СЃС‚С–РЅРєРё. Р—Р° РєС–Р»СЊРєР° РєСЂРѕРєС–РІ СЃРїРёРЅСЏС”С‚РµСЃСЏ Р±С–Р»СЏ СЃС‚С–РЅРєРё Р· С‚СЂРѕС…Рё РЅРµРїСЂР°РІРёР»СЊРЅРѕСЋ РєР»Р°РґРєРѕСЋ. РћС…РѕСЂРѕРЅРµС†СЊ СЃС‚СѓРєР°С” РїРѕ РѕРґРЅРѕРјСѓ С–Р· РєР°РјРµРЅС–РІ С– СЃС‚С–РЅРєР° Р·'С—Р¶РґР¶Р°С” РІР±С–Рє, РІС–РґРєСЂРёРІР°СЋС‡Рё СЃС…РѕРґРё РЅР°РіРѕСЂСѓ.<br/>
+"Р§РѕСЂРЅРёР№ С…С–Рґ, - РїРѕСЏСЃРЅСЋС” С…Р»РѕРїРµС†СЊ. - Р—СЃРµСЂРµРґРёРЅРё РЅРµ РІС–РґС‡РёРЅСЏС”С‚СЊСЃСЏ, СЏРєС€Рѕ С‰Рѕ. Р—Р°РІРѕРґРёС‚СЊ РїСЂСЏРјРѕ Сѓ С‚СЂРѕРЅРЅРёР№ Р·Р°Р». Р†РґРµС€?"
 </div>
 <div>
-<a href="111.html">Так! Це оптимальний варіант</a><br>
-<a href="97.html">Ні, дякую, пошукаю інший</a></br>
+<a href="111.html">РўР°Рє! Р¦Рµ РѕРїС‚РёРјР°Р»СЊРЅРёР№ РІР°СЂС–Р°РЅС‚</a><br>
+<a href="97.html">РќС–, РґСЏРєСѓСЋ, РїРѕС€СѓРєР°СЋ С–РЅС€РёР№</a></br>
 </div>
 </body>
