--- a/loc/97.html
+++ b/loc/97.html
@@ -1,9 +1,9 @@
 <body>
-<div>"Тоді звиняй, - каже охоронець. - Більше нічим допомогти не можу. У мене взагалі обхід. Ти мене не бачив. Ми не знайомі."<br/>
-Хлопець іде кудись в пітьму, а тобі залишається лише варіант іти у інший бік. Ти йдеш вліво майже до упору, аж поки не помічаєш двері з навішеним на них замком. "От тріпло," - промайнула думка. Ти смикаєш замок, але той, здається, дуже міцний. Навіть мечем погрюкати не вийде.
+<div>"РўРѕРґС– Р·РІРёРЅСЏР№, - РєР°Р¶Рµ РѕС…РѕСЂРѕРЅРµС†СЊ. - Р‘С–Р»СЊС€Рµ РЅС–С‡РёРј РґРѕРїРѕРјРѕРіС‚Рё РЅРµ РјРѕР¶Сѓ. РЈ РјРµРЅРµ РІР·Р°РіР°Р»С– РѕР±С…С–Рґ. РўРё РјРµРЅРµ РЅРµ Р±Р°С‡РёРІ. РњРё РЅРµ Р·РЅР°Р№РѕРјС–."<br/>
+РҐР»РѕРїРµС†СЊ С–РґРµ РєСѓРґРёСЃСЊ РІ РїС–С‚СЊРјСѓ, Р° С‚РѕР±С– Р·Р°Р»РёС€Р°С”С‚СЊСЃСЏ Р»РёС€Рµ РІР°СЂС–Р°РЅС‚ С–С‚Рё Сѓ С–РЅС€РёР№ Р±С–Рє. РўРё Р№РґРµС€ РІР»С–РІРѕ РјР°Р№Р¶Рµ РґРѕ СѓРїРѕСЂСѓ, Р°Р¶ РїРѕРєРё РЅРµ РїРѕРјС–С‡Р°С”С€ РґРІРµСЂС– Р· РЅР°РІС–С€РµРЅРёРј РЅР° РЅРёС… Р·Р°РјРєРѕРј. "РћС‚ С‚СЂС–РїР»Рѕ," - РїСЂРѕРјР°Р№РЅСѓР»Р° РґСѓРјРєР°. РўРё СЃРјРёРєР°С”С€ Р·Р°РјРѕРє, Р°Р»Рµ С‚РѕР№, Р·РґР°С”С‚СЊСЃСЏ, РґСѓР¶Рµ РјС–С†РЅРёР№. РќР°РІС–С‚СЊ РјРµС‡РµРј РїРѕРіСЂСЋРєР°С‚Рё РЅРµ РІРёР№РґРµ.
 </div>
 <div>
-<a href="85a.html">Спробувати помолитися</a><br>
-<a href="86.html">Підірвати замок і двері</a></br>
+<a href="85a.html">РЎРїСЂРѕР±СѓРІР°С‚Рё РїРѕРјРѕР»РёС‚РёСЃСЏ</a><br>
+<a href="86.html">РџС–РґС–СЂРІР°С‚Рё Р·Р°РјРѕРє С– РґРІРµСЂС–</a></br>
 </div>
 </body>
