--- a/loc/after.html
+++ b/loc/after.html
@@ -1,10 +1,10 @@
 <body>
-<h1>Післямова</h1>
+<h1>РџС–СЃР»СЏРјРѕРІР°</h1>
 <div>
-Насправді, ця гра навряд чи потребує післямови, але принаймні так воно все якось солідніше виглядає. Гаразд.<br/>
-Ідея написати IF (interactive fiction) прийшла до мене у відпустці за один день до від'їзду на Світязь. Ні, не те, щоб я за вечір все настрочив. Тоді я черканув буквально кілька сторінок - одну локацію описав. Решту написано за 6 днів відпочинку на озері у вільний від купання час у номері турбази на ноутбуці <b>brbrBru</b>, за що їй данке шон. Грати півгри вона вперто не хотіла, аргументуючи, що керівникам і дурним півроботи не показують (досі не знаю до якої з категорій вона себе віднесла), тому я був змушений дописати все максимально швидко.
+РќР°СЃРїСЂР°РІРґС–, С†СЏ РіСЂР° РЅР°РІСЂСЏРґ С‡Рё РїРѕС‚СЂРµР±СѓС” РїС–СЃР»СЏРјРѕРІРё, Р°Р»Рµ РїСЂРёРЅР°Р№РјРЅС– С‚Р°Рє РІРѕРЅРѕ РІСЃРµ СЏРєРѕСЃСЊ СЃРѕР»С–РґРЅС–С€Рµ РІРёРіР»СЏРґР°С”. Р“Р°СЂР°Р·Рґ.<br/>
+Р†РґРµСЏ РЅР°РїРёСЃР°С‚Рё IF (interactive fiction) РїСЂРёР№С€Р»Р° РґРѕ РјРµРЅРµ Сѓ РІС–РґРїСѓСЃС‚С†С– Р·Р° РѕРґРёРЅ РґРµРЅСЊ РґРѕ РІС–Рґ'С—Р·РґСѓ РЅР° РЎРІС–С‚СЏР·СЊ. РќС–, РЅРµ С‚Рµ, С‰РѕР± СЏ Р·Р° РІРµС‡С–СЂ РІСЃРµ РЅР°СЃС‚СЂРѕС‡РёРІ. РўРѕРґС– СЏ С‡РµСЂРєР°РЅСѓРІ Р±СѓРєРІР°Р»СЊРЅРѕ РєС–Р»СЊРєР° СЃС‚РѕСЂС–РЅРѕРє - РѕРґРЅСѓ Р»РѕРєР°С†С–СЋ РѕРїРёСЃР°РІ. Р РµС€С‚Сѓ РЅР°РїРёСЃР°РЅРѕ Р·Р° 6 РґРЅС–РІ РІС–РґРїРѕС‡РёРЅРєСѓ РЅР° РѕР·РµСЂС– Сѓ РІС–Р»СЊРЅРёР№ РІС–Рґ РєСѓРїР°РЅРЅСЏ С‡Р°СЃ Сѓ РЅРѕРјРµСЂС– С‚СѓСЂР±Р°Р·Рё РЅР° РЅРѕСѓС‚Р±СѓС†С– <b>brbrBru</b>, Р·Р° С‰Рѕ С—Р№ РґР°РЅРєРµ С€РѕРЅ. Р“СЂР°С‚Рё РїС–РІРіСЂРё РІРѕРЅР° РІРїРµСЂС‚Рѕ РЅРµ С…РѕС‚С–Р»Р°, Р°СЂРіСѓРјРµРЅС‚СѓСЋС‡Рё, С‰Рѕ РєРµСЂС–РІРЅРёРєР°Рј С– РґСѓСЂРЅРёРј РїС–РІСЂРѕР±РѕС‚Рё РЅРµ РїРѕРєР°Р·СѓСЋС‚СЊ (РґРѕСЃС– РЅРµ Р·РЅР°СЋ РґРѕ СЏРєРѕС— Р· РєР°С‚РµРіРѕСЂС–Р№ РІРѕРЅР° СЃРµР±Рµ РІС–РґРЅРµСЃР»Р°), С‚РѕРјСѓ СЏ Р±СѓРІ Р·РјСѓС€РµРЅРёР№ РґРѕРїРёСЃР°С‚Рё РІСЃРµ РјР°РєСЃРёРјР°Р»СЊРЅРѕ С€РІРёРґРєРѕ.
 </div>
 <div>
-<a href="0.html">ОК</a><br>
+<a href="0.html">РћРљ</a><br>
 </div>
 </body>
