--- a/loc/auto.html
+++ b/loc/auto.html
@@ -1,12 +1,12 @@
 <body>
 <div align="center">
-<h3>Автори</h3>
+<h3>РђРІС‚РѕСЂРё</h3>
 <img src="../img/Penguins.jpg"><br/>
-Творчий задум, всі тексти та основний код: Robert Menus<br/>
-CSS та вичитка тексту: brbrBru<br/>
-Музика на фоні: Bondage Fairies - "BatWings" [2017]<br/>
+РўРІРѕСЂС‡РёР№ Р·Р°РґСѓРј, РІСЃС– С‚РµРєСЃС‚Рё С‚Р° РѕСЃРЅРѕРІРЅРёР№ РєРѕРґ: Robert Menus<br/>
+CSS С‚Р° РІРёС‡РёС‚РєР° С‚РµРєСЃС‚Сѓ: brbrBru<br/>
+РњСѓР·РёРєР° РЅР° С„РѕРЅС–: Bondage Fairies - "BatWings" [2017]<br/>
 <br/>
-<a href="00.html"><<Почати гру>></a><br>
-<a href="0.html"><<Назад>></a><br>
+<a href="00.html"><<РџРѕС‡Р°С‚Рё РіСЂСѓ>></a><br>
+<a href="0.html"><<РќР°Р·Р°Рґ>></a><br>
 </div>
 </body>
