--- a/loc/end.html
+++ b/loc/end.html
@@ -1,11 +1,11 @@
 <body>
-<div><h1>ПЕРЕМОГА!</h1>
-Такий хід подій було до біса важко вгадати та прорахувати, але мої вітання - тобі вдалось. Добро знову перемогло - бо хай хоча б у грі так буде.<br/>
+<div><h1>РџР•Р Р•РњРћР“Рђ!</h1>
+РўР°РєРёР№ С…С–Рґ РїРѕРґС–Р№ Р±СѓР»Рѕ РґРѕ Р±С–СЃР° РІР°Р¶РєРѕ РІРіР°РґР°С‚Рё С‚Р° РїСЂРѕСЂР°С…СѓРІР°С‚Рё, Р°Р»Рµ РјРѕС— РІС–С‚Р°РЅРЅСЏ - С‚РѕР±С– РІРґР°Р»РѕСЃСЊ. Р”РѕР±СЂРѕ Р·РЅРѕРІСѓ РїРµСЂРµРјРѕРіР»Рѕ - Р±Рѕ С…Р°Р№ С…РѕС‡Р° Р± Сѓ РіСЂС– С‚Р°Рє Р±СѓРґРµ.<br/>
 <br/>
 </div>
 <div>
-<a href="0.html">Воістину! У головне меню</a><br>
-<a href="after.html">А тепер хочу післямову</a><br>
+<a href="0.html">Р’РѕС–СЃС‚РёРЅСѓ! РЈ РіРѕР»РѕРІРЅРµ РјРµРЅСЋ</a><br>
+<a href="after.html">Рђ С‚РµРїРµСЂ С…РѕС‡Сѓ РїС–СЃР»СЏРјРѕРІСѓ</a><br>
 
 </div>
 </body>
