--- a/loc/0.html
+++ b/loc/0.html
@@ -1,9 +1,9 @@
 <body>
 <div align="center">
-<h1>П.И.Х.М.А.Н.</h1>
+<h1>Рџ.Р.РҐ.Рњ.Рђ.Рќ.</h1>
 <img src="../img/Koala.jpg">
 <br>
-<a href="00.html"><<Почати гру>></a><br>
-<a href="auto.html"><<Почитати про автора>></a><br>
+<a href="00.html"><<РџРѕС‡Р°С‚Рё РіСЂСѓ>></a><br>
+<a href="auto.html"><<РџРѕС‡РёС‚Р°С‚Рё РїСЂРѕ Р°РІС‚РѕСЂР°>></a><br>
 </div>
 </body>
