--- a/loc/01.html
+++ b/loc/01.html
@@ -1,10 +1,10 @@
 <body>
 <div>
-Перед тобою височезна стіна. Кінця-краю їй не видно. Але якась цивілізація тут точно є, про що свідчать написи на стінах. З одного з них дізнаємось про любовні походеньки, мабуть, місцевої княжної, з іншого про чийсь чекінг на цьому місці, на третьому просто чиєсь ім'я.<br>
-Згори чується шурхіт. Які твої дії?
+РџРµСЂРµРґ С‚РѕР±РѕСЋ РІРёСЃРѕС‡РµР·РЅР° СЃС‚С–РЅР°. РљС–РЅС†СЏ-РєСЂР°СЋ С—Р№ РЅРµ РІРёРґРЅРѕ. РђР»Рµ СЏРєР°СЃСЊ С†РёРІС–Р»С–Р·Р°С†С–СЏ С‚СѓС‚ С‚РѕС‡РЅРѕ С”, РїСЂРѕ С‰Рѕ СЃРІС–РґС‡Р°С‚СЊ РЅР°РїРёСЃРё РЅР° СЃС‚С–РЅР°С…. Р— РѕРґРЅРѕРіРѕ Р· РЅРёС… РґС–Р·РЅР°С”РјРѕСЃСЊ РїСЂРѕ Р»СЋР±РѕРІРЅС– РїРѕС…РѕРґРµРЅСЊРєРё, РјР°Р±СѓС‚СЊ, РјС–СЃС†РµРІРѕС— РєРЅСЏР¶РЅРѕС—, Р· С–РЅС€РѕРіРѕ РїСЂРѕ С‡РёР№СЃСЊ С‡РµРєС–РЅРі РЅР° С†СЊРѕРјСѓ РјС–СЃС†С–, РЅР° С‚СЂРµС‚СЊРѕРјСѓ РїСЂРѕСЃС‚Рѕ С‡РёС”СЃСЊ С–Рј'СЏ.<br>
+Р—РіРѕСЂРё С‡СѓС”С‚СЊСЃСЏ С€СѓСЂС…С–С‚. РЇРєС– С‚РІРѕС— РґС–С—?
 </div>
 <div>
-<a href="11.html">Тікаймо городами!</a><br/>
-<a href="12.html">Почекаю та подивлюся, що там</a>
+<a href="11.html">РўС–РєР°Р№РјРѕ РіРѕСЂРѕРґР°РјРё!</a><br/>
+<a href="12.html">РџРѕС‡РµРєР°СЋ С‚Р° РїРѕРґРёРІР»СЋСЃСЏ, С‰Рѕ С‚Р°Рј</a>
 </div>
 </body>
