--- a/loc/13cb.html
+++ b/loc/13cb.html
@@ -1,14 +1,14 @@
 <body>
-<div>Окей, навколо кам'яні стіни, височезні колони, чиї вершечки ховаються у пітьмі, позаду тебе знаходиться трон, перед яким стоїш ти, попереду Евглена і правитель цього краю застигли у напруженій позі, над ними кам'яна арка з кількома фразами на невідомій мові.
-Які дії?
+<div>РћРєРµР№, РЅР°РІРєРѕР»Рѕ РєР°Рј'СЏРЅС– СЃС‚С–РЅРё, РІРёСЃРѕС‡РµР·РЅС– РєРѕР»РѕРЅРё, С‡РёС— РІРµСЂС€РµС‡РєРё С…РѕРІР°СЋС‚СЊСЃСЏ Сѓ РїС–С‚СЊРјС–, РїРѕР·Р°РґСѓ С‚РµР±Рµ Р·РЅР°С…РѕРґРёС‚СЊСЃСЏ С‚СЂРѕРЅ, РїРµСЂРµРґ СЏРєРёРј СЃС‚РѕС—С€ С‚Рё, РїРѕРїРµСЂРµРґСѓ Р•РІРіР»РµРЅР° С– РїСЂР°РІРёС‚РµР»СЊ С†СЊРѕРіРѕ РєСЂР°СЋ Р·Р°СЃС‚РёРіР»Рё Сѓ РЅР°РїСЂСѓР¶РµРЅС–Р№ РїРѕР·С–, РЅР°Рґ РЅРёРјРё РєР°Рј'СЏРЅР° Р°СЂРєР° Р· РєС–Р»СЊРєРѕРјР° С„СЂР°Р·Р°РјРё РЅР° РЅРµРІС–РґРѕРјС–Р№ РјРѕРІС–.
+РЇРєС– РґС–С—?
 </div>
 <div>
-<a href="13a.html">Наводжу на правителя і тисну синю</a><br>
-<a href="13a.html">Наводжу на правителя і тисну червону</a><br>
-<a href="13a.html">Наводжу на Евглену і тисну синю</a><br>
-<a href="13a.html">Наводжу на Евглену і тисну червону</a><br>
-<a href="13d.html">Наводжу на правителя і кажу "вогонь"</a><br>
-<a href="13e.html">Наводжу на Евглену і кажу "вогонь"</a><br>
-<a href="13f.html">Наводжу на арку і кажу "вогонь"</a><br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° РїСЂР°РІРёС‚РµР»СЏ С– С‚РёСЃРЅСѓ СЃРёРЅСЋ</a><br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° РїСЂР°РІРёС‚РµР»СЏ С– С‚РёСЃРЅСѓ С‡РµСЂРІРѕРЅСѓ</a><br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° Р•РІРіР»РµРЅСѓ С– С‚РёСЃРЅСѓ СЃРёРЅСЋ</a><br>
+<a href="13a.html">РќР°РІРѕРґР¶Сѓ РЅР° Р•РІРіР»РµРЅСѓ С– С‚РёСЃРЅСѓ С‡РµСЂРІРѕРЅСѓ</a><br>
+<a href="13d.html">РќР°РІРѕРґР¶Сѓ РЅР° РїСЂР°РІРёС‚РµР»СЏ С– РєР°Р¶Сѓ "РІРѕРіРѕРЅСЊ"</a><br>
+<a href="13e.html">РќР°РІРѕРґР¶Сѓ РЅР° Р•РІРіР»РµРЅСѓ С– РєР°Р¶Сѓ "РІРѕРіРѕРЅСЊ"</a><br>
+<a href="13f.html">РќР°РІРѕРґР¶Сѓ РЅР° Р°СЂРєСѓ С– РєР°Р¶Сѓ "РІРѕРіРѕРЅСЊ"</a><br>
 </div>
 </body>
