--- a/loc/13ed.html
+++ b/loc/13ed.html
@@ -1,8 +1,8 @@
 <body>
-<div>Правитель скрикує і наступної миті фаєрбол із посоху розносить його на малесенькі шматочки, фарбуючи колони та стіни у багряний колір - все в найкращих традиціях слешерів.<br/>
-У залі счтає до біса порожньо.<br/>
+<div>РџСЂР°РІРёС‚РµР»СЊ СЃРєСЂРёРєСѓС” С– РЅР°СЃС‚СѓРїРЅРѕС— РјРёС‚С– С„Р°С”СЂР±РѕР» С–Р· РїРѕСЃРѕС…Сѓ СЂРѕР·РЅРѕСЃРёС‚СЊ Р№РѕРіРѕ РЅР° РјР°Р»РµСЃРµРЅСЊРєС– С€РјР°С‚РѕС‡РєРё, С„Р°СЂР±СѓСЋС‡Рё РєРѕР»РѕРЅРё С‚Р° СЃС‚С–РЅРё Сѓ Р±Р°РіСЂСЏРЅРёР№ РєРѕР»С–СЂ - РІСЃРµ РІ РЅР°Р№РєСЂР°С‰РёС… С‚СЂР°РґРёС†С–СЏС… СЃР»РµС€РµСЂС–РІ.<br/>
+РЈ Р·Р°Р»С– СЃС‡С‚Р°С” РґРѕ Р±С–СЃР° РїРѕСЂРѕР¶РЅСЊРѕ.<br/>
 </div>
 <div>
-<a href="13g.html">А що далі?</a><br>
+<a href="13g.html">Рђ С‰Рѕ РґР°Р»С–?</a><br>
 </div>
 </body>
