--- a/loc/52.html
+++ b/loc/52.html
@@ -1,9 +1,9 @@
 <body>
-<div>Ти або вже не вперше граєш, або розумієш логіку гри. В будь-якому разі ти маєш рацію. Не минулось. Чиїсь руки охоплюють ззаду, закривають рота і шепочуть у вухо: "Хто ти, в біса,  і що тут робиш?"
-<br/>А ти тому голосу і кажеш:</div>
+<div>РўРё Р°Р±Рѕ РІР¶Рµ РЅРµ РІРїРµСЂС€Рµ РіСЂР°С”С€, Р°Р±Рѕ СЂРѕР·СѓРјС–С”С€ Р»РѕРіС–РєСѓ РіСЂРё. Р’ Р±СѓРґСЊ-СЏРєРѕРјСѓ СЂР°Р·С– С‚Рё РјР°С”С€ СЂР°С†С–СЋ. РќРµ РјРёРЅСѓР»РѕСЃСЊ. Р§РёС—СЃСЊ СЂСѓРєРё РѕС…РѕРїР»СЋСЋС‚СЊ Р·Р·Р°РґСѓ, Р·Р°РєСЂРёРІР°СЋС‚СЊ СЂРѕС‚Р° С– С€РµРїРѕС‡СѓС‚СЊ Сѓ РІСѓС…Рѕ: "РҐС‚Рѕ С‚Рё, РІ Р±С–СЃР°,  С– С‰Рѕ С‚СѓС‚ СЂРѕР±РёС€?"
+<br/>Рђ С‚Рё С‚РѕРјСѓ РіРѕР»РѕСЃСѓ С– РєР°Р¶РµС€:</div>
 <div>
-<a href="53.html">Мамомий момем міма</a><br>
-<a href="53.html">мумумумуму</a></br>
-<a href="53.html">муми мамуй</a></br>
+<a href="53.html">РњР°РјРѕРјРёР№ РјРѕРјРµРј РјС–РјР°</a><br>
+<a href="53.html">РјСѓРјСѓРјСѓРјСѓРјСѓ</a></br>
+<a href="53.html">РјСѓРјРё РјР°РјСѓР№</a></br>
 </div>
 </body>
