--- a/loc/64.html
+++ b/loc/64.html
@@ -1,9 +1,9 @@
 <body>
-<div>"Мудрий вибір, - усміхається Евглена. - План простий, як і наше буття. Спершу потрібно потрапити в замок, потім вбити правителя, потім викрасти його доньку, а потім спалити замок до біса."</br>
-"Чекай, - кажеш ти. - А чому відразу не спалити замок? Навіщо все так ускладнювати?"<br/>
-"Його донька - гаряча штучка, - загадково усміхається пані Зелена. - Забудь. Просто такий план. Хто ти такий, щоб оскаржувати мій план? Спершу стань лідером опору, а потім будеш вигадувати свої плани і обпльовувати всі інші. Гаразд. Уявімо, що цієї маленької сварки не було. Виходимо у бій сьогодні опівночі. Зараз десята ранку... Не витріщайся на годинник! Я командир, а значить мені видніше, котра година! У нас є чотирнадцять годин на перепочинок, а потім з новими силами підемо далі... Відбій, командо!"
+<div>"РњСѓРґСЂРёР№ РІРёР±С–СЂ, - СѓСЃРјС–С…Р°С”С‚СЊСЃСЏ Р•РІРіР»РµРЅР°. - РџР»Р°РЅ РїСЂРѕСЃС‚РёР№, СЏРє С– РЅР°С€Рµ Р±СѓС‚С‚СЏ. РЎРїРµСЂС€Сѓ РїРѕС‚СЂС–Р±РЅРѕ РїРѕС‚СЂР°РїРёС‚Рё РІ Р·Р°РјРѕРє, РїРѕС‚С–Рј РІР±РёС‚Рё РїСЂР°РІРёС‚РµР»СЏ, РїРѕС‚С–Рј РІРёРєСЂР°СЃС‚Рё Р№РѕРіРѕ РґРѕРЅСЊРєСѓ, Р° РїРѕС‚С–Рј СЃРїР°Р»РёС‚Рё Р·Р°РјРѕРє РґРѕ Р±С–СЃР°."</br>
+"Р§РµРєР°Р№, - РєР°Р¶РµС€ С‚Рё. - Рђ С‡РѕРјСѓ РІС–РґСЂР°Р·Сѓ РЅРµ СЃРїР°Р»РёС‚Рё Р·Р°РјРѕРє? РќР°РІС–С‰Рѕ РІСЃРµ С‚Р°Рє СѓСЃРєР»Р°РґРЅСЋРІР°С‚Рё?"<br/>
+"Р™РѕРіРѕ РґРѕРЅСЊРєР° - РіР°СЂСЏС‡Р° С€С‚СѓС‡РєР°, - Р·Р°РіР°РґРєРѕРІРѕ СѓСЃРјС–С…Р°С”С‚СЊСЃСЏ РїР°РЅС– Р—РµР»РµРЅР°. - Р—Р°Р±СѓРґСЊ. РџСЂРѕСЃС‚Рѕ С‚Р°РєРёР№ РїР»Р°РЅ. РҐС‚Рѕ С‚Рё С‚Р°РєРёР№, С‰РѕР± РѕСЃРєР°СЂР¶СѓРІР°С‚Рё РјС–Р№ РїР»Р°РЅ? РЎРїРµСЂС€Сѓ СЃС‚Р°РЅСЊ Р»С–РґРµСЂРѕРј РѕРїРѕСЂСѓ, Р° РїРѕС‚С–Рј Р±СѓРґРµС€ РІРёРіР°РґСѓРІР°С‚Рё СЃРІРѕС— РїР»Р°РЅРё С– РѕР±РїР»СЊРѕРІСѓРІР°С‚Рё РІСЃС– С–РЅС€С–. Р“Р°СЂР°Р·Рґ. РЈСЏРІС–РјРѕ, С‰Рѕ С†С–С”С— РјР°Р»РµРЅСЊРєРѕС— СЃРІР°СЂРєРё РЅРµ Р±СѓР»Рѕ. Р’РёС…РѕРґРёРјРѕ Сѓ Р±С–Р№ СЃСЊРѕРіРѕРґРЅС– РѕРїС–РІРЅРѕС‡С–. Р—Р°СЂР°Р· РґРµСЃСЏС‚Р° СЂР°РЅРєСѓ... РќРµ РІРёС‚СЂС–С‰Р°Р№СЃСЏ РЅР° РіРѕРґРёРЅРЅРёРє! РЇ РєРѕРјР°РЅРґРёСЂ, Р° Р·РЅР°С‡РёС‚СЊ РјРµРЅС– РІРёРґРЅС–С€Рµ, РєРѕС‚СЂР° РіРѕРґРёРЅР°! РЈ РЅР°СЃ С” С‡РѕС‚РёСЂРЅР°РґС†СЏС‚СЊ РіРѕРґРёРЅ РЅР° РїРµСЂРµРїРѕС‡РёРЅРѕРє, Р° РїРѕС‚С–Рј Р· РЅРѕРІРёРјРё СЃРёР»Р°РјРё РїС–РґРµРјРѕ РґР°Р»С–... Р’С–РґР±С–Р№, РєРѕРјР°РЅРґРѕ!"
 </div>
 <div>
-<a href="71.html">Відбій</a><br>
+<a href="71.html">Р’С–РґР±С–Р№</a><br>
 </div>
 </body>
