--- a/loc/85a.html
+++ b/loc/85a.html
@@ -1,7 +1,7 @@
 <body>
-<div>Ти починаєш бубоніти собі під ніс молитву, плутаючи три релігії, дві конфесії, кілька різних святинь, вплутуючи фразеологізми, неологізми, архаїзми, плутаючи грішне з праведним та небо із землею. Тим не менше, це дає ефект і замок таємничим чином відчиняється і падає на землю.
+<div>РўРё РїРѕС‡РёРЅР°С”С€ Р±СѓР±РѕРЅС–С‚Рё СЃРѕР±С– РїС–Рґ РЅС–СЃ РјРѕР»РёС‚РІСѓ, РїР»СѓС‚Р°СЋС‡Рё С‚СЂРё СЂРµР»С–РіС–С—, РґРІС– РєРѕРЅС„РµСЃС–С—, РєС–Р»СЊРєР° СЂС–Р·РЅРёС… СЃРІСЏС‚РёРЅСЊ, РІРїР»СѓС‚СѓСЋС‡Рё С„СЂР°Р·РµРѕР»РѕРіС–Р·РјРё, РЅРµРѕР»РѕРіС–Р·РјРё, Р°СЂС…Р°С—Р·РјРё, РїР»СѓС‚Р°СЋС‡Рё РіСЂС–С€РЅРµ Р· РїСЂР°РІРµРґРЅРёРј С‚Р° РЅРµР±Рѕ С–Р· Р·РµРјР»РµСЋ. РўРёРј РЅРµ РјРµРЅС€Рµ, С†Рµ РґР°С” РµС„РµРєС‚ С– Р·Р°РјРѕРє С‚Р°С”РјРЅРёС‡РёРј С‡РёРЅРѕРј РІС–РґС‡РёРЅСЏС”С‚СЊСЃСЏ С– РїР°РґР°С” РЅР° Р·РµРјР»СЋ.
 </div>
 <div>
-<a href="101.html">Зайти всередину</a><br>
+<a href="101.html">Р—Р°Р№С‚Рё РІСЃРµСЂРµРґРёРЅСѓ</a><br>
 </div>
 </body>
