--- a/loc/93.html
+++ b/loc/93.html
@@ -1,11 +1,11 @@
 <body>
-<div>Ти хапаєш постать за шию та приставляєш клинка йому до кофтини. Він повискує та починає ревіти, проклинаючи світ та усе суще. "Треба щось запитати у нього, поки він геть не розкис, - пролітає в голові розумна думка." От тільки що?
+<div>РўРё С…Р°РїР°С”С€ РїРѕСЃС‚Р°С‚СЊ Р·Р° С€РёСЋ С‚Р° РїСЂРёСЃС‚Р°РІР»СЏС”С€ РєР»РёРЅРєР° Р№РѕРјСѓ РґРѕ РєРѕС„С‚РёРЅРё. Р’С–РЅ РїРѕРІРёСЃРєСѓС” С‚Р° РїРѕС‡РёРЅР°С” СЂРµРІС–С‚Рё, РїСЂРѕРєР»РёРЅР°СЋС‡Рё СЃРІС–С‚ С‚Р° СѓСЃРµ СЃСѓС‰Рµ. "РўСЂРµР±Р° С‰РѕСЃСЊ Р·Р°РїРёС‚Р°С‚Рё Сѓ РЅСЊРѕРіРѕ, РїРѕРєРё РІС–РЅ РіРµС‚СЊ РЅРµ СЂРѕР·РєРёСЃ, - РїСЂРѕР»С–С‚Р°С” РІ РіРѕР»РѕРІС– СЂРѕР·СѓРјРЅР° РґСѓРјРєР°." РћС‚ С‚С–Р»СЊРєРё С‰Рѕ?
 </div>
 <div>
-<a href="94.html">А ви не підкажете, як пройти в бібліотеку?</a><br>
-<a href="94.html">Вогнику не буде?</a></br>
-<a href="95.html">Ти чий будеш?</a></br>
-<a href="96.html">Ти ж хочеш провести мене до замку?</a></br>
-<a href="92.html">Нічого не питати, а просто буцнути ногою</a></br>
+<a href="94.html">Рђ РІРё РЅРµ РїС–РґРєР°Р¶РµС‚Рµ, СЏРє РїСЂРѕР№С‚Рё РІ Р±С–Р±Р»С–РѕС‚РµРєСѓ?</a><br>
+<a href="94.html">Р’РѕРіРЅРёРєСѓ РЅРµ Р±СѓРґРµ?</a></br>
+<a href="95.html">РўРё С‡РёР№ Р±СѓРґРµС€?</a></br>
+<a href="96.html">РўРё Р¶ С…РѕС‡РµС€ РїСЂРѕРІРµСЃС‚Рё РјРµРЅРµ РґРѕ Р·Р°РјРєСѓ?</a></br>
+<a href="92.html">РќС–С‡РѕРіРѕ РЅРµ РїРёС‚Р°С‚Рё, Р° РїСЂРѕСЃС‚Рѕ Р±СѓС†РЅСѓС‚Рё РЅРѕРіРѕСЋ</a></br>
 </div>
 </body>
